--- a/gnews/10.md
+++ b/gnews/10.md
@@ -1,33 +1,19 @@
 ---
-title: 美国正在酝酿多部虚拟货币法案
+title: 罗马尼亚Steaua Bucarest队老板不愿让接种过疫苗的球员在其球队踢球
 ---
-`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/2057609/)
+`xiaobaige` [轉載自GNews](https://gnews.org/zh-hans/2057695/)
 
-翻译/编辑：小红帽
+#### 翻译                     意大利达芬奇农场                      小白鸽
+![](https://assets.gnews.org/wp-content/uploads/2022/02/Schermata-2022-02-24-alle-09.42.12-1.png)图片来源：eventiavversinews.it
+布加勒斯特星队(Steaua Bucharest) 老板吉继•贝卡利(Gigi Becali)面对争议宣布，俱乐部将禁止所有接种过新冠疫苗的球员参加比赛。 这位备受争议的罗马尼亚商人和政治家做出了令人大跌眼镜的选择。他对自己的做法辩解道, 接种疫苗者“丧失力气”，打了疫苗的人会死在医院，而没打疫苗的人不会这样。
 
-- ![](https://assets.gnews.org/wp-content/uploads/2022/02/7-34.png)图片来源：www.euroweeklynews.com
+贝卡利在接受本国记者埃马努埃尔•罗素( Emanuel Rosu) 的采访时为自己的立场辩护: “你没看见在克卢日的比赛吗？在与快速球队比赛时，球员像是晕了过去。他们睡在地上。所有接种疫苗的人都没有力气。不是所有人都会受到影响， 但对那些年龄大一些的影响会更大。”
 
+这些声明引发了该国政府的强烈反应。国家疫苗接种信息平台的官方脸书页面对此强硬回答：“接种过疫苗的球员不会丧失力气。接种新冠疫苗不会影响足球运动员的表现。相反，有足够多的研究证明，新冠感染会留下长期后遗症， 这些会影响运动员的表现。”
 
-根据JDSUPRA 2月23日报道，美国众议员沃伦·戴维森（Warren Davidson）（R-OH）于2月15日宣布，他将推出《保留你的硬币法案》。该法案旨在“禁止联邦机构限制个人使用可兑换的虚拟货币来购买自己使用的商品或服务，以及用于其他目的。” 同一天，国会议员乔什·戈特海默（Josh Gottheimer）（D-NJ）也宣布了《稳定币创新和保护法案》的讨论稿草案。该法案旨在定义“合格的稳定币”，以区别于“更易波动的加密货币”。
+原文链接：[https://www.eventiavversinews.it/putiferio-in-romania-il-patron-della-steaua-bucarest-non-vuole-piu-far-giocare-i-calciatori-vaccinati-perdono-forze/](https://www.eventiavversinews.it/putiferio-in-romania-il-patron-della-steaua-bucarest-non-vuole-piu-far-giocare-i-calciatori-vaccinati-perdono-forze/)
 
-戴维森是众议院金融服务委员会和国会区块链核心小组的成员，在这个领域一直很活跃，之前曾推出了《2021年通证分类法》 (HR 1628)，并共同发起了《小企业区块链解决方案法》（H.R. 6597）。**该法案将阻止联邦监管机构的任何负责人“禁止或以其他方式限制受管辖的用户为自己的目的使用虚拟货币或其等价物的能力，例如购买实物或虚拟货币，供用户自用的商品和服务；或通过自托管钱包进行交易”。** 该立法将“可兑换的虚拟货币”定义为“具有与货币等价值的交易媒介”。戴维森表示，该法案“采用了已经存在了一段时间的‘金融犯罪执法网络’语言，为‘了解你的客户’（KYC）提供了一个保护自我监管的框架”。
-
-同时，戈特海默（Gottheimer）的立法将把某些数字货币定义为“合格的稳定币”，如果它们“**可按需以一比一兑换美元的加密货币**，并由两个合格的发行者之一发行，即银行等受保存款机构或非银行合格稳定币发行者”。
-
-合格的“稳定币”被定义为非证券或衍生品，可以由联邦支持的银行或非银行机构发行，后者同意保持至少100%的储备资产，包括美元、美债或货币监理署（OCC）认为适当的现金抵押品的其他资产。现金抵押品被存放在联邦存款保险公司（FDIC）的独立账户中。
-
-该立法规定货币监理署对这两种类型的稳定币发行人具有主要监督权。**为了帮助进一步保护消费者，联邦存款保险公司将被要求开发一个合格的稳定币保险基金，以管理非银行发行者的赎回付款保险。**
-
-新闻链接：[Multiple Pieces of Legislation Swirling Around Virtual Currencies](https://www.jdsupra.com/legalnews/multiple-pieces-of-legislation-swirling-7077736/)
-
-发布：tianzhihuan
-
-更多资讯，请关注：
-[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
-[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
-[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/dKQ6vFY9Fu)
-[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
+编辑、上传：  Xiao  baige
 
  
 
