--- a/gnews/15.md
+++ b/gnews/15.md
@@ -1,27 +1,35 @@
 ---
-title: 中日财经爆&#124;中共国允许俄罗斯全境小麦进口 但俄运输港口关闭
+title: 蔡英文總統指示加強台灣海峽周邊軍事動向監視與防禦
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2057576/)
+`西班牙巴塞罗那喜悦农场` [轉載自GNews](https://gnews.org/zh-hans/2057667/)
 
-撰稿：东京樱花团/peterwong
-![](https://assets.gnews.org/wp-content/uploads/2022/02/图片3-9.jpg)[图片来源](https://www.ft.com/content/7cbc024c-2998-11e2-a5ca-00144feabdc0)
-中共海关总署2月24日发布公告称，根据中国相关法律法规和中国海关总署与俄罗斯农业部关于《俄罗斯输华小麦植物检疫要求议定书》补充条款的规定，允许俄罗斯全境小麦进口。
+翻譯:宮米葉
 
-海关总署网站周四刊登这一公告。中国和俄罗斯两国元首本月初在北京会晤并签署一系列合作文件，其中包括名为《中华人民共和国海关总署与俄罗斯联邦农业部关于俄罗斯输华小麦植物检疫要求议定书补充条款》。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/image-2248-edited-2.png)nhk.or.jp
 
-俄罗斯军队周四向乌克兰的几个城市发动了袭击。俄罗斯是全球最大的小麦出口国，其谷物主要从黑海的港口运输。俄罗斯已暂停亚速海上所有的商船往来，直到另行通知为止。
+鑒於圍繞烏克蘭局勢的緊張程度急速加劇，台灣總統蔡英文23日表示，考慮到中共國的威脅，指示軍方等加強對台灣海峽周邊軍事動向的監視和防禦。
+據台灣總統府報道，蔡總統23日收到了上月成立的研究烏克蘭局勢特別工作組的報告。
 
-亚速海是一个陆间海：西面有克里米亚半岛，北面为乌克兰，东面为俄罗斯。只有刻赤海峡与黑海相连。亚速海是大西洋水系之中最深入内陆的陆间海，以船只从直布罗陀海峡进入起计，需要经过地中海、马摩拉海和黑海三个陆间海才可进入亚速海。
+在這其中，蔡英文譴責“俄羅斯侵犯烏克蘭的主權”，同時說：“台灣作為國際社會的一員，會敦促所有各方繼續通過和平與理性的手段解決爭端。”
 
-消息来源:
+同時指示軍方加強高對台灣海峽周邊軍事動向的監視和防禦水平，並繼續加強對任何事態立即作出反應的防備工作。
 
-[中国海关总署：允许俄罗斯全境小麦进口](https://cn.reuters.com/article/china-russian-wheat-imports-0224-thur-idCNKBS2KT0P5?il=0)
+此外，蔡英文還說“台灣和烏克蘭在地緣戰略、地理環境和國際供應鏈的重要性方面有著根本的不同”，同時要求各機構加強對外國勢力企圖利用烏克蘭緊張局勢在台灣引發恐慌和不穩定的虛假信息努力保持高度警惕。
 
-[俄罗斯暂停亚速海上的商船往来–消息](https://cn.reuters.com/article/russia-suspends-azov-vessels-0224-thur-idCNKBS2KT0RG?il=0)
+蔡英文23日的講話雖然並未點名中共國，但她上月表示，“台灣長期面臨中共國的軍事威脅，我們對於烏克蘭的處境感同身受”，她對中國趁著烏克蘭局勢即將採取的行動表現出強烈的警戒感。
 
-*校对：东京樱花团/喜马拉雅的微尘*
-*发布：东京樱花团/tdownc2p*
-![](https://assets.gnews.org/wp-content/uploads/2022/02/yht-9.jpg)
+中共國新聞發言人批評“台灣是在利用烏克蘭局勢”
+
+針對烏克蘭形勢下臺灣對中共國的警戒不斷增強，中共國政府負責對台政策的國務院台灣事務辦公室新聞發言人馬曉光在23日的新聞發布會上表示：“民進黨當局配合美西方輿論，借烏克蘭問題惡意炒作所謂大陸‘軍事威脅’。當前臺灣海峽緊張局勢的根本原因是民進黨當局和“台獨”勢力勾連外部勢力不斷進行謀‘獨’挑釁。“批評蔡英文政權。
+
+來源：【nhk.or.jp】[蔡英文総統 台湾海峡周辺の軍事動向 監視と警戒強化など指示](https://www3.nhk.or.jp/news/html/20220223/k10013497811000.html?utm_int=word_contents_list-items_001&amp;word_result=%E4%B8%AD%E5%9B%BD%E3%83%BB%E5%8F%B0%E6%B9%BE)
+
+* * *
+
+審核: 宮米葉
+校對: 天天
+發布：花羽
+![](https://assets.gnews.org/wp-content/uploads/2022/02/西喜-8.jpeg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
