--- a/gnews/2.md
+++ b/gnews/2.md
@@ -1,41 +1,113 @@
 ---
-title: DC大中华时事：外籍人士观察宁波共同富裕实践
+title: 新加坡、以色列、香港的疫情是疫苗后遗症，一定要忍到五月份
 ---
-`喜马拉雅-华盛顿DC农场` [轉載自GNews](https://gnews.org/zh-hans/2057709/)
+`洛杉矶盘古农场 HIMALAYA LA PANGU` [轉載自GNews](https://gnews.org/zh-hans/2057830/)
 
-*编辑：西北风 / 作图：*虎子哥
+[https://gtv.org/video/id=6215fc0e1408ee3a03a3b644](https://gtv.org/video/id=6215fc0e1408ee3a03a3b644)
 
-![](http://himalayawashingtondc.org/wp-content/uploads/2021/08/ScreenShot-2021-08-01-at-17.25.09@2x.png)
+**郭文贵
+Miles Guo**
 
-#   墙国妄语每日驳
+新加坡、以色列、香港是打疫苗导致的免疫功能低下, 各种病症齐发
+Singapore, Israel, and Hong Kong are immunocompromised caused by vaccines, and various complication have developed together
 
-### **0**2.22.2022
+现在只要一发烧，就刚才老马说的, 进去是阴，进去还是阴
+Now as long as you have a fever, as the Lao Ma just said, go in is negative, go in is still negative
 
-[突发！普京宣布在顿巴斯地区开展特别军事行动\_参考消息网 (cankaoxiaoxi.com)](http://m.cankaoxiaoxi.com/world/20220224/2470315.shtml)
+但是他已经都手术了，腿差点被干掉，这是我全程跟着他
+But he has already had surgery and he was almost lost his leg, I was following him all the way
 
-***简评：***我们也只有通过爆料革命才能真正对这个世界如同打开了一个缝隙看到一点真相，对我们普通人来说已难能可贵了，起码我们不是稀里糊涂的活着。我们老讲全球化，殊不知这背后掩盖的就是新世纪秩序的全球主义，其代表组织通过爆料革命我们了解到就是达沃斯党，达沃斯党的实力和能量通过这次中共施放生化新冠病毒和役苗我们每个人都有切肤感受，他们对媒体，医药行业，各国政治的渗透和控制己达到一个骇人的程度，中共只所以能和这些暗势力紧密合作，无非是卖掉了中国人的利益做了个投名状以换取对自己极权独裁政权的支持，看看中共各个红色家族各个万亿美元财富帝国，看看瑞银50万亿美元中共藏匿的财富，如果没有这些黑暗势力合作和支撑，中共怎么可能做得。现在和将来全世界各个国家都在面对最主要的一个难题，如何处理这些全球主义所形成的组织和实力和各个主权国家的矛盾，俄乌矛盾就是这种深层矛盾的表现形式而己，我们中国人当然是要灭掉邪恶的中共，但如何应对这些黑暗势力确实是真正的挑战。
+老马兄弟就特别听话，我说你一定让我知道你发生了什么
+The Lao Mao brother is very obedient, I said you must let me know what happened to you
 
-### 02.22.2022
+他一定给我发信息，我就有点儿忍不住了
+He must have messaged me, I can’t bear it
 
-[外籍人士观察宁波共同富裕实践：“这是我想留下来的地方”\_参考消息网 (cankaoxiaoxi.com)](http://m.cankaoxiaoxi.com/china/20220224/2470302.shtml)
+他真是够坚强，在全阴的情况下整个血脉膨胀
+He is really strong enough, the whole blood vessel swells under the circumstance of full negative
 
-***简评：***中国人均GDP和人均可支配收入比例平均只有40%，美国达到86%，全世界平均也要到60%，中国农村更低，那剩下的收入都进了政府口袋，这是中国典型的国进民退，如此低的可支配收入怎么可能创造共同富裕，那进入政府口袋的钱最后不都以各大种腐败和名义进盗国贼家族了吗？中国那来的共同努力富裕，共同富裕翻译过来就是合法抢你的钱，让你一穷二白
+把大腿给豁开了，他因为听了七哥相信新中国联邦
+they opened his thighs, because he trusts Brother Seven and believes in the New Federal State of China
 
-### 02.22.2022
+那要不相信他必死无疑的，那么疫苗灾难有没有开始，没开始
+If you don’t believe it that it’s sure he will die, well, has the vaccine disaster started yet? Not yet
 
-[脸书母公司Meta市值蒸发46% 跌出全球10大市值企业排行榜\_参考消息网 (cankaoxiaoxi.com)](http://m.cankaoxiaoxi.com/digital/20220224/2470125.shtml)
+疫苗灾难开始是什么情况？不是政府的全面工作给你检测病
+How the vaccine disaster start? It’s not the government’s job to test you
 
-***简评：***自媒体平台本是自由表达思想言论的地方，保护言论自由是其能够生存的根本，这次冠状病毒和疫苗灾难人们体验到脸书，推特自媒体平台的言论管控和压制言论自由，随着病毒疫苗真相逐渐显现，脸上书不但面临大量法律诉讼，更重要这些自媒体平台己远离自身核心价值，追求言论自由。这种市值腰斩也仅仅是开始。
+这是个免疫功能下染出来的，我告诉你疫苗灾难到周期时我问过科学家
+It comes from immune system, I told you that I asked the scientists about the vaccine disaster hits the cycle
 
-#   港台资讯
-![](https://media.discordapp.net/attachments/858887785507323904/945881507942264882/01.png?width=1043&amp;height=586)![](https://media.discordapp.net/attachments/858887785507323904/945881636053061722/02.png?width=1043&amp;height=586)![](https://media.discordapp.net/attachments/858887785507323904/945881701106716702/03.png?width=1043&amp;height=586)
+他说我可以告诉你怎么死？会发现什么？
+He said I can tell you how to die? What will be found?
 
+吐血、流鼻血、眼睛出血、耳朵出血
+vomiting blood, nosebleeds, eye bleeding, ear bleeding
 
+女性月经来了，突然以为来月经了
+Women are menstruating, suddenly they think they are menstruating
 
+今天来明天突然又来了，一直流血不止
+Today come, tomorrow and suddenly come again, bleeding all the time
 
-*编辑：*西北风
-*作图：虎子哥
-发布：文顾*
+孩子突然倒地，就是这种爆发性的
+The child suddenly fell to the ground, this is the explosive
+
+那么前期在我去年就告诉大家，就又开始的时候就会发现
+Well, I told you earlier last year, and you will find it out when it starts
+
+打了疫苗的人，反而病毒再来再来再来
+People who have been vaccinated will instead get the virus again and again
+
+就是它破坏你免疫力，一旦有病毒风吹草动你就染上了
+It means that the vaccine destroys your immunity, once there is a virus, you will be infected
+
+然后有点感冒导致你发烧，你也认为是病毒，就是叫误诊
+Then a little cold causes you to have a fever, and you also think it is a virus, which is called misdiagnosis
+
+但真正的就是破坏掉你全身体以后，就房倒屋塌，瞬间就像海啸来一样
+But the real thing is that after destroying your whole body, just like the house collapses, like a tsunami in an instant
+
+所以我今天我特别认真我求求战友们，一定忍住五月份
+So I am very serious today, I beg my comrades in arms, you must be held back until May
+
+你别像现在三百年的飞飞，我昨天在群里没说她
+Don’t be like 300-year Feifei now, I didn’t talk about her in the group yesterday
+
+我说她我生一次气，我干嘛生两次气，我今天上直播上说去
+I told her that I was angry once, why did I get angry twice, I said it on the live broadcast today
+
+我一句都没搭理她，我看了要把孩子送出去了
+I didn’t pay any attention to her, I saw that she was going to send the child out
+
+你说这叫作当妈的吗？这不是作么，是吗？
+How could you be a mum? What it is？right？
+
+你把孩子送出去，你俩轻松了是吧
+You send the child out, you two are relax, right?
+
+给你老公双修，你送出去有你后悔的一天
+Cozy with your husband, you will regret it one day when you send the kids to the school
+
+* * *
+
+Date: 02/22/2022
+原视频标题: 新加坡、以色列、香港的疫情是疫苗后遗症，一定要忍到五月份
+The epidemics in Singapore, Israel and Hong Kong are the sequelae of vaccines and must be held back until May
+原视频日期：2022/02/18
+原视频链接 [https://gettr.com/post/pvwvwmf93a](https://gettr.com/post/pvwvwmf93a)
+任务编号：KC467（3819）
+视频时间段 : 0:00-2:08
+中听校：洛杉矶盘古农场 – Layka
+翻译：洛杉矶盘古农场 – Layka
+翻译终校：洛杉矶盘古农场 – Mike Li
+字幕+视频制作：洛杉矶盘古农场 –青梅煮酒
+审片：洛杉矶盘古农场 –银龙
+发布：洛杉矶盘古农场 –恩典
+[![](https://assets.gnews.org/wp-content/uploads/2021/03/WhatsApp-Image-2021-06-26-at-22.05.30.jpeg)](https://discord.gg/2vuvRm7z6U)
+洛杉矶盘古农场欢迎您加入:(或点击上方图片）
+
+[https://discord.gg/2vuvRm7z6U](https://discord.gg/2vuvRm7z6U)
 
  
 
