--- a/gnews/20.md
+++ b/gnews/20.md
@@ -1,23 +1,35 @@
 ---
-title: 俄乌战争之际，中共进口俄粮食支持入侵
+title: 蔡英文总统指示加强台湾海峡周边军事动向监视与防御
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2057534/)
+`西班牙巴塞罗那喜悦农场` [轉載自GNews](https://gnews.org/zh-hans/2057601/)
 
-撰稿：东京樱花团/盐和光
-![](https://assets.gnews.org/wp-content/uploads/2022/02/图片1-48.jpg)[图片来源](https://www.google.com/imgres?imgurl=https%3A%2F%2Fd1e00ek4ebabms.cloudfront.net%2Fproduction%2F782a37b0-6769-4383-a324-4964a0351abb.jpg&amp;imgrefurl=https%3A%2F%2Fwww.ft.com%2Fcontent%2F4d925bae-fa89-4e64-9063-0c01e3b5690c&amp;tbnid=SH6PJbo4v_7DnM&amp;vet=12ahUKEwiq)
-2月24日财联社报道，中共海关总署批准，允许俄罗斯全境小麦进口。
+翻译:宫米叶
 
-俄罗斯对乌克兰发动战争引发了全球对避险资产的热潮，国际石油基准布伦特原油价格每桶上涨逾4美元，自2014年9月以来首次超过每桶100美元，不仅仅是原油贵金属市场，受俄罗斯入侵乌克兰战争影响，此时中共国小麦期货已涨停，价格飞涨之际，中共此时允许全境进口俄罗斯小麦，
+![](https://assets.gnews.org/wp-content/uploads/2022/02/image-2248-edited.png)www3.nhk.or.jp
 
-2022年2月8日北京冬奥会期间，中俄两国签订了新的1份合同：10年1亿吨石油、30年480亿立方天然气的合同，使用欧元结算，不使用美元，每逢事件，中共都在用实际行动来表明自己对俄罗斯入侵在乌克兰的支持。
+鉴于围绕乌克兰局势的紧张程度急速加剧，台湾总统蔡英文23日表示，考虑到中共国的威胁，指示军方等加强对台湾海峡周边军事动向的监视和防御。
+据台湾总统府报道，蔡总统23日收到了上月成立的研究乌克兰局势特别工作组的报告。
 
-由于CCP新冠病毒和战争持续，一旦出现运输生产中断，战争影响油价暴涨，必定回抬高粮食价格，中共国经济危机进一步扩大，而粮食危机也随之加剧。
+在这其中，蔡英文谴责“俄罗斯侵犯乌克兰的主权”，同时说：“台湾作为国际社会的一员，会敦促所有各方继续通过和平与理性的手段解决争端。”
 
-信息来源：[海关总署：允许俄罗斯全境小麦进口](https://mi.mbd.baidu.com/r/BQ2lanCExy?f=cp&amp;rs=3931255381&amp;ruk=fAjvTKDNA9tzZXQ7Zje4kQ&amp;u=d445cfe682c6fccf&amp;urlext=%7B%22cuid%22%3A%22_aHyi_8nHa_28v8e0u2Mug8tS80v8v8-0iH1uli6H8lliBtolavRijf51OpWiSa1YDUmA%22%7D)
+同时指示军方加强高对台湾海峡周边军事动向的监视和防御水平，并继续加强对任何事态立即作出反应的防备工作。
 
-*校对：东京樱花团/喜马拉雅的微尘*
-*发布：东京樱花团/tdownc2p*
-![](https://assets.gnews.org/wp-content/uploads/2022/02/yht-9.jpg)
+此外，蔡英文还说“台湾和乌克兰在地缘战略、地理环境和国际供应链的重要性方面有着根本的不同”，同时要求各机构加强对外国势力企图利用乌克兰紧张局势在台湾引发恐慌和不稳定的虚假信息努力保持高度警惕。
+
+蔡英文23日的讲话虽然并未点名中共国，但她上月表示，“台湾长期面临中共国的军事威胁，我们对于乌克兰的处境感同身受”，她对中国趁着乌克兰局势即将采取的行动表现出强烈的警戒感。
+
+中共国新闻发言人批评“台湾是在利用乌克兰局势”
+
+针对乌克兰形势下台湾对中共国的警戒不断增强，中共国政府负责对台政策的国务院台湾事务办公室新闻发言人马晓光在23日的新闻发布会上表示：“民进党当局配合美西方舆论，借乌克兰问题恶意炒作所谓大陆‘军事威胁’。当前台湾海峡紧张局势的根本原因是民进党当局和“台独”势力勾连外部势力不断进行谋‘独’挑衅。“批评蔡英文政权。
+
+来源：【www3.nhk.or.jp】[蔡英文総統 台湾海峡周辺の軍事動向 監視と警戒強化など指示](https://www3.nhk.or.jp/news/html/20220223/k10013497811000.html?utm_int=word_contents_list-items_001&amp;word_result=%E4%B8%AD%E5%9B%BD%E3%83%BB%E5%8F%B0%E6%B9%BE)
+
+* * *
+
+审核: 宫米叶
+校对: 天天
+发布：花羽
+![](https://assets.gnews.org/wp-content/uploads/2022/02/西喜-8.jpeg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
