--- a/gnews/32.md
+++ b/gnews/32.md
@@ -1,29 +1,29 @@
 ---
-title: 香港：担心中共毁灭书籍八千磅香港图书运抵美国
+title: NASA发布新视频 显示火星上空有云层
 ---
-`日本东京方舟农场` [轉載自GNews](https://gnews.org/zh-hans/2057293/)
+`日本东京方舟农场` [轉載自GNews](https://gnews.org/zh-hans/2057391/)
 
-**撰稿：日本东京方舟农场 子辰**
+**撰稿：日本东京方舟农场 北极**
 
-据大纪元2月24日报道，香港自实施“国安法”以来，至少已有上百部书籍被中共当局以有可能违反“国安法”的名义，被要求在公共图书馆下架。鉴于此，目前数千册涉及中共党史和中国近现代政治的香港书籍在近日被运到了南加州的自由雕塑公园。
+据大纪元2月24日报道，美国宇航局（NASA）2月18日发布了两个视频，显示火星的上空有云层。
 
-据本次活动中进行接洽工作的人道中国主席周锋锁表示，此次行动的目的是抢救香港过去出版和言论自由时期的遗产。
+这两个视频是由火星探测车好奇号（Curiosity）发回的一组照片拼接而成，从两个视角展示了在火星上的景象。 一个是地面水平视角，看到贫瘠的火星地貌、山丘，和天上有云雾在流过的景象；另一个是地面仰视角，显示空中有云雾翻滚的景象。
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/图片-1-25.jpeg)（图片来自网络）
+![](https://assets.gnews.org/wp-content/uploads/2022/02/图片-1-3-6.jpeg)火星轨道侦查卫星拍摄到的火星风暴和蒸气云等大气活动。（图片来自大纪元）
 
-他讲述道，香港自2020年6月香港开始实施“国安法”以来，香港当局多次以有可能违反“国安法”的名义要求公共图书馆下架政治类和历史类书籍的情况。目前为止，已有至少106部书籍被要求下架，包括讲述六四的书籍，以及一批香港民主派和本土派人士的著作。
+NASA介绍说，火星上平均气温为零下81华氏度，大气内主要成分是二氧化碳，混有少量的水蒸气。这两个视频里面看到的火星云雾很可能是干冰粒子，这些云雾位于距离火星表面大约50英里的空中。
 
-周锋锁说，这次行动被抢救的书籍共有数千册，主要与中共党史、中国近现代政治有关。他表示，这些书是非常重要的一部分，也是我们做这个活动的主要的动机。据了解，这批总重8000磅、装在134个箱子中的图书将从香港运抵位于南加州的自由雕塑公园。而负责这次图书运输行动的，由美国民间人权团体人道中国（Humanitarian China）和自由雕塑公园一同参与的。
+好奇号2012年8月登陆火星。 这组照片摄制于2021年12月12日，当时距离它的登陆日期已经过去了3，300个火星日。
 
-周锋锁向记者详述，这批书籍是从香港的数家书店转移出来的，它们被从香港寄出，通过海运的方式运往美国。这批书籍已于日前安全到达了目的地自由雕塑公园。
+NASA送去火星的几个探测车很成功，都远远超过了预期的工作寿命。 比如好奇号原计划只需要工作23个月，但是现在它已经在火星上十年了，仍然在正常工作。
 
-此外，自由雕塑公园正在进行共产主义受难者纪念馆的建设。这批香港图书现在正被存放在自由雕塑公园的工作室，这批书籍内容非常丰富，作为难得的资料，都将成为共产主义受难者纪念馆落成后收藏文献的一部分。
+另一个探测车——机遇号（Opportunity）则创下最长的工作寿命纪录。 机遇号2004年登陆火星，原计划只需工作90个火星日，但是机遇号一直工作到2019年2月，历时15年。
 
 参考链接：
-[https://www.epochtimes.com/b5/22/2/23/n13598506.htm](https://www.epochtimes.com/b5/22/2/23/n13598506.htm)
+[https://www.epochtimes.com/b5/22/2/24/n13600888.htm](https://www.epochtimes.com/b5/22/2/24/n13600888.htm)
 
-素材采编：子辰
-编辑：青城道姑
+素材采编：北极
+编辑： 青城道姑
 发布：文曦
 
  
