--- a/gnews/33.md
+++ b/gnews/33.md
@@ -1,36 +1,30 @@
 ---
-title: 美国指责中俄欲建“新世界秩序”
+title: 对俄制裁撼动商品市场——原油、铝价飙升
 ---
-`秘密翻译组-即时新闻播报组` [轉載自GNews](https://gnews.org/zh-hans/2057271/)
+`西班牙巴塞罗那喜悦农场` [轉載自GNews](https://gnews.org/zh-hans/2057384/)
 
-**作者:  **青衣
-![](https://assets.gnews.org/wp-content/uploads/2022/02/1-362.jpg)
-美国国务院发言人内德·普赖斯（图片来自网络）
+翻译：zicoround
 
-美国国务院近日公开指责中俄沆瀣一气，企图建立一个新世界秩序，而俄罗斯对乌克兰的行动是实现这个目标的一部分。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/image-2225-edited.png)news.yahoo.co.jp
 
-据《大纪元》2月24日报道，美国国务院指责中共和俄罗斯正在共同努力，企图建立一个“极度不自由”的新世界秩序。
+【伦敦・時事通讯社】乌克兰局势撼动着商品市场。 受俄罗斯出兵、欧美对俄制裁影响，原油期货交易价创约7年5个月新高、逼近每桶100美元大关，铝、镍在其主要生产国俄罗斯也是价格攀升。
 
-美国国务院发言人内德·普赖斯（Ned Price）周三（2月23日）在国务院例行新闻简报会上表示，世界上每个负责任的国家——包括中共国，都有义务敦促俄罗斯总统普京退一步，以缓和乌克兰危机。
+与美国WTI（西德州轻质原油）同为原油价格标杆的英国北海布伦特原油价格在22日的交易中，自2014年9月以来的第一次短时突破99美元。俄罗斯总统普京承认乌克兰东部的亲俄派控制区独立，并决定出兵该地区，这些都强化了俄罗斯石油出口将“刹车”的观点。
 
-普赖斯指出，中共经常引用主权原则，即在任何情况下主权都应该是神圣不可侵犯的。这的确应该是各国遵守和尊重的基本规则之一。然而中共对此却言行不一，尤其是在俄乌危机的立场上。
+另一方面，在22日的伦敦金属交易所（LME），期货铝价格创近13年来新高，接近历史最高点。投资者正在准备应对占全球铝产量约6%的铝业巨头俄罗斯Rusal公司被实施制裁。
 
-习近平和普京不久前于北京冬奥会开幕前会晤，随即中俄宣布建立升级版“无限制”伙伴关系，承诺加强合作，以对抗美国和西方。普赖斯对此表示，中俄关系的发展方向非常令人担忧。俄罗斯和中（共）国想要一个新的世界秩序——一种非常不自由的秩序，一个在许多方面具有破坏性而非附加性的秩序。这种秩序与世界各国在过去七十年中建立的体系形成鲜明对比。
+LME期货镍市场也处于近十年来的最高水平。 镍被用于电动汽车（EV）的电池中，近来全球的镍需求不断增长。
 
-在被记者问及是否认为中共将俄罗斯入侵乌克兰视为实现这一目标的一部分时，普赖斯回答说，这显然不是朝着中（共）国所声称的要珍视尊重国家主权的原则方向迈出的一步。中共自2014年以来针对俄罗斯对乌克兰侵略所采取的立场证明了这一点。
+三菱UFJ银行的Esan Homan说：”商品市场正处于严重的供需紧缩状态，对最轻微的供应限制也会非常敏感。 如果石油、铝、镍价格继续飙升，可能会对家庭和企业产生大范围影响。
 
-普赖斯指出，中共在世界舞台上一贯强调国家主权，但在针对俄罗斯直接攻击另一个国家的主权和领土完整问题上，中共的反应与人们听到的其所宣扬的东西并不相符。
-
-中共此前敦促乌克兰对峙各方保持克制，并敦促美国尊重并解决俄罗斯的安全保障要求。有分析人士认为，中共担心俄罗斯对乌克兰的行动可能会对中共与欧洲的贸易关系产生影响。但同时，中共模棱两可的立场及其与俄罗斯的升级协议，可能会让普京有信心在乌克兰问题上继续推进。
-
-事件的发展也正是如此。就在普赖斯发表上述讲话的第二天，即2月24日，俄罗斯突然宣布对乌克兰全面开战。美欧等西方文明国家如何应对将直接决定中俄“世界新秩序”之梦究竟是美梦还是噩梦。
-
-新闻链接：
-
-[https://www.epochtimes.com/gb/22/2/24/n13600443.htm](https://www.epochtimes.com/gb/22/2/24/n13600443.htm)
+来源：【news.yahoo.co.jp】[対ロ制裁、商品市場揺さぶる　原油・アルミが価格高騰](https://news.yahoo.co.jp/articles/1b3597853e3c2057353fcf7b56be98dc0c13e2b7)
 
 * * *
 
+审核：天天 
+校对：宫米叶
+发布：花羽
+![](https://assets.gnews.org/wp-content/uploads/2022/02/GNEWS_CH.-1-3-3.jpeg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
