--- a/gnews/1.md
+++ b/gnews/1.md
@@ -1,23 +1,26 @@
 ---
-title: 中共病毒疫苗接种剂次超31亿
+title: 视频&#124;郭先生谈乌克兰危机及其鲜为人知的背景
 ---
-`儒为` [轉載自GNews](https://gnews.org/zh-hans/2057717/)
+`MOSvideo` [轉載自GNews](https://gnews.org/zh-hans/2057848/)
 
-作者：意大利罗马达芬奇农场-儒为
-![](https://assets.gnews.org/wp-content/uploads/2022/02/31亿剂.jpeg)封面来源：网络图片
-新华社微博2022年2月24日报道，中共国家卫健委通报，全国新冠疫苗接种剂次超31亿。近日，新冠疫苗序贯加强免疫接种启动。研究数据表明，同源加强免疫和序贯加强免疫，都能够进一步提高免疫效果。专家呼吁满足接种条件的人群主动接种、及早接种。
+制作：香草山视频部
 
-中共国疫苗接种剂次超31亿，这是个触目惊心的数字，但既讽刺又幸运的是，七哥在直播中说，其中仅一个认识的国人就做了6亿多的假疫苗，那么不知道的假疫苗又有多少？10亿肯定是挡不住的，没想到这个互骗的社会这次因为“假”反而会救很多人。
 
-全世界强制疫苗已经接近尾声，不管各国政府是否正式宣布结束疫苗强制令，但民间已经不再像之前面临这样那样的压力。我们也都清楚这背后的原因是什么，但不管怎样这是一个好的开始。但中共这个流氓永远都是与世界背道而驰，以此来体现自己的制度优越性，完全不顾百姓死活。
 
-中共各个“骗子集团”为了把国库里的钱和医保里的钱变成自己钱包里的钱就不停的推动“疫苗经济”，另一方面还可以给世界贪婪的大药商及其背后黑暗力量展示一个香喷喷的大蛋糕，凡是选择支持中共的都可以来分享这个大蛋糕，因为中共有14亿的奴隶市场，打死了不偿命。
+在2月20日的大直播中，郭文贵先生再次谈到了目前广受关注的俄乌危机事件并深入剖析了习近平与普京之间的关系。
 
-中共疫苗“换汤不换药”，只需要换个名字和换个说法就可以，再找个所谓专家写一堆老百姓看不懂的数字，就自己证明自己冠名的“同源加强免疫”和“序贯加强免疫”能够进一步提高免疫效果。中共安排的所谓的专家再站出来在中共媒体上呼吁满足接种条件的人群主动接种、及早接种，中共这一套杀人骗钱的游戏就继续循环下去。
+郭先生指出，习近平和普京都有各自称霸的野心和计划，即习近平妄图夺取台湾并问鼎亚洲，而普京则试图通过占领乌克兰，随即控制欧洲。其中，二者自信的来由是，普京此前不费一兵一卒地夺取了克里米亚。
 
-新闻来源：🔗[权威快报|全国新冠疫苗接种剂次超31亿](http://www.news.cn/politics/2022-02/24/c_1128412154.htm)
+郭先生还爆料称，习近平和普京早先曾在没有翻译人员在场的情况下，单独会面了两个多小时。会上，习近平怂恿普京攻打乌克兰，而自己则可以趁机拿下台湾。对此，习近平声称，中共和俄罗斯的出兵可以缓解各自国家内部的政治和经济压力，同时，他们还能借机向二人的国内政敌大开杀戒；倘若不然，中俄将面临北约东扩和台湾独立的境况，而习、普二人也将被各自的党内势力除掉。
 
-*编辑/校对/发稿：意大利罗马达芬奇农场-儒为*
+最后，郭先生透露道，俄乌战争早在三天前就已经开始，其后，台湾也很可能马上出现动静。然而，乌克兰和台湾只是习、普二人的第一步计划，趁机打压欧洲和美国才是他们的真正目的。但郭先生也补充道，如果美、欧能够充分地与普京合作，使其放弃对乌克兰的计划，那乌克兰和台湾将仍有一线希望。
+
+发稿：林礼
+
+**更多资讯，更多关注**
+[**全球农场联盟委员会GTV官方账号**](https://gtv.org/user/5f58c34e245d3c05799fe236)
+[**全球喜马拉雅农场联盟委员会Gettr**](https://gettr.com/user/GlobalAlliance)
+[**喜马拉雅联盟大使馆全球客服中心Discord**](https://discord.gg/fphuQefJ)
 
  
 
