--- a/gnews/11.md
+++ b/gnews/11.md
@@ -1,21 +1,41 @@
 ---
-title: 中日财经爆&#124;日本去年广告费支出约6.8万亿 两年来首次增长
+title: 乌克兰要求该国公民离开俄罗斯
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2057602/)
+`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/2057692/)
 
-撰稿：东京樱花团/peterwong
-![](https://assets.gnews.org/wp-content/uploads/2022/02/图片5-5.jpg)[图片来源](https://www.google.com.hk/imgres?imgurl=https%3A%2F%2Fuipath.com%2Fcdn-cgi%2Fimage%2Fwidth%3D1020%2Cformat%3Dauto%2Fhttps%3A%2F%2F%2F%2Fimages.ctfassets.net%2F5965pury2lcm%2FwOft28d8QvAeLAjSdmI2t%2F9c91d5245c2d032096e572b279e4b253%2Fdentsu-customer-story-h)
-世界最大单一广告公司——日本电通2月24日宣布，2021年日本的广告支出总额为67,998亿日元，比前一年增长10.4%，这是两年来日本广告支出的首次增长，因为中共病毒疫情灾难的影响在下半年有所缓解，东京奥运会和残奥会也产生了积极影响。
+#### **【雅典娜快讯】，紧贴时代脉搏**
 
-按媒体划分，互联网广告支出增长21.4%，达到2.7052万亿日元，首次超过报纸、杂志、广播和电视四种媒体的广告支出总额（2.453万亿日元）。
+翻译：文扬
+编辑：文泓
 
-消息来源:
+- ![](https://assets.gnews.org/wp-content/uploads/2022/02/8-35.png)图片来源：Valorizy & 雅典娜设计组
 
-[昨年の広告費、２年ぶり増加の６兆７９９８億円…五輪・パラ効果も](https://www.yomiuri.co.jp/economy/20220224-OYT1T50148/)
 
-*校对：东京樱花团/喜马拉雅的微尘*
-*发布：东京樱花团/tdownc2p*
-![](https://assets.gnews.org/wp-content/uploads/2022/02/yht-9.jpg)
+当地时间2月23日，据RT电视台报道，乌克兰外交部周三发布的咨询意见说，已建议乌克兰公民不要以任何理由“访问俄罗斯联邦，目前在该国的人应立即离开其领土”。声明说，那些不遵循指示的人，可能不会受到基辅的保护。
+
+外交部此前曾建议乌克兰应切断与俄罗斯的所有外交关系，以回应后者承认该国东部的两个分离地区为主权国家。
+
+周二，俄罗斯下令从乌克兰撤离其外交人员，理由是俄罗斯大使馆收到威胁（警告）。其他一些国家以俄罗斯和乌克兰之间的军事升级风险为由，将其外交官转移到乌克兰西部地区。
+
+上周末，美国也建议其在俄罗斯的公民为可能的疏散做准备，声称他们有可能成为那里不明确“攻击”的受害者。美国大使馆援引“媒体消息”作为发出警告的理由。
+
+在周一俄罗斯作出决定，承认顿涅茨克和卢甘斯克人民共和国为主权国家。它说这是必要的，因为基辅多年来一直未能推进2015年和平路线图的实施，即明斯克协议，俄罗斯曾帮助调解。
+
+莫斯科则称，乌克兰正在准备对叛乱省份进行新的攻击，因为其西方支持者一直对乌克兰针对乌东分离主义分子犯下的暴行视而不见。
+
+而乌克兰总统泽连斯基称俄罗斯此举为“司法侵略”，但没有宣布在其国家实施戒严。
+
+原文链接： [Ukraine tells citizens to leave Russia — RT Russia & Former Soviet Union](https://www.rt.com/russia/550323-ukraine-tells-citizens-to-leave/)
+
+发布：tianzhihuan
+
+**更多资讯，请关注：****
+**[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
+[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
+[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
