--- a/gnews/12.md
+++ b/gnews/12.md
@@ -1,33 +1,32 @@
 ---
-title: 蔡英文总统指示加强台湾海峡周边军事动向监视与防御
+title: 岸田总理：我们将根据国家利益就对俄罗斯的追加制裁做出决定
 ---
-`西班牙巴塞罗那喜悦农场` [轉載自GNews](https://gnews.org/zh-hans/2057601/)
+`西班牙巴塞罗那喜悦农场` [轉載自GNews](https://gnews.org/zh-hans/2057691/)
 
-翻译:宫米叶
+翻译：天天
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/image-2248-edited.png)www3.nhk.or.jp
+![](https://assets.gnews.org/wp-content/uploads/2022/02/image-2252-edited.png)news.yahoo.co.jp
 
-鉴于围绕乌克兰局势的紧张程度急速加剧，台湾总统蔡英文23日表示，考虑到中共国的威胁，指示军方等加强对台湾海峡周边军事动向的监视和防御。
-据台湾总统府报道，蔡总统23日收到了上月成立的研究乌克兰局势特别工作组的报告。
+岸田首相告诉参议院预算委员会，他将在考虑国家利益的同时重视与国际社会合作，就对俄罗斯的追加制裁做出决定。
 
-在这其中，蔡英文谴责“俄罗斯侵犯乌克兰的主权”，同时说：“台湾作为国际社会的一员，会敦促所有各方继续通过和平与理性的手段解决争端。”
+参议院将开始审议2022财政年度的预算，反对党就昨天宣布对俄制裁的成效质疑政府对情况的认知。
 
-同时指示军方加强高对台湾海峡周边军事动向的监视和防御水平，并继续加强对任何事态立即作出反应的防备工作。
+宪政民主党白真勋议员
+我的印象是，俄罗斯方面在某种程度上已经考虑到了制裁，但我想问，预计制裁会产生多大的影响。
 
-此外，蔡英文还说“台湾和乌克兰在地缘战略、地理环境和国际供应链的重要性方面有着根本的不同”，同时要求各机构加强对外国势力企图利用乌克兰紧张局势在台湾引发恐慌和不稳定的虚假信息努力保持高度警惕。
+岸田首相
+我认为，日本在与西方的这些举动合作中对俄罗斯采取强硬立场是非常重要的。
 
-蔡英文23日的讲话虽然并未点名中共国，但她上月表示，“台湾长期面临中共国的军事威胁，我们对于乌克兰的处境感同身受”，她对中国趁着乌克兰局势即将采取的行动表现出强烈的警戒感。
+岸田接着说，他希望 “通过展示与国际社会合作的坚定立场，可以鼓励俄罗斯为缓解局势做出努力。 岸田首相还说，日本将就追加的制裁做出自己的决定，”随着形势的变化，考虑到日本的国家利益。
 
-中共国新闻发言人批评“台湾是在利用乌克兰局势”
+为了应对俄罗斯对乌克兰的全面入侵，政府正准备分阶段提高制裁的严厉程度，包括限制半导体和其他先进技术的出口。
 
-针对乌克兰形势下台湾对中共国的警戒不断增强，中共国政府负责对台政策的国务院台湾事务办公室新闻发言人马晓光在23日的新闻发布会上表示：“民进党当局配合美西方舆论，借乌克兰问题恶意炒作所谓大陆‘军事威胁’。当前台湾海峡紧张局势的根本原因是民进党当局和“台独”势力勾连外部势力不断进行谋‘独’挑衅。“批评蔡英文政权。
-
-来源：【www3.nhk.or.jp】[蔡英文総統 台湾海峡周辺の軍事動向 監視と警戒強化など指示](https://www3.nhk.or.jp/news/html/20220223/k10013497811000.html?utm_int=word_contents_list-items_001&amp;word_result=%E4%B8%AD%E5%9B%BD%E3%83%BB%E5%8F%B0%E6%B9%BE)
+来源：【news.yahoo.co.jp】 [岸田総理 対ロ追加制裁「国益を考え判断していく」](https://news.yahoo.co.jp/articles/a4af89e7c9ce245e84b3c42e7e978c7602078054)
 
 * * *
 
-审核: 宫米叶
-校对: 天天
+审核：BryanW
+校对：宫米叶
 发布：花羽
 ![](https://assets.gnews.org/wp-content/uploads/2022/02/西喜-8.jpeg)
  
