--- a/gnews/14.md
+++ b/gnews/14.md
@@ -1,25 +1,26 @@
 ---
-title: 英国大学讲师为了避免冒犯中共国学生进行自我审查
+title: COVID-19 最新情报｜英格兰数据 8-10%儿童接种疫苗后缺课一次
 ---
-`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/2057587/)
+`關注組` [轉載自GNews](https://gnews.org/zh-hans/2057685/)
 
-#### 翻译/撰稿：zzballack
+**撰文｜疫情关注组 / 发布时间｜24/02/2022**
+![](https://assets.gnews.org/wp-content/uploads/2022/02/Movie-Studio-1.png)**更多资讯请关注官方盖特（Please follow our Gettr：**[**https://gettr.com/post/pl6k0218bf**](https://gettr.com/post/pl6k0218bf)**)**
+英媒[《THE EXPOSE》](https://dailyexpose.uk/2022/02/23/800k-kids-missed-school-adverse-reaction-covid-jab/)23日报导，英格兰政府在去年向12-15岁的儿童提供新冠疫苗接种，英格兰首席医疗官 Chris Whitty向JCVI\*(注1)表示，不建议让12岁以上的儿童接种新冠疫苗，其理由是统计数据显示，新冠疫苗不能预防感染或阻断传播。然而被以接种新冠疫苗的益处略大于已知的潜在危害为由驳回。Chris Whitty不建议12岁以上儿童接种疫苗的理由是，据统计数据，新冠疫苗不能预防感染或阻断传播。。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/截圖-2022-02-24-下午4.12.08.png)UK Health Security Agency:[COVID-19 vaccine surveillance report Week 7](https://assets.publishing.service.gov.uk/government/uploads/system/uploads/attachment_data/file/1055620/Vaccine_surveillance_report_-_week_7.pdf)
+上图数据为2022年1月23日至2月13日期间，各年龄段每十万人中“未接种疫苗(蓝色)、接种三剂疫苗(红色)”新冠确诊的数量。由图表可知，接种三剂疫苗都是高于未接种疫苗的。
 
-#### 校对：Chris
-![](https://assets.gnews.org/wp-content/uploads/2022/02/图片1-50.jpg)图片来源：泰晤士报
-据英国《每日邮报》（Daily Mail）2月23日报道，英国大学的讲师们承认在讨论中共国时会进行自我审查，以免冒犯中国学生。学者们说，由于因其课堂有来自专制国家的学生，他们的教学受到了影响。大多数人警告说，英国高等教育中的学术自由和他们的公开教学权利受到了威胁。
+此外，JCVI在发表意见当中写道，5-11岁儿童在接种新冠疫苗后，大约有8-10%的儿童至少缺课一天。在美国，此年龄段接种新冠疫苗人数超过800万名，若依照JCVI的统计数据将会有近80万名儿童因疫苗不良反应而被迫缺课。
 
-来自牛津大学、埃克塞特大学（University of Exete）和朴茨茅斯大学（University of Portsmouth）的学者们发表在《国际人权杂志》（International Journal of Human Rights）上的一份最新报告详细介绍了这一情况。这份报告对1500名来自全英各地机构社会科学部门的讲师进行了采访。回复者中，44%的人说他们对自己的在线课程进行了自我审查；三分之二的人认为学术自由受到威胁；超过五分之二的人认为他们选择教学内容的能力受到威胁；近四分之一的人承认学生背景影响到了他们的工作；对那些工作聚焦于中共国的讲师来说，超过五分之一的人工作受到限制；令人吃惊的是，在英国大学工作的人中，有60%认为他们的教学自由受到了威胁。
+韩国，近日确诊人数快速增加，政府表示正在考虑将5-11岁儿童纳入接种对象，但尚未有定论。韩国政府统计数据显示，21日新增9万9573例确诊中，0-9岁与10-19岁合计占比达到三成，且每10万名确诊个案中0-9岁及10-19岁的比例高出其他年龄层许多。对比纽西兰官方统计数据（下图），0-19岁区间的确诊率总和约为33%，与韩国政府数据相近。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/截圖-2022-02-24-下午4.46.38.png)[來源](https://www.health.govt.nz/covid-19-novel-coronavirus/covid-19-data-and-statistics/covid-19-case-demographics#vaccinations-details)
+**有趣的是，即便韩国政府统计上以0-9、10-19为区间段，但政府仍考虑开放5-11岁儿童接种新冠疫苗**。据报导，日本韩国皆是跟随美国政策，宣布开始为5-11岁儿童接种疫苗。
 
-在一个学术自由受到威胁的案例中，罗素大学集团（Russell Group）的一位教授因所谓的冒犯了一名中国学生而道歉。《泰晤士报》报道说，在谈到增值税制度时，这位学者提到了中共国对其制度的改变。但在一周后的研讨会上，这位讲师说：“我感觉一些人并不完全接受我对中国宪法的评论，我当然没有任何不尊重的意思。”一位学生说，我会对任何人讨论中共国而不引起冒犯感到惊讶。我突然觉得不愿、甚至害怕以任何方式提及中共国。
+新加坡，早在去年便宣布预计12月底为5-11岁族群接种疫苗，预计涵盖30万名儿童，截至1月31日已经接种了23万8253剂。照JCVI的相关数据，可能会有3万名儿童接种后出现缺课情形。台湾政府则于1月13日宣布，5-11岁儿童有望在下半年接种新冠疫苗。
 
-报告作者之一、牛津大学的特纳·普雷勒克（Tena Prelec）博士说：“政治、国际关系专业的学者更有可能自我审查，因为他们在给来自专制国家的学生授课和进行研究时，更容易接触到敏感问题。”
+- 註1（Joint Committee on Vaccination and Immunisation，可译为疫苗及免疫专家小组））
 
-根据英国大学统一学生申请机构（UCAS）的数据显示，近年来，申请来英国就学的中共国学生人数激增，从2013年的6900人，到去年的26000人，再到今年的28930人，这使得中共国成了继欧盟之后英国大学的第二大海外生源地。远东地区每年给英国大学带来了21亿英镑收入，平均每人每年高达3.8万英镑。
 
-新闻来源：
-
-[Lecturers at UK universities are self-censoring to avoid offending Chinese students: Up to 44% of tutors say they miss topics in online lessons with 66% fearing a threat to academic freedom](https://www.dailymail.co.uk/news/article-10542193/Lecturers-UK-universities-self-censoring-avoid-offending-Chinese-students.html)
+来源｜ [中央社](https://www.cna.com.tw/news/aopl/202202220259.aspx)、[光明日報](https://guangming.com.my/%E6%96%B0%E5%8A%A0%E5%9D%A110%E5%90%8D%E5%85%92%E7%AB%A5-%E6%89%93%E7%96%AB%E8%8B%97%E5%BE%8C%E7%8F%BE%E5%9A%B4%E9%87%8D%E4%B8%8D%E8%89%AF%E5%8F%8D%E6%87%89)、[《THE EXPOSE》](https://dailyexpose.uk/2022/02/23/800k-kids-missed-school-adverse-reaction-covid-jab/)、[New Zealand Ministry of Health](https://www.health.govt.nz/covid-19-novel-coronavirus/covid-19-data-and-statistics/covid-19-case-demographics#vaccinations-details)
 
  
 
