--- a/gnews/16.md
+++ b/gnews/16.md
@@ -1,22 +1,35 @@
 ---
-title: 徐州丰县锁链女事件令全世界有正义感的人们义愤填膺
+title: 肯尼亚的金融科技行业加大对数字货币的推动力度
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2057559/)
+`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/2057643/)
 
-撰稿：东京樱花团/盘古明月
-![](https://assets.gnews.org/wp-content/uploads/2022/02/图片2-23.png)
-徐州丰县锁链女事件持续发酵，中国人权被严重践踏，令全世界有正义感的人们义愤填膺。
+#### 翻译/编辑：小红帽
 
-自从中共国爆出了丰县锁链女生育八个孩子的事件以来，中共国的相关部门接二连三的发布公告，先是否认人口贩卖的事实，后又为锁链女事件中的犯罪行为洗白，前后矛盾，不去解决问题，而是解决提出问题的人，把最初爆出此事的人员拘捕、殴打，动用国家力量，封锁消息，抓捕传播消息的人士，但是，正义一定会战胜邪恶，现在各国媒体都开始陆陆续续报道中共的恶行。
+- ![](https://assets.gnews.org/wp-content/uploads/2022/02/kuaixun.jpg)图片来源： 雅典娜农场设计组（614）
 
-真相暴露出来以后，中共就开始使用惯用的伎俩，对当地的市委书记、县长等人撤职，安抚一下民心，妄图将此事尽快平息，掩盖他们的罪行，但对于中共国一年几十万的人口贩卖问题只字不提，彻底暴露了中共的当权者对国民视为韭菜，草芥人命的本质。
 
-共产党不灭亡，在中国的每一个人都是不安全的，都有可能成为下一个锁链女，每个人其实都已经被中共长期洗脑，成为了精神上的锁链女。为了中国人民的未来，为了全人类的未来，一定要消灭中共这个恶魔。
+根据The Standard 2月24日报道，肯尼亚政府被敦促支持数字和去中心化金融，深化金融包容性。这一呼吁是在物联网、区块链技术和数字货币推动的全球金融动荡之后发出的，许多国家正在享受早期采用所获得的红利。
 
-*校对：东京樱花团/喜马拉雅的微尘*
-*发布：东京樱花团/tdownc2p*
-![](https://assets.gnews.org/wp-content/uploads/2022/02/yht-9.jpg)
+然而，鉴于肯尼亚在非洲大陆的经济和政治事务上的影响力越来越大，肯尼亚仍然被数字金融利益相关者毫无根据的担忧所阻碍。
 
+周二在内罗毕举行的非洲数字金融峰会上，来自纳米比亚和多哥的高级官员为这场辩论奠定了基础。他们认为非洲大陆要迎难而上，否则就有可能被颠覆性的技术发展甩在后面。
+
+纳米比亚信息和技术部长佩亚·穆舍伦加（Peya Mushelenga）呼吁非洲同行实现经济数字化和自由化，并补充说，数字和民主化的金融促进了金融包容性，对采用国有利。**数字金融是一种摆脱金融机构控制的财务独立方式。**
+
+多哥负责金融包容性的国务秘书马扎梅索·阿西（Mazamesso Assih）表示，只有当非洲大陆的人口得到充分授权，才能实现全面数字经济的共同梦想。她呼吁各国政府支持金融技术生态系统，以巩固金融包容性。
+
+根据世界银行的数据，全球仍有17亿成年人没有银行账户，但其中约有三分之二的人拥有可以帮助他们获得金融服务的手机。在撒哈拉以南非洲，只有不到15%的成年人有银行账户。
+
+新闻链接：[Fintech industry ups push for digital currency](https://www.standardmedia.co.ke/business/news/article/2001438466/fintech-industry-ups-push-for-digital-currency)
+
+发布：Frank2021
+
+**更多资讯，请关注：**
+[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
+[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/dKQ6vFY9Fu)
+[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
 
  
 
