--- a/gnews/18.md
+++ b/gnews/18.md
@@ -1,33 +1,33 @@
 ---
-title: 良言抵万金，新加坡华人小心了！
+title: 美国正在酝酿多部虚拟货币法案
 ---
-`喜马拉雅农场新西兰站` [轉載自GNews](https://gnews.org/zh-hans/2057544/)
+`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/2057609/)
 
-作者：ZERO (酷翻组文贵直播原创)
-![](https://assets.gnews.org/wp-content/uploads/2022/02/酷翻组1-13.png)
-文贵先生在2月18日的大直播里，又为全球华人提供了保命信息，这次把脉的是曾经的亚洲四小龙-新加坡，以下是文贵先生对新加坡当前局势的看法：
+翻译/编辑：小红帽
 
-郭先生曾经认为新加坡的威权民主模式适合中国民主化的初期阶段，但几年下来，新加坡的政局让郭先生极为失望。他认为，李家的执政风格非常丑陋，对待新加坡老百姓非常残酷。李氏家族的人都跟郭先生有接触，在郭先生眼中很多后辈都是从孩子看着长大的。李家崇拜美国，但教育模式，思维习惯，穿衣打扮，生活方式学的是欧洲英国，但是又非常现实，出于利益关系又跟着CCP走。郭先生认为，李家后继无人，一家人都很无知。
+- ![](https://assets.gnews.org/wp-content/uploads/2022/02/7-34.png)图片来源：www.euroweeklynews.com
 
-CCP藏钱最多的地方是卢森堡，卢森堡的每个角落都有CCP的渗透。然后是瑞士和新加坡。从美国撤出的钱大多撤往新加坡，小部分去了日本。新加坡的主要收入依赖码头、赌场和金融，票据业务新加坡第一，包括家族信托。新加坡帮CCP洗钱，习江孟王，都在新加坡有很多资产，新加坡摆脱不了被CCP控制。新加坡一直在CCP和美国之间周旋，最终一定跟美国走。几天前，李家人在欧洲听说疫苗会造成灾难，现在很慌张。李总理很倔犟，认为要把疫苗政策进行到底，但是最终会跟着美国走。郭先生认为，死亡率剧增，会逼迫新加坡停止强制疫苗政策。
 
-郭先生认为，新加坡对华人来说不安全，希望战友离开，原因有三：
+根据JDSUPRA 2月23日报道，美国众议员沃伦·戴维森（Warren Davidson）（R-OH）于2月15日宣布，他将推出《保留你的硬币法案》。该法案旨在“禁止联邦机构限制个人使用可兑换的虚拟货币来购买自己使用的商品或服务，以及用于其他目的。” 同一天，国会议员乔什·戈特海默（Josh Gottheimer）（D-NJ）也宣布了《稳定币创新和保护法案》的讨论稿草案。该法案旨在定义“合格的稳定币”，以区别于“更易波动的加密货币”。
 
-1 李家江山争夺将会造成动乱，牺牲者一定是华人。马来人和其他东南亚移民想夺回新加坡。
+戴维森是众议院金融服务委员会和国会区块链核心小组的成员，在这个领域一直很活跃，之前曾推出了《2021年通证分类法》 (HR 1628)，并共同发起了《小企业区块链解决方案法》（H.R. 6597）。**该法案将阻止联邦监管机构的任何负责人“禁止或以其他方式限制受管辖的用户为自己的目的使用虚拟货币或其等价物的能力，例如购买实物或虚拟货币，供用户自用的商品和服务；或通过自托管钱包进行交易”。** 该立法将“可兑换的虚拟货币”定义为“具有与货币等价值的交易媒介”。戴维森表示，该法案“采用了已经存在了一段时间的‘金融犯罪执法网络’语言，为‘了解你的客户’（KYC）提供了一个保护自我监管的框架”。
 
-2 美国和ccp较量会让新加坡毁灭。
+同时，戈特海默（Gottheimer）的立法将把某些数字货币定义为“合格的稳定币”，如果它们“**可按需以一比一兑换美元的加密货币**，并由两个合格的发行者之一发行，即银行等受保存款机构或非银行合格稳定币发行者”。
 
-3 李家后继无人，执政能力低下。
+合格的“稳定币”被定义为非证券或衍生品，可以由联邦支持的银行或非银行机构发行，后者同意保持至少100%的储备资产，包括美元、美债或货币监理署（OCC）认为适当的现金抵押品的其他资产。现金抵押品被存放在联邦存款保险公司（FDIC）的独立账户中。
 
-爆料革命5年，给全世界提供多少深入的时事分析和准确的情报信息，多少人因此得以趋福避祸，保命，保财，保未来。这也是为什么每次文贵直播都能受到亿万观众瞩目，世界在剧烈的动荡中重生，唯有新中国联邦，如洪水中的诺亚方舟，为全球华人指明方向。
+该立法规定货币监理署对这两种类型的稳定币发行人具有主要监督权。**为了帮助进一步保护消费者，联邦存款保险公司将被要求开发一个合格的稳定币保险基金，以管理非银行发行者的赎回付款保险。**
 
-文贵直播链接：
+新闻链接：[Multiple Pieces of Legislation Swirling Around Virtual Currencies](https://www.jdsupra.com/legalnews/multiple-pieces-of-legislation-swirling-7077736/)
 
-[https://gtv.org/video/id=621031e0b706176dd78cdd0e](https://gtv.org/video/id=621031e0b706176dd78cdd0e)
+发布：tianzhihuan
 
-审核校对：sherryok
-
-上传排版：水云间
+更多资讯，请关注：
+[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
+[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/dKQ6vFY9Fu)
+[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
 
  
 
