--- a/gnews/25.md
+++ b/gnews/25.md
@@ -1,30 +1,38 @@
 ---
-title: 对俄制裁撼动商品市场——原油、铝价飙升
+title: 有声｜英国官员报告中称 中共病毒来自武汉实验室
 ---
-`西班牙巴塞罗那喜悦农场` [轉載自GNews](https://gnews.org/zh-hans/2057384/)
+`秘密翻译组-即时新闻播报组` [轉載自GNews](https://gnews.org/zh-hans/2057546/)
 
-翻译：zicoround
+**By:秘翻新闻**
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/image-2225-edited.png)news.yahoo.co.jp
+**2022-02-24**
+![](https://assets.gnews.org/wp-content/uploads/2022/02/224_2-1.jpg)图片来源：DW
+《国家脉动》2月23日报道，根据一位前英国陆军上校的报告，英国政府认为中共病毒的起源是武汉病毒学研究所。
 
-【伦敦・時事通讯社】乌克兰局势撼动着商品市场。 受俄罗斯出兵、欧美对俄制裁影响，原油期货交易价创约7年5个月新高、逼近每桶100美元大关，铝、镍在其主要生产国俄罗斯也是价格攀升。
+这位前英国陆军上校认为，中共病毒由动物传人的理论没有意义，在提到实验室泄漏理论时，他表示很多人跟他一样，认为实验室泄漏更有可能。
 
-与美国WTI（西德州轻质原油）同为原油价格标杆的英国北海布伦特原油价格在22日的交易中，自2014年9月以来的第一次短时突破99美元。俄罗斯总统普京承认乌克兰东部的亲俄派控制区独立，并决定出兵该地区，这些都强化了俄罗斯石油出口将“刹车”的观点。
+据报道，这一消息发布之际，英国首相鲍里斯·约翰逊正在修改英国的生物安全战略，以防止自然人畜共患病和实验室泄漏。
 
-另一方面，在22日的伦敦金属交易所（LME），期货铝价格创近13年来新高，接近历史最高点。投资者正在准备应对占全球铝产量约6%的铝业巨头俄罗斯Rusal公司被实施制裁。
+化学和生物反恐专家、剑桥大学马格达林学院的生物安全研究员布雷顿·戈登表示，在武毒所消息不透明的情况下，更多人认为这是来自实验室的泄漏。
 
-LME期货镍市场也处于近十年来的最高水平。 镍被用于电动汽车（EV）的电池中，近来全球的镍需求不断增长。
+布雷顿·戈登推断称，他最担心的是，下一次可能不是意外，因为传播病毒很容易做到。如果你没有道德，没有顾忌，那么为什么不感染你的敌人呢？
 
-三菱UFJ银行的Esan Homan说：”商品市场正处于严重的供需紧缩状态，对最轻微的供应限制也会非常敏感。 如果石油、铝、镍价格继续飙升，可能会对家庭和企业产生大范围影响。
+报道称，英国官员咨询了像布雷顿·戈登这样的专家，以支持起草一项新的生物安全战略，应对生命科学研究被滥用而造成伤害的情况。
 
-来源：【news.yahoo.co.jp】[対ロ制裁、商品市場揺さぶる　原油・アルミが価格高騰](https://news.yahoo.co.jp/articles/1b3597853e3c2057353fcf7b56be98dc0c13e2b7)
+秘翻新闻 Grace 编译报道
+
+发布: 文橙
+
+
+
+> [The British Government Believes COVID-19 Came From the Wuhan Lab: Report.](https://thenationalpulse.com/2022/02/23/british-gov-backs-lab-leak-theory-behind-closed-doors/)
+
+
+
+
 
 * * *
-
-审核：天天 
-校对：宫米叶
-发布：花羽
-![](https://assets.gnews.org/wp-content/uploads/2022/02/GNEWS_CH.-1-3-3.jpeg)
+![](https://assets.gnews.org/wp-content/uploads/2022/02/1-321.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
