--- a/gnews/28.md
+++ b/gnews/28.md
@@ -1,37 +1,23 @@
 ---
-title: 南非华为不遵守招聘配额，面临劳工部罚款
+title: 俄乌战争之际，中共进口俄粮食支持入侵
 ---
-`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/2057321/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2057534/)
 
-#### 【雅典娜快讯】，紧贴时代脉搏
+撰稿：东京樱花团/盐和光
+![](https://assets.gnews.org/wp-content/uploads/2022/02/图片1-48.jpg)[图片来源](https://www.google.com/imgres?imgurl=https%3A%2F%2Fd1e00ek4ebabms.cloudfront.net%2Fproduction%2F782a37b0-6769-4383-a324-4964a0351abb.jpg&amp;imgrefurl=https%3A%2F%2Fwww.ft.com%2Fcontent%2F4d925bae-fa89-4e64-9063-0c01e3b5690c&amp;tbnid=SH6PJbo4v_7DnM&amp;vet=12ahUKEwiq)
+2月24日财联社报道，中共海关总署批准，允许俄罗斯全境小麦进口。
 
-整理：围剿维尼熊
-编辑：文泓
+俄罗斯对乌克兰发动战争引发了全球对避险资产的热潮，国际石油基准布伦特原油价格每桶上涨逾4美元，自2014年9月以来首次超过每桶100美元，不仅仅是原油贵金属市场，受俄罗斯入侵乌克兰战争影响，此时中共国小麦期货已涨停，价格飞涨之际，中共此时允许全境进口俄罗斯小麦，
 
-- ![](https://assets.gnews.org/wp-content/uploads/2022/02/6-44.png)图片来源：雅典娜设计组
+2022年2月8日北京冬奥会期间，中俄两国签订了新的1份合同：10年1亿吨石油、30年480亿立方天然气的合同，使用欧元结算，不使用美元，每逢事件，中共都在用实际行动来表明自己对俄罗斯入侵在乌克兰的支持。
 
+由于CCP新冠病毒和战争持续，一旦出现运输生产中断，战争影响油价暴涨，必定回抬高粮食价格，中共国经济危机进一步扩大，而粮食危机也随之加剧。
 
-2月23日据路透社报道，一位南非政府官员表示，南非劳工部正在与中国华为技术有限公司的一家子公司就可能的庭外和解进行谈判，劳工部指控华为没有遵守当地的招聘配额要求。
+信息来源：[海关总署：允许俄罗斯全境小麦进口](https://mi.mbd.baidu.com/r/BQ2lanCExy?f=cp&amp;rs=3931255381&amp;ruk=fAjvTKDNA9tzZXQ7Zje4kQ&amp;u=d445cfe682c6fccf&amp;urlext=%7B%22cuid%22%3A%22_aHyi_8nHa_28v8e0u2Mug8tS80v8v8-0iH1uli6H8lliBtolavRijf51OpWiSa1YDUmA%22%7D)
 
-劳工部引用2020年的一份查核报告称，南非华为近90%的员工是外籍人士。劳工部要求处以150万兰特(99,547美元)罚款，相当于南非华为2020年全年营收的2%。
-
-目前南非正面临自1994年白人少数族裔统治结束以来最高的失业率。南非当局本月将南非华为技术公司告上法庭，称该公司没有达到60%的员工必须是南非人的要求。
-
-劳工部的律师告诉路透社，该部官员周一会见了华为技术南非公司的代表。
-
-华为公司证实，它已经“进入谈判，以达成和解协议”，该案件在等待结果。该公司在回应询问的电邮中称，相关讨论持续进行中，华为承诺充分配合劳工部。该公司拒绝评论指控，称无法对进行中的法律事务置评。
-
-参考链接：[独家：南非劳工部与华为子公司谈判](https://cn.reuters.com/article/south-africa-labor-huawei-talk-0223-idCNKBS2KS0UT)
-
-*发布：tianzhihuan*
-
-**更多资讯，请关注：**
-[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
-[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：Himalayaathena
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
-[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
-[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
-
+*校对：东京樱花团/喜马拉雅的微尘*
+*发布：东京樱花团/tdownc2p*
+![](https://assets.gnews.org/wp-content/uploads/2022/02/yht-9.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
