--- a/gnews/29.md
+++ b/gnews/29.md
@@ -1,31 +1,15 @@
 ---
-title: 若俄乌战争爆发 土耳其或将关闭黑海海峡
+title: 五月花简报（02/23/2022）
 ---
-`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/2057308/)
+`mayflowertranslate` [轉載自GNews](https://gnews.org/zh-hans/2057460/)
 
-#### 【雅典娜快讯】，紧贴时代脉搏
+编辑：波士顿五月花—-冲天一怒
 
-整理：围剿维尼熊
-编辑：朝花夕拾
-![](https://assets.gnews.org/wp-content/uploads/2022/02/截圖-2022-02-02-下午10.11.59-22.png)
-根据路透社2月24日报道，乌克兰驻土耳其大使瓦西尔·博德纳（Vasyl Bodnar）周三表示，乌克兰认为俄罗斯军舰在其黑海边境附近的出没是一种威胁，如果莫斯科入侵，乌克兰将要求土耳其考虑对俄罗斯船只关闭两条水路。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/70CCC08E-5D14-4745-9C17-002349570F0B.jpeg)
 
-博德纳（Bodnar）在接受路透采访时被问及俄罗斯军舰在乌克兰沿海附近出没时表示，这些船只对乌克兰构成巨大危险，俄罗斯海军在黑海的集结是“压倒性的”。
+*发布：思澈*
 
-根据1936年签订的《蒙特勒公约》，北约成员国土耳其对连接地中海与黑海的博斯普鲁斯海峡和达达尼尔海峡拥有控制权。该公约赋予安卡拉管理海军军舰过境的权力，并在战时或受到威胁时向外国军舰关闭海峡。
 
-周三有媒体援引土耳其总统埃尔多安的话报导，土耳其与乌克兰和俄罗斯都有良好的关系，不能放弃同任何一国的关系，将采取措施确保现有关系不变。
-
-参考链接：[如果战争爆发 乌克兰将要求土耳其关闭俄罗斯通往黑海的水道–乌大使](https://cn.reuters.com/article/ukraine-turkey-russia-blacksea-0223-wedn-idCNKBS2KT045)
-
-*发布：tianzhihuan*
-
-**更多资讯，请关注：
-**[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
-[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：Himalayaathena
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
-[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
-[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
 
  
 
