--- a/gnews/31.md
+++ b/gnews/31.md
@@ -1,87 +1,37 @@
 ---
-title: 文贵直播大事记——七哥为什么要讲昆仑山脉和帕米尔高原（四）
+title: 拜登及联合国安理会多国代表谴责俄罗斯无端袭击乌克兰
 ---
-`GNotes真.贵.记.录` [轉載自GNews](https://gnews.org/zh-hans/2057301/)
+`秘密翻译组-即时新闻播报组` [轉載自GNews](https://gnews.org/zh-hans/2057392/)
 
-**掠杀篇**
-![](https://assets.gnews.org/wp-content/uploads/2022/02/20220112掠杀篇.jpg)
-**【编者：内容摘录于文贵大直播，力求保持文贵先生话语的原汁原味，标记了直播日期和时间点，愿读者重温直播以获取更多信息**】
-[2022.01.12文贵大直播GTV链接](https://gtv.org/video/id=61df44f3a6dfdd6031535439)
-[2022.01.09文贵直播大事记—人物篇（三）：中南坑第一高人曾庆红](https://gnews.org/zh-hans/1907149/)
-[2022.01.12文贵直播大事记—七哥为什么要讲昆仑山脉和帕米尔高原（一）](https://gnews.org/zh-hans/2005894/)
-[2022.01.12文贵直播大事记—七哥为什么要讲昆仑山脉和帕米尔高原（二）](https://gnews.org/zh-hans/2005894/)
-[2022.01.12文贵直播大事记—七哥为什么要讲昆仑山脉和帕米尔高原（三）](https://gnews.org/zh-hans/2005894/)
+**作者:  **青衣
+![](https://assets.gnews.org/wp-content/uploads/2022/02/1-363.jpg)
+美国总统拜登（图片来自网络）
 
-## 七哥当年到昆仑山、喜马拉雅都是天意
+俄罗斯2月24日发动对乌克兰的军事攻击。美国总统拜登以及正在联合国出席安理会紧急会议的多国代表，均对俄罗斯无端袭击乌克兰做出谴责。
 
-就像我当年，就像我这号人，到巴基斯坦、印度、昆仑山、喜马拉雅都转完，我不认为那是我的故意啊。中国那时候那有几个人懂得上那去转悠去是不是？我要去的话，我就带你七嫂子去了，那你七嫂子不得吓死吗是不是？
+据《大纪元》2月24日报道，在俄罗斯总统普京宣布于乌克兰东部顿巴斯地区（Donbas）采取军事行动后不久，美国总统拜登在周四清晨发布的一份声明中谴责了俄罗斯的行动。
 
-我第一次去新疆是1983年，84年我去了两次。没有那个时候去新疆，你不知道新疆是啥样子。那时候的新疆，我跟人家开着大卡车，到那去运羽绒服去。
+拜登在声明中表示，当乌克兰人民遭受俄罗斯军队无端、无理的攻击时，全世界的人都在为他们祈祷。普京总统选择了一场有预谋的战争，将带来灾难性的生命损失和人们的苦难。俄罗斯必须为这次攻击所带来的死亡和破坏负上全责。美国和盟友及伙伴将会以一致的、果断的方式做出回应。全世界都将追究俄罗斯的责任。
 
-老天爷呀，从在新疆真正吃过路边的馕，看过新疆的舞蹈，后来到了整个的吐鲁番，你吃过真正的哈密瓜。你没真正的看过南疆，你不懂得南疆和北疆，你不知道新疆什么样。你不到帕米尔高原，你不真正的到过喀什，你就不知道什么叫天山。你不知道天山，你不知道什么叫帕米尔，你也不知道什么叫昆仑山。你不到西藏喜马拉雅7峰，你不知道什么叫喜马拉雅。
+拜登还补充称，他将在当日上午与七国集团（G7）领导人会面，并将于次日宣布美国及其盟友对俄罗斯施加的 “进一步后果”。
 
-这就是天意。然后你七哥就被关进看守所去了。你说你七哥不被关进看守所去也就拉倒了是吧。关进看守所关键抓的人要都是小偷小摸，你七哥现在肯定天下第一偷，是不是？“偷皮子，挂码子，专扒老太太裤衩子”。那时候中国最高境界。是吧？掏人家腰包，泡妞，欺负老年人，那是个英雄啊，流氓的英雄啊，是吧？
+俄罗斯总统普京此前表示，他已授权军队在乌克兰顿巴斯地区开展一项“特别军事行动”。许多分析人士认为，这是俄罗斯正式入侵乌克兰的开始。
 
-我从过去被老家誉为的流氓，进了看守所出来以后，就成了真正的要拯救人类，拯救中国人。在这之前你想想我在“8964”，那个年代，我能卖掉摩托车支持“六四”去 ，那你去想想我是啥人？那是有天意的，那不是开玩笑的吧？
+在普京宣布军事行动的同时，联合国安理会正准备召开紧急会议。消息传出后，各国代表纷纷谴责莫斯科，要求其恢复理性，停止战争。
 
-所以说这一切都是天意！你从这天意中你会看到“天机”，有天意罩着你就有天机——天机就是老天爷给了你最大的老天安排的一个机会，让咱爆料革命、新中国联邦在美国、在西方，我一次一次的躲过了共产党的最凶残的攻击———超限战。关键你在美国你得有人支持你呀。
+英国驻联合国大使芭芭拉·伍德沃德（Barbara Woodward）对莫斯科的行动予以谴责，并称“普京的手指已扣在扳机上”。
 
-文贵大直播2022.01.12-2:56:40
+美国驻联合国大使琳达·托马斯·格林菲尔德（Linda Thomas-Greenfield）则指责普京在联合国安理会开会寻求和平的同时，发出了战争的信息，完全不顾其安理会的责任。她呼吁安理会立即采取行动。
 
-## 中共在**西藏新疆掠夺**、要命
+乌克兰驻联合国大使谢尔盖·基斯利奇亚（Sergiy Kyslytsya）本周第二次在联合国安全理事会的紧急会议上敦促成员国们“停止战争”。
 
-西藏，在那曲，我说过那曲现在虫草一年是多少钱，你上网上查查去。战友现在在下边儿说说，那曲。那曲是全世界拥有路虎最多的地方、美国悍马最多的地方、现金最多的地方、保险箱最多的地方。
+极具讽刺的是，俄罗斯作为联合国安理会五大常任理事国之一，负责主持本月的所有安理会活动。基斯利奇亚引用联合国宪章中“只有爱好和平的国家才能进入安理会”的规定，要求俄罗斯大使放弃他作为安理会主席的角色。
 
-西藏人在养牦牛的、西藏人卖牦牛肉的、西藏人买药材的、西藏人卖矿的，最厉害的是值多少钱？你去查查。
+新闻链接：
 
-我再告诉你，西藏西半部，中国叫黄金部队，当年是刘源管。黄金部队在西藏每年开采的黄金是多少？特别是一些特殊的矿，像什么钴啊，什么镍——我搞不清楚啊，十几种重金属都是在西藏。西藏的木头、西藏的矿、西藏的水、西藏的虫草、西藏的药材，几乎是中国的超过30%，甚至有的是6、70%。
+[https://www.epochtimes.com/gb/22/2/24/n13600901.htm](https://www.epochtimes.com/gb/22/2/24/n13600901.htm)
 
-就像新疆帕米尔高原的水，那是万年的水呀！帕米尔高原它是整个印度洋、大西洋的水上来以后，被挡住，然后流下去在石头里。昆仑山是石山，不是中国内陆的土山。那个万年的水被开发出来，你喝是啥感觉！你想想。
-
-### 这就是为什么现在光谈昆仑山
-
-这就是为什么现在光谈昆仑山。哪天给你谈谈鄂尔多斯，啥叫鄂尔多斯啊？阿尔卑斯山是干啥的啊？欧洲的阿尔卑斯山，你知道欧洲的阿尔卑斯山的依云老板，都喝帕米尔的水：800块钱一瓶。
-
-新疆有多少被掠夺啊？它不是上你那儿去吃馕，去吃你羊肉串去了，你在那“杠杠杠”什么舞去了，是吧？它是要你的命去了。
-
-那么在西藏有多少地方，我告诉你，你没看过，有多少西藏驻军的军营、别墅。那是在什么时候，大家记住啊，那是在….拜美国所赐…2000以前几乎很少，还都是比较中国式的所谓享受：盖个大房子、军营。大家找的那个地方的是个中共的军营。那个军营是个导弹部队，还有防导弹部队，还有发射卫星使用的，那个地方我很清楚。那个不是什么基地啊，基地是在山里边儿的，你根本看不见的。
-
-大家要看一看，在2000年加入中国这个，特别是奥林匹克有了以后，加入世贸以后，中国从1.3万亿美元到达15万亿美元中间，中国，记住，1977年的中国GDP是500亿美元，它连盘古的一半资产都没有，是吧？现在是15万亿美元。
-
-在那个时候，你看，发现在西藏、新疆，昆仑山、喀什、帕米尔高原、尕孜玛峰（音），所有这些地方，出现了无数豪宅，特别是你去看看所谓的“小瑞士”，还有像墨脱，都是当官享受的地方，领导度假的地方。
-
-就像当年中国最惨的时候，1979年在…那个珠海盖的避暑山庄，你想想79年啊，邓小平刚刚掌权，盖的避暑，珠海避暑山庄，那个里边儿的豪华已经完全是日本化，邓小平骨子里边儿喜欢日本、喜欢美国，你去看看现在还在那儿呢，避暑山庄，重来不对外。
-
-所以那个直升机在那儿逛来逛去，一个“黄金部队”一年都弄走多少百吨黄金都不止，那虫草是一年8、90%都给共产党去养的。
-
-## **中共收割“比虫草还旺盛”的处女**
-
-那处女都…享受西藏、新疆、哈萨克斯坦、彝族、达斡尔族处女是领导的每年必然有的活动。你以为张高丽只跟彭帅谈恋爱呀？你相信吗？那你比你相信张高丽是处男还可怕。他给多少人讲过“宇宙无限大地球是一粒沙”呀！像七哥这号人，他们都说：“哎呀，赶快来西藏、来新疆，下次来我们有十个处女给你按排着，跟你属相都合的。” 你听这话了吗？跟你属相还得合！
-
-就你问这问题是，在他们是正常生活好不好？我曾经问过一个当时“黄金部队”的人，我说你们这么弄，有多少姑娘不都被你们弄死个球的了吗？他说：你知道西藏一年、新疆一年新生儿多少吗？啊这是割不完的韭菜啊，长不完的，芙蓉花啊，长不完的黑莲呐，用之不尽的，他说比那虫草还旺盛。
-
-你要说在西藏“黄金部队”你没弄金子，在西藏边防部队没搞过处女….当过厅级干部你没搞过处女你绝对不是正常人，在共产党：“那你就不是我党的好党员，你咋为人民服务了？”
-
-文贵大直播2022.01.12-03:13:29
-
-## 找了昆仑山一个解放军基地就揭秘了？
-
-我们战友们，所有你们对昆仑山，对喜马拉雅山的解释，最高境界的就是叶钊颖去过，上过山，这是最高境界的：觉得雪山纯洁。
-
-找了昆仑山一个正常的解放军军事基地你就以为揭秘了？你能知道几个峰你就不错了，你想想多可悲呀。
-
-连这哈萨克族的青青草原她知道新疆啥呀？她在新疆享受过什么样的新疆生活，她去过几次喀什，去过几次帕米尔，是不是？喝过多少次帕米尔高原的水？你真的以为你知道嘛，你啥都不知道。
-
-这就是共产党，把所有中国人卷在一个圈里，在家里边儿，在东北的炕上，在中国的小房子里边儿，在农民的地里边儿，在南方的所谓工厂里，让你终生只能眼观土地，然后你的腚撅给共产党，它想干啥就干啥。没比中国再可怜的了。
-
-就今天的阿富汗，我认为都比中国人幸福。现在每时每刻我在说阿富汗在饿死人，是共产党的原因。阿富汗人最起码还有个“教”的选择呢，我们中国人没有比再可怜的了，就这个羊群之可怜，你说中国人是羊的时候太侮辱羊了，太侮辱羊了。羊还能长出个毛，还能…呼吸呼吸，吃个健康地草。
-
-中国人吃啥？绝大多数是化学食品。日本人你看到，日本人，见日本人吃中国人的调料，吃中国饭的吗？你在日本见过吗？只要中国来的料，日本人连闻都不闻，扔得远远的。你觉得都是人类还有比我们再可怜的吗？
-
-文贵大直播2022.01.12-03:20:03
-
-整理/发布：Mindy10
-出品：雅典娜速记组
+* * *
 
  
 
