--- a/gnews/35.md
+++ b/gnews/35.md
@@ -1,28 +1,12 @@
 ---
-title: 有声｜铁链女最新报告激怒网民 8百校友要求公开信息
+title: 加拿大卡车自由车队受到网络恐怖分子和政府立法的攻击
 ---
-`秘密翻译组-即时新闻播报组` [轉載自GNews](https://gnews.org/zh-hans/2057204/)
+`秘密翻译组-精翻组 G-Translators/Elite Team` [轉載自GNews](https://gnews.org/zh-hans/2057322/)
 
-**By:秘翻新闻**
+02/16/2022 维瓦∙弗雷：由于捐赠网站被黑客入侵，加拿大卡车司机车队的捐赠者名单被泄露并公开。来自国家资助的加拿大广播公司的记者联系了被黑客发布名单上的捐赠者，导致捐赠者感到害怕。刑法没有追溯性的，在紧急法令声明发布之前向注册为非营利组织捐款的人不应该被称为嫌疑人。
 
-**2022-02-24**
-![](https://assets.gnews.org/wp-content/uploads/2022/02/224.jpg)**图片源自:原文**
-据新唐人北京时间2022年02月24日讯，江苏省“铁链女”调查报告出炉，激怒海内外网民。多所名校校友在网上发起联署，要求江苏政府公开报告中的相关信息。网传倡议书截图显示，签名校友已超过800人，涉及中国人民大学、北京大学、清华大学和山东大学等。
+By： 【秘密翻译组-精翻组 G-Translators/Elite Team】
 
-倡议书指，根据中共的《政府信息公开条例》，公民有权要求政府公开行政信息。倡议书中表示，江苏调查组当天公布的所谓调查报告，只轻描淡写地处置了部分丰县官员，同时继续咬定“铁链女”就是小花梅，无视两者容貌差异巨大的事实，甚至声称容貌差异大是因为年龄因素。
-
-网民普遍怀疑“铁链女”就是四川李莹。江苏最新调查报告出台后，海内外网友开始了名为《同一个人》的P图游戏，讥讽中共当局。网民还仿照指鹿为马，创造了一个新成语：指莹为梅。
-
-此外，网上也掀起了针对调查报告的找漏洞比赛。有网民嘲讽，该报告的最大成功之处，就是让所有人都不相信。
-
-链接 https://www.ntdtv.com/gb/2022/02/23/a103355751.html
-
-密翻新闻 二丫编辑报道
-
-发布: 文橙
-
-* * *
-![](https://assets.gnews.org/wp-content/uploads/2022/02/1-321.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
