--- a/gnews/37.md
+++ b/gnews/37.md
@@ -1,21 +1,32 @@
 ---
-title: 中日财经爆&#124;日本百货公司1月份销售额大涨15.6%
+title: 若俄乌战争爆发 土耳其或将关闭黑海海峡
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2057180/)
+`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/2057308/)
 
-撰稿：东京樱花团/peterwong
-![](https://assets.gnews.org/wp-content/uploads/2022/02/image-2220.png)[图片来源](https://www.google.com.hk/imgres?imgurl=https%3A%2F%2Fwww.japan-guide.com%2Fg20%2F2072_03.jpg&amp;imgrefurl=https%3A%2F%2Fwww.japan-guide.com%2Fe%2Fe2072.html&amp;tbnid=eKrL5_n6yeSCUM&amp;vet=12ahUKEwi0tv2G7pf2AhUoHKYKHUxCATUQMygCegUIARCxAQ..i&amp;docid=xwLgDB_QiZOwTM&amp;w=8)
-日本百货公司协会2月24日宣布，全国百货公司1月份的销售额比上年同期增长15.6%，达到约3751亿日元。
+#### 【雅典娜快讯】，紧贴时代脉搏
 
-这是连续第四个月的同比增长，去年因紧急状态迫使百货公司缩短营业时间，致使营业额下降，由于气温下降，大衣等冬季服装的销售也很强劲。
+整理：围剿维尼熊
+编辑：朝花夕拾
+![](https://assets.gnews.org/wp-content/uploads/2022/02/截圖-2022-02-02-下午10.11.59-22.png)
+根据路透社2月24日报道，乌克兰驻土耳其大使瓦西尔·博德纳（Vasyl Bodnar）周三表示，乌克兰认为俄罗斯军舰在其黑海边境附近的出没是一种威胁，如果莫斯科入侵，乌克兰将要求土耳其考虑对俄罗斯船只关闭两条水路。
 
-但是与2020年1月相比，销售额还是下降了18.8%，并没有恢复到中共病毒（新冠）疫情前的水平。
+博德纳（Bodnar）在接受路透采访时被问及俄罗斯军舰在乌克兰沿海附近出没时表示，这些船只对乌克兰构成巨大危险，俄罗斯海军在黑海的集结是“压倒性的”。
 
-消息来源：[１月の百貨店売上高、冬物好調で１５・６％増…感染拡大前の水準には戻らず](https://www.yomiuri.co.jp/economy/20220224-OYT1T50159/)
+根据1936年签订的《蒙特勒公约》，北约成员国土耳其对连接地中海与黑海的博斯普鲁斯海峡和达达尼尔海峡拥有控制权。该公约赋予安卡拉管理海军军舰过境的权力，并在战时或受到威胁时向外国军舰关闭海峡。
 
-*编辑：东京樱花团/喜马拉雅的微尘
-发布：东京樱花团/平安卿卿*
-![](https://assets.gnews.org/wp-content/uploads/2022/02/%E5%B1%8F%E5%B9%95%E6%88%AA%E5%9B%BE-2022-02-24-151921-1.png)
+周三有媒体援引土耳其总统埃尔多安的话报导，土耳其与乌克兰和俄罗斯都有良好的关系，不能放弃同任何一国的关系，将采取措施确保现有关系不变。
+
+参考链接：[如果战争爆发 乌克兰将要求土耳其关闭俄罗斯通往黑海的水道–乌大使](https://cn.reuters.com/article/ukraine-turkey-russia-blacksea-0223-wedn-idCNKBS2KT045)
+
+*发布：tianzhihuan*
+
+**更多资讯，请关注：
+**[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：Himalayaathena
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
+[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
+[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
