--- a/gnews/5.md
+++ b/gnews/5.md
@@ -1,131 +1,29 @@
 ---
-title: 乌克兰东部的炮击升级
+title: 北约部分国家开启《北大西洋公约》第4条意味着什么
 ---
-`洛杉矶盘古农场 HIMALAYA LA PANGU` [轉載自GNews](https://gnews.org/zh-hans/2057689/)
+`波士顿五月花农场金融部` [轉載自GNews](https://gnews.org/zh-hans/2057793/)
 
-[https://gtv.org/video/id=6215ed481408ee3a03a3b245](https://gtv.org/video/id=6215ed481408ee3a03a3b245)
+素材整理：波士顿五月花Vicky
+![](https://assets.gnews.org/wp-content/uploads/2022/02/Screen-Shot-2022-02-24-at-6.58.08-PM.png)图片来源：互联网
+CNN周四报道，北约成员国波兰、爱沙尼亚、拉脱维亚和立陶宛已经发起北约第4条，就俄罗斯对乌克兰的攻击在联盟内部展开磋商。
 
-Chuck Holton (Newsmax Foreign Correspondent)
-查克·霍尔顿（Newsmax 驻外记者）
+《北大西洋公约》第4条规定：”北约国家任何一方认为任何一方的领土完整、政治独立或安全受到威胁时，各方将共同协商。”
 
-Now Russia boasts over 200,000 troops along Ukraine’s border
-现在俄罗斯在乌克兰边境拥有超过200,000名士兵
+根据北约网站，第4条规定的协商可以导致30个成员国之间的集体行动。
 
-And this just just out from the Ministry of Defense here
-这个刚刚从国防部出来
+该网站称，自1949年联盟成立以来，第4条此前已被援引过六次，最近一次是在2020年2月，在叙利亚政府军在叙利亚北部反对派控制的地区发动的一次袭击中，数十名土耳其士兵被杀。
 
-that Russian tanks and armor are taking up attack positions
-俄罗斯坦克和装甲部队正在占据攻击阵地
+土耳其还曾四次援引第4条：一次是在2015年，向联盟通报其对国内恐怖袭击的反应；两次是在2012年土耳其战机在叙利亚北部被击落以及土耳其平民被叙利亚炮击致死后；还有一次是在2003年，土耳其要求联盟帮助其保护民众免受邻国伊拉克的战争灾害。在其中的两个场合，北约以军事援助作为回应，2012年派遣爱国者导弹以保护其免受叙利亚的攻击，2003年派遣飞机和导弹到土耳其东南部与伊拉克交界的地区。
 
-They’re no longer just driving in convoys
-他们不再只是在车队中驾驶
+波兰在2014年俄罗斯入侵乌克兰后援引了第4条，这次会议的结果是联盟国同意会进一步努力，共同抵御任何威胁。
 
-but they’re actually spreading out into attack positions along that Southern southeastern border
-但他们实际上正在沿着东南边界展开攻击阵地
+第4条与第5条是分开的，第5条是联盟的声明，即对北约一个成员国的攻击即被认为是对所有成员国的攻击。
 
-They are deciding to continue their military drills up in Belarus today
-他们决定今天继续在白俄罗斯进行军事演习
-
-and yesterday they they filmed what I would call a Hollywood worthy training exercise
-而且昨天他们拍摄了我称之为好莱坞式的训练练习
-
-firing off dozens and dozens of ground to air missiles
-发射了数十枚地对空导弹
-
-that would have taken out Ukraine’s entire Air Force about four times over just in those exercises
-仅仅在那些演习中，这将把乌克兰的整个空军摧毁大约四倍
-
-And obviously, that’s a message meant to be sent to the west, not to Ukraine
-很明显，这是一条要发送给西方的信息，而不是给乌克兰
-
-and that’s the reason I think people here in Kiev are still going about their business
-这就是我认为基辅的人们仍在继续做他们的事情的原因
-
-and shopping and doing whatever they normally do
-购物和做他们通常做的事
-
-because they understand that this is a conflict between the West and between Russia
-因为他们明白这是西方与俄罗斯之间的冲突
-
-Unfortunately, they’re the political football in the middle
-不幸的是，他们是中间的政治足球
-
-Shaun Kraisman （Newsmax host)
-肖恩·克莱斯曼 (Newsmax 主持人）
-
-Yeah, again, there have been talks at the people you spoken to though again on the ground
-是的，再次与你交谈过的人进行了会谈，但又是在地面上
-
-and some you see and I continue to point out people just walking around as normal yet
-还有一些你看到的，我继续指出人们只是像往常一样四处走动
-
-you’ve got announcement of a potential kill list there and Ukraine
-已经宣布了一个潜在的杀戮名单，而在乌克兰
-
-Doesn’t seem like a lot of fear on the ground, at least in Kiev
-现场似乎没有太多恐惧，至少在基辅
-
-Chuck Holton
-查克·霍尔顿
-
-You know, there there have been so much disinformation
-你知道，有这么多的虚假信息
-
-that’s put out by the Russian media and Russian Foreign Service
-这是俄罗斯媒体和俄罗斯外交部发布的
-
-that they are saying that they’re capturing teams of Ukrainian terrorists inside the Donetsk region
-他们说他们正在顿涅茨克地区抓捕乌克兰恐怖分子小队
-
-actually, inside Russian territory on the other side of the occupied zone
-实际上，在占领区另一边的俄罗斯领土内
-
-and that they say they just captured some military infantry vehicles from Ukraine
-他们说他们刚刚俘获了一些来自乌克兰的军用步兵车辆
-
-that drove all the way across somehow that occupied zone
-以某种方式一路驶过被占领的区域
-
-and were captured as they were crossing into Russia
-而且在他们进入俄罗斯时被俘
-
-The people here in Kiev understand that there’s not one frame or one word
-在基辅这里的人明白，没有一个框架或一个词
-
-that comes out of that, the Russian media that is true
-由俄罗斯媒体而来的说的是真的
-
-And in talking with people who have been in contact with folks inside the occupied zones
-并与与占领区内的人有过接触的人交谈
-
-they know it too, and so, again
-他们也知道, 所以，再一次
-
-until the tanks are rolling and the bombs are falling
-直到坦克滚滚而来，炸弹落下时
-
-people here gonna keep on going
-这里的人会继续按平常做事
+原文报道：[Some of NATO’s eastern countries have trigged Article 4. Here’s what that means](https://edition.cnn.com/europe/live-news/ukraine-russia-news-02-23-22/index.html)
 
 * * *
 
-Date:02/21/2022
-原视频标题:Shelling in eastern Ukraine escalates
-乌克兰东部的炮击升级
-原视频日期：2022/02/21
-原视频链接[**https://twitter.com/newsmax/status/1495782265565110272?s=24**](https://twitter.com/newsmax/status/1495782265565110272?s=24)
-任务编号：KE413（379
-视频时间段 : 0:00-2:25
-英听校： 洛杉矶盘古农场 – Layka
-翻译： 洛杉矶盘古农场 – Layka
-翻译终校：洛杉矶盘古农场 – Mike Li
-字幕+视频制作：洛杉矶盘古农场-文新
-审片：洛杉矶盘古农场-银龙
-发布：洛杉矶盘古农场-恩典
-[![](https://assets.gnews.org/wp-content/uploads/2021/03/WhatsApp-Image-2021-06-26-at-22.05.30.jpeg)](https://discord.gg/2vuvRm7z6U)
-洛杉矶盘古农场欢迎您加入:(或点击上方图片）
-
-[https://discord.gg/2vuvRm7z6U](https://discord.gg/2vuvRm7z6U)
+*编辑&发布：Vicky*
 
  
 
