--- a/gnews/6.md
+++ b/gnews/6.md
@@ -1,26 +1,94 @@
 ---
-title: COVID-19 最新情报｜英格兰数据 8-10%儿童接种疫苗后缺课一次
+title: 共产主义是所谓的乌托邦，社会主义把它们（这些国家）连接在一起，最终中共成了孤家寡人
 ---
-`關注組` [轉載自GNews](https://gnews.org/zh-hans/2057685/)
+`洛杉矶盘古农场 HIMALAYA LA PANGU` [轉載自GNews](https://gnews.org/zh-hans/2057775/)
 
-**撰文｜疫情关注组 / 发布时间｜24/02/2022**
-![](https://assets.gnews.org/wp-content/uploads/2022/02/Movie-Studio-1.png)**更多资讯请关注官方盖特（Please follow our Gettr：**[**https://gettr.com/post/pl6k0218bf**](https://gettr.com/post/pl6k0218bf)**)**
-英媒[《THE EXPOSE》](https://dailyexpose.uk/2022/02/23/800k-kids-missed-school-adverse-reaction-covid-jab/)23日报导，英格兰政府在去年向12-15岁的儿童提供新冠疫苗接种，英格兰首席医疗官 Chris Whitty向JCVI\*(注1)表示，不建议让12岁以上的儿童接种新冠疫苗，其理由是统计数据显示，新冠疫苗不能预防感染或阻断传播。然而被以接种新冠疫苗的益处略大于已知的潜在危害为由驳回。Chris Whitty不建议12岁以上儿童接种疫苗的理由是，据统计数据，新冠疫苗不能预防感染或阻断传播。。
-![](https://assets.gnews.org/wp-content/uploads/2022/02/截圖-2022-02-24-下午4.12.08.png)UK Health Security Agency:[COVID-19 vaccine surveillance report Week 7](https://assets.publishing.service.gov.uk/government/uploads/system/uploads/attachment_data/file/1055620/Vaccine_surveillance_report_-_week_7.pdf)
-上图数据为2022年1月23日至2月13日期间，各年龄段每十万人中“未接种疫苗(蓝色)、接种三剂疫苗(红色)”新冠确诊的数量。由图表可知，接种三剂疫苗都是高于未接种疫苗的。
+[https://gtv.org/video/id=6215fa481408ee3a03a3b5e3](https://gtv.org/video/id=6215fa481408ee3a03a3b5e3)
 
-此外，JCVI在发表意见当中写道，5-11岁儿童在接种新冠疫苗后，大约有8-10%的儿童至少缺课一天。在美国，此年龄段接种新冠疫苗人数超过800万名，若依照JCVI的统计数据将会有近80万名儿童因疫苗不良反应而被迫缺课。
+郭文贵
+Miles Guo
 
-韩国，近日确诊人数快速增加，政府表示正在考虑将5-11岁儿童纳入接种对象，但尚未有定论。韩国政府统计数据显示，21日新增9万9573例确诊中，0-9岁与10-19岁合计占比达到三成，且每10万名确诊个案中0-9岁及10-19岁的比例高出其他年龄层许多。对比纽西兰官方统计数据（下图），0-19岁区间的确诊率总和约为33%，与韩国政府数据相近。
-![](https://assets.gnews.org/wp-content/uploads/2022/02/截圖-2022-02-24-下午4.46.38.png)[來源](https://www.health.govt.nz/covid-19-novel-coronavirus/covid-19-data-and-statistics/covid-19-case-demographics#vaccinations-details)
-**有趣的是，即便韩国政府统计上以0-9、10-19为区间段，但政府仍考虑开放5-11岁儿童接种新冠疫苗**。据报导，日本韩国皆是跟随美国政策，宣布开始为5-11岁儿童接种疫苗。
+爆料革命
+Whistleblowers movement
 
-新加坡，早在去年便宣布预计12月底为5-11岁族群接种疫苗，预计涵盖30万名儿童，截至1月31日已经接种了23万8253剂。照JCVI的相关数据，可能会有3万名儿童接种后出现缺课情形。台湾政府则于1月13日宣布，5-11岁儿童有望在下半年接种新冠疫苗。
+你不知不觉中你发展出了一个新中国联邦誓死跟随（的人）
+You has unwittingly developed lifetime followers to the New Federal State of China (NFSC)
 
-- 註1（Joint Committee on Vaccination and Immunisation，可译为疫苗及免疫专家小组））
+是用金钱和生殖器睾丸换不来的这种结果和信任
+This kind of result and trust cannot be exchanged with money and sex
 
+那就是我们让大家不打疫苗而诞生的新中国联邦全世界的盟友
+Those are the NFSC’s allies around the world that were born by setting stop people from getting vaccinated
 
-来源｜ [中央社](https://www.cna.com.tw/news/aopl/202202220259.aspx)、[光明日報](https://guangming.com.my/%E6%96%B0%E5%8A%A0%E5%9D%A110%E5%90%8D%E5%85%92%E7%AB%A5-%E6%89%93%E7%96%AB%E8%8B%97%E5%BE%8C%E7%8F%BE%E5%9A%B4%E9%87%8D%E4%B8%8D%E8%89%AF%E5%8F%8D%E6%87%89)、[《THE EXPOSE》](https://dailyexpose.uk/2022/02/23/800k-kids-missed-school-adverse-reaction-covid-jab/)、[New Zealand Ministry of Health](https://www.health.govt.nz/covid-19-novel-coronavirus/covid-19-data-and-statistics/covid-19-case-demographics#vaccinations-details)
+这个没让他们打疫苗
+This having people unvaccinated
+
+他们活下来以后，跟我们之间的关系就会变成了什么？
+what have their relationship with us become after they survived?
+
+生死关系，不分种族、不分老少、不分男女、不分地域
+It’s the relationship of life and death, regardless of race, age, gender and region
+
+没有任何肤色的区别、没有任何宗教的隔离
+without any distinction of skin color and any religious segregation
+
+你们没有想到，新中国联邦这一票干大了
+You may not expected that the NFSC have done a huge on this matter
+
+共产主义是所谓的乌托邦社会主义把它们连在了一起
+Communism is the so-called utopian socialism that connects them together
+
+古巴、委内瑞拉、前苏联是吧，前老挝是吧，坦桑尼亚、乌干达是吧
+Cuba, Venezuela, the Soviet Union, the former Laos, Tanzania, Uganda, right?
+
+现在你看都怎么样了？
+Now, look what happened?
+
+剩余共产党了
+The CCP is left alone
+
+那我们新中国联邦没有要你一分钱
+Our NFSC has not asked you for a penny
+
+没杀任何人
+has not killed any one individual
+
+没像当年柬埔寨杀那么多人
+We are not like Cambodia back then which killed a mass of people
+
+没有红色高棉, 没有越南的社会主义
+We do not have the Khmer Rouge and the socialism in Vietnam
+
+但是我们救了你的命
+But we have saved your life
+
+救了你全家的命
+We have saved your whole family
+
+我们应该叫救命主义吧
+Shouldn’t we be called the lifesavinglism?
+
+* * *
+
+Date: 02/15/2022
+原视频标题:
+共产主义是所谓的乌托邦，社会主义把它们（这些国家）连接在一起，最终中共成了孤家寡人。新中国联邦因传播疫苗真相，在不知不觉中发展出了全世界的盟友，誓死跟随，称作“救命主义”也不为过。
+Communism is a so-called utopia, socialism connects some countries together, and in the end, the CCP is left alone. Because of the disseminating of the truth about vaccines, the New Federal State of China has unwittingly developed allies around the world who swear to follow. It would not be exaggerating if we called the lifesavinglism.
+
+原视频日期：2022/02/11
+原视频链接: [**https://gettr.com/post/purmth1c4e**](https://gettr.com/post/purmth1c4e)
+任务编号：KC466（3787）
+视频时间段 : 0:00-01:35
+英听校：洛杉矶盘古农场 – 郭班之樱
+翻译：洛杉矶盘古农场 – 郭班之樱
+翻译终校：洛杉矶盘古农场 – Mike Li
+字幕+视频制作：洛杉矶盘古农场-青梅煮酒
+审片：洛杉矶盘古农场-银龙
+发布：洛杉矶盘古农场-恩典
+[![](https://assets.gnews.org/wp-content/uploads/2021/03/WhatsApp-Image-2021-06-26-at-22.05.30.jpeg)](https://discord.gg/2vuvRm7z6U)
+洛杉矶盘古农场欢迎您加入:(或点击上方图片）
+
+[https://discord.gg/2vuvRm7z6U](https://discord.gg/2vuvRm7z6U)
 
  
 
