--- a/gnews/7.md
+++ b/gnews/7.md
@@ -1,35 +1,90 @@
 ---
-title: 蔡英文總統指示加強台灣海峽周邊軍事動向監視與防禦
+title: 防火墙是中国人精神里的墙
 ---
-`西班牙巴塞罗那喜悦农场` [轉載自GNews](https://gnews.org/zh-hans/2057667/)
+`洛杉矶盘古农场 HIMALAYA LA PANGU` [轉載自GNews](https://gnews.org/zh-hans/2057752/)
 
-翻譯:宮米葉
+[https://gtv.org/video/id=6215ee151408ee3a03a3b272](https://gtv.org/video/id=6215ee151408ee3a03a3b272)
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/image-2248-edited-2.png)nhk.or.jp
+共产党在就永远有防火墙
+El Partido Comunista siempre tendrá un cortafuegos
 
-鑒於圍繞烏克蘭局勢的緊張程度急速加劇，台灣總統蔡英文23日表示，考慮到中共國的威脅，指示軍方等加強對台灣海峽周邊軍事動向的監視和防禦。
-據台灣總統府報道，蔡總統23日收到了上月成立的研究烏克蘭局勢特別工作組的報告。
+防火墙不是物理化防火墙
+El cortafuegos no es un cortafuegos físico
 
-在這其中，蔡英文譴責“俄羅斯侵犯烏克蘭的主權”，同時說：“台灣作為國際社會的一員，會敦促所有各方繼續通過和平與理性的手段解決爭端。”
+它是一个是意识形态
+Es una ideología
 
-同時指示軍方加強高對台灣海峽周邊軍事動向的監視和防禦水平，並繼續加強對任何事態立即作出反應的防備工作。
+它是一个国家恐怖主义的防火墙
+Es un cortafuegos del terrorismo nacional
 
-此外，蔡英文還說“台灣和烏克蘭在地緣戰略、地理環境和國際供應鏈的重要性方面有著根本的不同”，同時要求各機構加強對外國勢力企圖利用烏克蘭緊張局勢在台灣引發恐慌和不穩定的虛假信息努力保持高度警惕。
+防火墙根本不存在
+El cortafuegos no existe en absoluto
 
-蔡英文23日的講話雖然並未點名中共國，但她上月表示，“台灣長期面臨中共國的軍事威脅，我們對於烏克蘭的處境感同身受”，她對中國趁著烏克蘭局勢即將採取的行動表現出強烈的警戒感。
+就像那个谷爱凌说的
+Así como dijo Gu Ailing
 
-中共國新聞發言人批評“台灣是在利用烏克蘭局勢”
+你上谷歌, 上苹果上下载一个VPN就可以翻墙了嘛
+Vas a Google, Apple y descargas una VPN para eludir la censura
 
-針對烏克蘭形勢下臺灣對中共國的警戒不斷增強，中共國政府負責對台政策的國務院台灣事務辦公室新聞發言人馬曉光在23日的新聞發布會上表示：“民進黨當局配合美西方輿論，借烏克蘭問題惡意炒作所謂大陸‘軍事威脅’。當前臺灣海峽緊張局勢的根本原因是民進黨當局和“台獨”勢力勾連外部勢力不斷進行謀‘獨’挑釁。“批評蔡英文政權。
+这话都说了
+Está todo dicho
 
-來源：【nhk.or.jp】[蔡英文総統 台湾海峡周辺の軍事動向 監視と警戒強化など指示](https://www3.nhk.or.jp/news/html/20220223/k10013497811000.html?utm_int=word_contents_list-items_001&amp;word_result=%E4%B8%AD%E5%9B%BD%E3%83%BB%E5%8F%B0%E6%B9%BE)
+你觉得她说的话不是真的吗? 是真的
+¿Tú crees lo que ella dijo no es cierto? Es verdad
+
+真要想翻墙不存在墙
+Si realmente quieres eludir el muro, esta cosa no existe
+
+是中国人心里边儿精神上那个墙
+Es el muro mental en el corazón del pueblo chino
+
+谷爱凌就在国内呢
+Gu Ailing está en China
+
+你都相信这种事情
+Si crees este tipo de cosas
+
+那有墙吗
+¿Realmente existe muro?
+
+墙在你心里边儿
+El muro está en tu corazón
+
+在你脑子里边儿
+En tu mente
+
+真正的墙就是共产党
+El verdadero muro es el Partido Comunista
+
+不把共产党灭了, 你灭什么墙
+Si no eliminas al Partido Comunista, qué tipo de muro estás destruyendo
+
+战友们别天真, 别天真, 别天真
+Compañeros luchadores, no sean tan inocentes, no sean inocentes
+
+我听到你问这问题的时候我就捉急
+Me pongo nervioso al escuchar que me haces esta pregunta
 
 * * *
 
-審核: 宮米葉
-校對: 天天
-發布：花羽
-![](https://assets.gnews.org/wp-content/uploads/2022/02/西喜-8.jpeg)
+日期：02/21/2022
+原视频标题：防火墙是中国人精神里的墙
+El Cortafuegos es el muro que hay dentro del espíritu chino
+原视频日期：02/14/2022
+原视频网址：[**https://gettr.com/post/pucsbb2f1e**](https://gettr.com/post/pucsbb2f1e)
+任务编号：KC463（3747）
+视频时间段：0:00-01:01
+西听校：洛杉矶盘古农场- 霙霙（文霙）
+翻译：洛杉矶盘古农场- 小文萱
+翻译终校：洛杉矶盘古农场- 霙霙（文霙）
+字幕+视频制作：洛杉矶盘古农场- Jambo
+审片：洛杉矶盘古农场-银龙
+发布：洛杉矶盘古农场-恩典
+[![](https://assets.gnews.org/wp-content/uploads/2021/03/WhatsApp-Image-2021-06-26-at-22.05.30.jpeg)](https://discord.gg/2vuvRm7z6U)
+洛杉矶盘古农场欢迎您加入:(或点击上方图片）
+
+[https://discord.gg/2vuvRm7z6U](https://discord.gg/2vuvRm7z6U)
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
