--- a/gnews/9.md
+++ b/gnews/9.md
@@ -1,142 +1,41 @@
 ---
-title: 疫苗灾难还没有开始，战友们务必耐心等到5月份
+title: DC大中华时事：外籍人士观察宁波共同富裕实践
 ---
-`洛杉矶盘古农场 HIMALAYA LA PANGU` [轉載自GNews](https://gnews.org/zh-hans/2057610/)
+`喜马拉雅-华盛顿DC农场` [轉載自GNews](https://gnews.org/zh-hans/2057709/)
 
-[https://gtv.org/video/id=6213b6e71408ee3a03a3100f](https://gtv.org/video/id=6213b6e71408ee3a03a3100f)
+*编辑：西北风 / 作图：*虎子哥
 
-现在的香港 新加坡 包括以色列
-所有的这些(病例的产生) 根本原因是打疫苗导致的
-跟任何病毒没什么大关系
-它基本上是正常人都懂的(道理)
-你都打了 平均2针到3针疫苗了
-新加坡都4针了 你怎么还得病呢
-多简单的道理吗
-那就是疫苗(导致的)死亡
-和疫苗导致你身体的免疫力低下
-不用说冠状病毒来
-双修一次你都嗝屁了
-你知道人一天是40亿细胞死亡
-咱一个身体是40万亿细胞
-40亿细胞每天都要换成新的
-不管你吃啥你都是换新的
-你吃点好的细胞就比较好
-所以咱得吃点好的吗 心情愉悦
-换的(过程)当中 (有)纠偏的机制
-如果你没有纠偏机制的话
-它可能换成死细胞 癌症(细胞) 坏细胞
-纠偏机制就叫防疫功能 或免疫功能
-那这个疫苗(植进去了)40万亿(mRNA刺突蛋白)
-这个剂给你打到身体里边
-在你身体里运转
-关键它还不死啊这40万(亿)
-有人打了120万亿(浓度的)
-你觉得你们家里边本来就住仨人
-突然来了20个人
-而且他们还不吃不喝 还不死不睡
-你还能活吗
-那么疫苗灾难 有没有开始 没开始
-疫苗灾难开始是什么情况
-不是政府的全面工作给你检测病(能解决得了的）
-这是免疫功能低下 染出来的
-我告诉你疫苗灾难到(爆发)周期时
-我问过科学家 她说
-我可以告诉你(接种过疫苗的会)怎么死
-会发现什么
-吐血 流鼻血 眼睛出血 耳朵出血
-女性以为月经来了
-今天来 明天突然又来了
-一直流血不止
-孩子突然倒地 就是这种爆发性的(症状)
-那么(疫苗灾难)前期 在去年我就告诉大家
-这一开始的时候就会发现
-打了疫苗的人 反而病毒再来再来再来
-就它(已经)破坏了你免疫力
+![](http://himalayawashingtondc.org/wp-content/uploads/2021/08/ScreenShot-2021-08-01-at-17.25.09@2x.png)
 
-一旦有病毒风吹草动的 你就染上了
-然后有点感冒导致你发烧 你也认为是病毒
-就是叫误诊
-但(疫苗)真正的 就是破坏掉你身体以后
-(一旦有个风吹草动)就房倒屋塌
-瞬间就像海啸来一样
-所以我今天我特别认真 我求求战友们一定忍住5月份
-我求求战友们一定忍住(到)5月份
+#   墙国妄语每日驳
 
-The current state of Hong Kong Singapore, and Israel
-The root cause of all these (cases) is that it is caused by vaccination
-Not much to do with any virus
-It is basically what all normal people understand
-You’ve had an average of 2 to 3 shots of vaccine
-Singapore has 4 injections yet how do you still get sick?
-How easy to understand !
-It must be the vaccine that caused the death
-and vaccines cause your body to have a low immune system
-It doesn’t even take a coronavirus to infect you
-it only takes one time to have sex and you’re done
-As you know, 4 billion cells die in the human body every day
-Each of our bodies has 40 trillion cells
-4 billion cells are replaced with new ones every day
-No matter what you eat, they have to be replaced with new ones
-You eat something good, the cells will become better
-So we have to eat something good to become happy mood
-In the process of updating there is a correction mechanism
-If you don’t have the mechanism
-they might be replaced with dead cells cancer cells or bad cells
-The correction mechanism is just called the immune function
-Now the vaccine containing 40 trillion spike proteins
-is injected into your body
-Messing around in your body
-The scary thing is that these 40 trillion spike proteins won’t die !
-Some were even injected with a concentration of 120 trillion
-There were only three people living in your house
-Suddenly came 20 people
-they does not eat or drink does not die or sleep
-Can you still live?
-So did the vaccine disaster start? No, it didn’t
-What it will be like when the vaccine disaster begins?
-Disease detection is not a solution to this problem
-It’s a result of low immune function
-I’m telling you, when the vaccine disaster comes to the outbreak cycle
-I asked the scientist, and she said
-I can tell you in what way the vaccinated will die
-What you will see is
-Vomiting blood, nosebleeds bleeding eyes, bleeding ears
-Women think they are having their period
-Today it comes, tomorrow it suddenly comes again
-Keeps bleeding
-The child will suddenly fall to the ground Explosive symptoms
-The first stage of the vaccine disaster as I told you last year
-At the beginning you will find
-people who have been vaccinated are infected by the virus over and over again
-Just because it(vaccine) has destroyed your immunity
-Once a virus is present you will be infected
-Even a small cold causes you to have a fever, and then you think it’s a virus
-In fact, it’s a misdiagnosis
-After the vaccine really destroyed your body
-Even a little influence can collapse instantly like a house
-like a tsunami coming
-So today I am particularly serious
-I beg you all fellow soldiers to be patient until May
+### **0**2.22.2022
 
-* * *
+[突发！普京宣布在顿巴斯地区开展特别军事行动\_参考消息网 (cankaoxiaoxi.com)](http://m.cankaoxiaoxi.com/world/20220224/2470315.shtml)
 
-Date:2022/02/21
-原视频标题: The vaccine disaster has not yet begun.Dear fellow soldiers!Please be patient until May!
-疫苗灾难还没有开始，战友们务必耐心等到5月份
-原视频日期：2022/02/18
-原视频链接 [**https://gtv.org/video/id=6213b6e71408ee3a03a3100f**](https://gtv.org/video/id=6213b6e71408ee3a03a3100f)
-任务编号：LP007
-视频时间段 : 0:00-02:20
-英听校：洛杉矶盘古农场 – 庚子
-翻译：洛杉矶盘古农场 – 庚子
-翻译终校：洛杉矶盘古农场 – 银龙
-字幕+视频制作：洛杉矶盘古农场-庚子
-审片：洛杉矶盘古农场-银龙
-发布：洛杉矶盘古农场-恩典
-[![](https://assets.gnews.org/wp-content/uploads/2021/03/WhatsApp-Image-2021-06-26-at-22.05.30.jpeg)](https://discord.gg/2vuvRm7z6U)
-洛杉矶盘古农场欢迎您加入:(或点击上方图片）
+***简评：***我们也只有通过爆料革命才能真正对这个世界如同打开了一个缝隙看到一点真相，对我们普通人来说已难能可贵了，起码我们不是稀里糊涂的活着。我们老讲全球化，殊不知这背后掩盖的就是新世纪秩序的全球主义，其代表组织通过爆料革命我们了解到就是达沃斯党，达沃斯党的实力和能量通过这次中共施放生化新冠病毒和役苗我们每个人都有切肤感受，他们对媒体，医药行业，各国政治的渗透和控制己达到一个骇人的程度，中共只所以能和这些暗势力紧密合作，无非是卖掉了中国人的利益做了个投名状以换取对自己极权独裁政权的支持，看看中共各个红色家族各个万亿美元财富帝国，看看瑞银50万亿美元中共藏匿的财富，如果没有这些黑暗势力合作和支撑，中共怎么可能做得。现在和将来全世界各个国家都在面对最主要的一个难题，如何处理这些全球主义所形成的组织和实力和各个主权国家的矛盾，俄乌矛盾就是这种深层矛盾的表现形式而己，我们中国人当然是要灭掉邪恶的中共，但如何应对这些黑暗势力确实是真正的挑战。
 
-[https://discord.gg/2vuvRm7z6U](https://discord.gg/2vuvRm7z6U)
+### 02.22.2022
+
+[外籍人士观察宁波共同富裕实践：“这是我想留下来的地方”\_参考消息网 (cankaoxiaoxi.com)](http://m.cankaoxiaoxi.com/china/20220224/2470302.shtml)
+
+***简评：***中国人均GDP和人均可支配收入比例平均只有40%，美国达到86%，全世界平均也要到60%，中国农村更低，那剩下的收入都进了政府口袋，这是中国典型的国进民退，如此低的可支配收入怎么可能创造共同富裕，那进入政府口袋的钱最后不都以各大种腐败和名义进盗国贼家族了吗？中国那来的共同努力富裕，共同富裕翻译过来就是合法抢你的钱，让你一穷二白
+
+### 02.22.2022
+
+[脸书母公司Meta市值蒸发46% 跌出全球10大市值企业排行榜\_参考消息网 (cankaoxiaoxi.com)](http://m.cankaoxiaoxi.com/digital/20220224/2470125.shtml)
+
+***简评：***自媒体平台本是自由表达思想言论的地方，保护言论自由是其能够生存的根本，这次冠状病毒和疫苗灾难人们体验到脸书，推特自媒体平台的言论管控和压制言论自由，随着病毒疫苗真相逐渐显现，脸上书不但面临大量法律诉讼，更重要这些自媒体平台己远离自身核心价值，追求言论自由。这种市值腰斩也仅仅是开始。
+
+#   港台资讯
+![](https://media.discordapp.net/attachments/858887785507323904/945881507942264882/01.png?width=1043&amp;height=586)![](https://media.discordapp.net/attachments/858887785507323904/945881636053061722/02.png?width=1043&amp;height=586)![](https://media.discordapp.net/attachments/858887785507323904/945881701106716702/03.png?width=1043&amp;height=586)
+
+
+
+
+*编辑：*西北风
+*作图：虎子哥
+发布：文顾*
 
  
 
