--- a/gnews/27.md
+++ b/gnews/27.md
@@ -1,16 +1,28 @@
 ---
-title: 全世界只有新中国联邦最早告诉你真相
+title: 【秘翻新视野】西方民主国家的执政独裁化
 ---
-`西班牙巴塞罗那喜悦农场` [轉載自GNews](https://gnews.org/zh-hans/2060756/)
+`秘密翻译组-即时新闻播报组` [轉載自GNews](https://gnews.org/zh-hans/2060856/)
 
-制作：wenwu
+**By:[秘翻新视野](https://gtv.org/broadcast/watch/6216f42e08ba8a07b1a2740e)**
 
-发稿：信心的选择
+**[2022-02-24](https://gtv.org/broadcast/watch/6216f42e08ba8a07b1a2740e)**
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/西喜-8.jpeg)
+**今日主题：**
 
+[**西方民主国家的执政独裁化**](https://gtv.org/broadcast/watch/6216f42e08ba8a07b1a2740e)
 
+**1.疫情管控凸显西方民主国家的执政独裁化**
 
+**2. 与中共蓝金黄的渗透关系**
+
+**3. 信用体系的坍塌会带来怎样的社会结构的变化**
+
+[🔗GTV链接：https://gtv.org/broadcast/watch/6216f42e08ba8a07b1a2740e](http://🔗GTV鏈接：https://gtv.org/broadcast/watch/6216f42e08ba8a07b1a2740e)
+
+发布:星星
+
+* * *
+![](https://assets.gnews.org/wp-content/uploads/2022/02/1-321.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
