--- a/gnews/11.md
+++ b/gnews/11.md
@@ -1,23 +1,48 @@
 ---
-title: 2月25日起日本开放网上入境申请
+title: 战争是灾难
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2062058/)
+`纽约香草山MOS03` [轉載自GNews](https://gnews.org/zh-hans/2062076/)
 
-撰稿：东京樱花团/盖特第一批注册
+作者：纽约香草山健身部—新世界的一员
+![](https://cdn.discordapp.com/attachments/902205163622776852/923974543167590420/image0.jpg)
+乌克兰的人们在死亡中恐惧，
+中共在进行罪恶的洗脑，
+为打下台湾做预期准备。
+无知的人们呀，
+那被蒙蔽了心智的人们，
+唾液横飞眉飞色舞。
+忘记了战争的残酷，
+是无数人的尸横遍野。
+请蠕动一下你的良知，
+不要旁观更不要无动于衷。
+这不是正义的战争，
+这是一场转移病毒溯源的罪恶战争，
+这是一场挤经济泡沫的无情战争，
+这是一场梦想一尊地位的恶毒战争。
+残酷，罪恶、血腥是战争的狰狞面目，
+不要等灾难来临你才醒悟，
+同一个地球村同一个命运。
+祈祷吧，为世界的和平祈祷，
+反对吧，拒绝所有借口的大屠杀，
+勇敢的抗议吧，和平才是人类的文明！
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/2月25日起日本开放网上入境申请.jpg)[图片来源](https://www.cnn.co.jp/travel/35164445.html)
+![](https://assets.gnews.org/wp-content/uploads/2022/02/image1-6.jpg)
 
-2月25日起，日本政府将重新开始接受外国人入境的网上申请，3月1日开始放宽对中共病毒（新冠病毒Covid-19）的防范措施。
+- **审稿/校对/发稿：**qiutian（邱甜）
 
-自25日上午10点开始，将通过厚生劳动省的在日外国人跟进系统接受在线申请。 希望入境日本的外国人申请签证时需要向日本驻外外交使团出示通过该系统签发的证书。
 
-信息源：
+![](https://assets.gnews.org/wp-content/uploads/2022/02/Screen_Shot_2022-02-01_at_11.29.09_PM-1-2.png)
 
-[外国人入国、申請受付２５日開始　政府](https://www.jiji.com/jc/article?k=2022022401448&amp;g=soc)
+**更多资讯，更多关注**
 
-*编辑：东京樱花团/知了知了
-发布：东京樱花团/老黑*
-![](https://assets.gnews.org/wp-content/uploads/2022/02/IMG_0887.jpg)
+[**纽约香草山农场GTV-****香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
+
+[**纽约香草山农场GTV-MOS TALK ****香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
+
+[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
+
+[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
+![](https://cdn.discordapp.com/attachments/902205163622776852/923974543167590420/image0.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
