--- a/gnews/13.md
+++ b/gnews/13.md
@@ -1,43 +1,31 @@
 ---
-title: 两党议员敦促拜登对俄罗斯实施更严厉的制裁
+title: 大直播后记：HPAY的落地政策各地不同
 ---
-`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/2062030/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2062074/)
 
-#### 撰稿：彩虹       
+整理：美哥、铁血丹心
+编辑：小红帽
+![文章配图](https://assets.gnews.org/wp-content/uploads/2022/02/截圖-2022-02-24-下午3.49.05.png)
+猫本小哥： 在未来，HPAY会在很多国家发展，然后在每个国家的发展可能都是独立的，战友不知道怎么解读这个。您能跟大家解读一下吗？
 
-#### 责编：白夜
-![](https://assets.gnews.org/wp-content/uploads/2022/02/image-2314.png)图片来源：雅虎新闻
-据《国会山报》2月24日报道，周四，两党立法者不失时机的全力敦促拜登总统，要求对俄罗斯实施更加严厉的制裁，称截至目前实施的经济制裁措施不足以惩罚弗拉基米尔·普京（Vladimir Putin）对乌克兰施加的侵略行为。
+郭文贵先生：你们不要解读现在没有开始的事情。不要过份解读，千万别过份解读。咱们战友太着急想象。这个HPAY是战略型的，因为不同的国家有不同的政策。它有政策，我们有对策。比如说某个欧洲小国说，他国家有这样那样机制。你只要找我们当地人合作，表面上有一个什么股份制，事实上你们还可以控制，就是你一年要交多少钱。
 
-两党议员认为，对乌克兰的全面军事入侵值得采取最严厉的惩罚措施，即切断俄罗斯进入国际银行信息传递系统的途径，扣押俄罗斯寡头的游艇和别墅等资产，并制裁普京个人。
+你们大家知道吗？就连瑞士这么严谨的国家，交税是可以沟通申报的。我聘你的这个公民，一年我不管挣百亿、千亿，我就跟给你达成了协议，固定交你政府多少钱。你挣多少钱跟政府没关系了。这你们不知道吧？像瑞士这么大的国家，这么重要国家，而且它的条件是很优惠的。
 
-参议院外交关系委员会主席鲍勃·梅嫩德斯（Bob Menendez）说，虽然拜登周四早些时候公布的制裁措施“都是关键步骤”，但华盛顿的政策制定者在“寻求对普京施加最大代价”时，仍然“能够而且应该做得更多”。
+某欧洲的小国说，你的HPAY，我让你全面落地，我全部鼓励，但是按照法规我要跟你50%合资。他说，合资完以后，你每年只交给300万美元就行了。比如，现在叫猫本小哥作为代表跟他谈，给它政府300万。关于50%的股份，你找个公司跟它合股，然后喜联储里规定，这个地方就你来玩了。喜联储给你定一个代理费，不管多少钱的总额度给你代理费。
 
-梅嫩德斯特别建议制裁俄罗斯中央银行（Russian Central Bank），将俄罗斯银行从SWIFT（环球银行间金融电信协会）支付系统中除名，将俄罗斯的关键产业作为目标，并“采取一切措施剥夺普京及其核心圈子人员的资产”。
+那在日本就不一样了，日本有这个交易所。日本交易所把这都给代理了，那咋办？战友们按单来，哪个生意是你做的，一单多少钱。根据这一单背后的交易的总额，你拿佣金。这就不一样了。不同的国家有不同的政策，但是你们不要过度解释。我们可以在一两周以后，可以就HPAY的使用专门来个大直播。我们小福利导演专门搞个HPAY大直播。我都不知道，这个小福利是总导演。现在直播变成了每个农场的专场直播，改规则了，我都不知道。我们要搞一个大直播就专门讲HPAY使用当中遇到什么问题。
 
-同为新泽西州民主党人的比尔·帕斯克雷尔（Bill Pascrell）众议员说：“他们必须为他们的罪行和他们造成的恐怖感到剧痛，扣押他们的财产，扣押他们的游艇，拍卖他们的财产，推翻他们的股票市场，禁运他们的燃料，把他们的孩子踢出我们的大学。”
+资料来源：郭文贵先生2022年2月23日大直播
 
-在与拜登和其他国会高层领导人举行简报会后，参议院少数党领袖米奇·麦康奈尔（Mitch McConnell）在肯塔基州的一个活动上说，他已经敦促总统在制裁方面做得更多，并向乌克兰提供援助。
+发布：tianzhihuan
 
-他说：“我对总统的建议，无论是公开的还是私下的，都是尽可能地加大制裁的力度。”
-
-而银行委员会的资深共和党人帕特·图米（Pat Toomey）参议员说，拜登的初步行动虽然受到欢迎，但很可能被证明“不足以阻止普京进一步的侵略”。
-
-图米呼吁对俄罗斯的石油和天然气工业实施更严厉的限制，以及”对俄罗斯银行实施伊朗式的二级制裁，迫使世界在与俄罗斯或美国做生意之间作出选择”。
-
-同时，其他立法者特别呼吁制裁所谓的“纳瓦尔尼35（Navalny 35）”团体，这是一群被反对派领导人阿列克谢·纳瓦尔尼（Alexei Navalny）认定为严重参与侵犯人权和腐败的俄罗斯精英。
-
-在一份联合声明中，共同担任反腐败核心小组主席的汤姆·马林诺夫斯基（Tom Malinowski）众议员和约翰·柯蒂斯（John Curtis）众议员说：“普遍存在的腐败和从俄罗斯人民那里偷窃的行为助长了普京的镇压和军事侵略；这也是他最大的政治弱点。”
-
-报道指出，不仅仅是国会议员在呼吁切断俄罗斯对SWIFT系统的访问，在俄罗斯军队周四早些时候攻击他们的家园时，乌克兰政府官员就恳求进行制裁。
-
-当时乌克兰外交部长德米特罗·库列巴（Dmytro Kuleba）发推特说：“我不会在（禁止俄罗斯进入SWIFT）这个问题上采取外交手段。每一个现在怀疑是否应该禁止俄罗斯进入SWIFT的人都必须明白，他们的双手将会沾满了无辜乌克兰男人、女人和儿童的鲜血。”
-
-乌克兰空军海军都已被摧毁，乌克兰已如俄罗斯的囊中物，而国际社会似乎仍然没有具体行动，所谓制裁最终都不过是雷声大雨点小，高高举起轻轻落下。一个独裁大国悍然入侵另一个主权小国，却得不到实质性的援助，不禁让人担心，世界的未来在哪里？
-
-**新闻来源**
-
-[Lawmakers press Biden for tougher Russia sanctions over Ukraine invasion](https://thehill.com/homenews/house/595764-lawmakers-press-biden-for-tougher-russia-sanctions-over-ukraine-invasion?rl=1)
+更多资讯，请关注：
+[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
+[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/dKQ6vFY9Fu)
+[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
 
  
 
