--- a/gnews/15.md
+++ b/gnews/15.md
@@ -1,25 +1,23 @@
 ---
-title: 俄罗斯总统普京似已做好毁灭人类的准备
+title: 2月25日起日本开放网上入境申请
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2062019/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2062058/)
 
-撰稿：东京樱花团/待命（文晓）
-![](https://assets.gnews.org/wp-content/uploads/2022/02/图片6-5.png)（图片源自本文链接）
-中日体育新闻２月２５日消息：俄罗斯总统弗拉基米尔-普京在莫斯科时间2月24日凌晨宣布，他已决定在乌克兰东部开展特别军事行动，”以保护民众”。 他还在电视讲话中说，任何试图从外部进行干预的人都将面临历史上前所未有的巨大后果，并重申他准备使用核武器。
+撰稿：东京樱花团/盖特第一批注册
 
-≪每日邮报≫报道说，普京向拜登和北约发出令人毛骨悚然的警告。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/2月25日起日本开放网上入境申请.jpg)[图片来源](https://www.cnn.co.jp/travel/35164445.html)
 
-同一天，美国新闻网站Politico Europe以 “普京之使用核武器的选择”为题报道说，“普京正在把核武器推向前台，无视国际法，加剧危险”。普京警告说：把我们的希望和信任寄托在少数好战的领导人身上，并不是防止核灾难危机的明确战略。
+2月25日起，日本政府将重新开始接受外国人入境的网上申请，3月1日开始放宽对中共病毒（新冠病毒Covid-19）的防范措施。
 
-在7日与法国总统埃马纽埃尔-马克龙的会晤中，弗拉基米尔-普京说：俄罗斯是一个核国家。 他在提到使用核武器的可能性时说：在这场战争中没有赢家。
+自25日上午10点开始，将通过厚生劳动省的在日外国人跟进系统接受在线申请。 希望入境日本的外国人申请签证时需要向日本驻外外交使团出示通过该系统签发的证书。
 
-本月19日，俄罗斯进行了一次大规模的洲际弹道导弹（ICBM）和能够携带核弹头的高超音速巡航导弹的发射演习，并宣布所有导弹都击中了目标。
+信息源：
 
-信息来源：[プーチン大統領、核兵器の行使を再び示唆「邪魔する者は歴史上で類を見ないほど大きな結果に直面するだろう」 (msn.com)](https://www.msn.com/ja-jp/news/world/%E3%83%97%E3%83%BC%E3%83%81%E3%83%B3%E5%A4%A7%E7%B5%B1%E9%A0%98-%E6%A0%B8%E5%85%B5%E5%99%A8%E3%81%AE%E8%A1%8C%E4%BD%BF%E3%82%92%E5%86%8D%E3%81%B3%E7%A4%BA%E5%94%86-%E9%82%AA%E9%AD%94%E3%81%99%E3%82%8B%E8%80%85%E3%81%AF%E6%AD%B4%E5%8F%B2%E4%B8%8A%E3%81%A7%E9%A1%9E%E3%82%92%E8%A6%8B%E3%81%AA%E3%81%84%E3%81%BB%E3%81%A9%E5%A4%A7%E3%81%8D%E3%81%AA%E7%B5%90%E6%9E%9C%E3%81%AB%E7%9B%B4%E9%9D%A2%E3%81%99%E3%82%8B%E3%81%A0%E3%82%8D%E3%81%86/ar-AAUeEau?ocid=msedgntp)
+[外国人入国、申請受付２５日開始　政府](https://www.jiji.com/jc/article?k=2022022401448&amp;g=soc)
 
-*校对：东京樱花团/喜马拉雅的微尘*
-*发布：东京樱花团/tdownc2p*
-![](https://assets.gnews.org/wp-content/uploads/2022/02/yht-9.jpg)
+*编辑：东京樱花团/知了知了
+发布：东京樱花团/老黑*
+![](https://assets.gnews.org/wp-content/uploads/2022/02/IMG_0887.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
