--- a/gnews/19.md
+++ b/gnews/19.md
@@ -1,37 +1,21 @@
 ---
-title: 日媒看台海局势┃许多日中友好人士被卷入了中共内斗而被以间谍罪抓捕
+title: 俄罗斯总统普京似已做好毁灭人类的准备
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2061998/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2062019/)
 
-编译：东京樱花团/Hopkins
+撰稿：东京樱花团/待命（文晓）
+![](https://assets.gnews.org/wp-content/uploads/2022/02/图片6-5.png)（图片源自本文链接）
+中日体育新闻２月２５日消息：俄罗斯总统弗拉基米尔-普京在莫斯科时间2月24日凌晨宣布，他已决定在乌克兰东部开展特别军事行动，”以保护民众”。 他还在电视讲话中说，任何试图从外部进行干预的人都将面临历史上前所未有的巨大后果，并重申他准备使用核武器。
 
-（编者按）在俄罗斯占领乌克兰领土的时候，台海局势将成为下一个热点，日本产经新闻台湾支局在自媒体上发表专栏文章，从一个独特的角度分析中国、台湾、日本及周边地区的政治局势。现编译给观众，以便对台海局势有更深的了解。
-![](https://assets.gnews.org/wp-content/uploads/2022/02/图片5-7.jpg)图片：产经新闻
-据日本媒体报道，前几天，在上海有一位50多岁的日本人，被中共警方以间谍罪带走，家属和日本政府都联系不到、让人感到十分担心。
+≪每日邮报≫报道说，普京向拜登和北约发出令人毛骨悚然的警告。
 
-中共这些年一直非常热心抓日本间谍。我在北京的时候，大概就有10个人左右被捕，后来都判了刑，其中有好几个还是我认识的人。
+同一天，美国新闻网站Politico Europe以 “普京之使用核武器的选择”为题报道说，“普京正在把核武器推向前台，无视国际法，加剧危险”。普京警告说：把我们的希望和信任寄托在少数好战的领导人身上，并不是防止核灾难危机的明确战略。
 
-他们之中，有一些是所谓的日中友好人士，长年游走于中国政府和各个日中友好团体之间，是因为不小心被卷入了中国共产党内部的权力斗争而被抓的。
+在7日与法国总统埃马纽埃尔-马克龙的会晤中，弗拉基米尔-普京说：俄罗斯是一个核国家。 他在提到使用核武器的可能性时说：在这场战争中没有赢家。
 
-还有一些是摄影爱好者，在海边拍到了一些军舰潜水艇而被捕；还有被中国的公司请去在寻找温泉的技术人员，因为用探索设备不小心看到了地下的军事设施；或者是日本学者，在地摊上买了几本被中共称为「内部资料」的历史文献。在民主国家、这些都根本不是问题，但是在中国都会被以间谍罪重判。
+本月19日，俄罗斯进行了一次大规模的洲际弹道导弹（ICBM）和能够携带核弹头的高超音速巡航导弹的发射演习，并宣布所有导弹都击中了目标。
 
-日本二战之后，就废除了间谍法和反间谍法等法律，也没有培训在国外从事间谍活动的人员，更没有编有关预算。
-
-日本有和平宪法，既没有对中国的领土野心、中国也没有什么技术可偷。这些所谓的日本间谍，和渗透进日本国会及各大企业的那些中国的间谍比起来，根本不值得一提。
-
-我曾在北京采访过的一位被定罪为日本间谍的76岁的老先生，前不久在狱中去世了。他曾经是一个彻头彻尾的亲中派，早年在航空公司工作，好几条中日间的航线就是他主导的开设的。晚年，他成立了一个中日技术人才交流的团体，把很多日本退休的工程师请到中国传授技术，受到了中国各地方政府的欢迎。
-
-但是，和他有密切关系的中共官员，基本上都是温家宝系统的人。后来，习近平派为了打压温派，就把他以逃税的名义抓起来，后又转成间谍。
-
-听说，主要是想从他嘴里掏出一些温派官员的经济问题，他就这样稀里胡涂地成了间谍，被判刑12年。这几年身体不好，太太和日本政府想帮他办保外就医，被中方拒绝，结果，没有撑过这个冬天。
-
-现在，中国国内以间谍罪在服刑的台湾人，至少几十个，也有一说是100人以上的。大部分是台商，也有一些蓝营的学者，绿营的好像只有李明哲。他们和那些所谓的日本间谍一样，基本上都是冤枉的。独裁政权、每天都在做恶。
-
-今后，日本和台湾在营救被捕国人的问题上，也有很多的合作空间。
-
-作者：日本产经新闻台湾支局矢板明夫。
-
-信息来源：[许多日中友好人士被卷入了中共内部的权力斗争而被以间谍罪抓捕](https://www.facebook.com/YaitaAkio/posts/152551860534057)
+信息来源：[プーチン大統領、核兵器の行使を再び示唆「邪魔する者は歴史上で類を見ないほど大きな結果に直面するだろう」 (msn.com)](https://www.msn.com/ja-jp/news/world/%E3%83%97%E3%83%BC%E3%83%81%E3%83%B3%E5%A4%A7%E7%B5%B1%E9%A0%98-%E6%A0%B8%E5%85%B5%E5%99%A8%E3%81%AE%E8%A1%8C%E4%BD%BF%E3%82%92%E5%86%8D%E3%81%B3%E7%A4%BA%E5%94%86-%E9%82%AA%E9%AD%94%E3%81%99%E3%82%8B%E8%80%85%E3%81%AF%E6%AD%B4%E5%8F%B2%E4%B8%8A%E3%81%A7%E9%A1%9E%E3%82%92%E8%A6%8B%E3%81%AA%E3%81%84%E3%81%BB%E3%81%A9%E5%A4%A7%E3%81%8D%E3%81%AA%E7%B5%90%E6%9E%9C%E3%81%AB%E7%9B%B4%E9%9D%A2%E3%81%99%E3%82%8B%E3%81%A0%E3%82%8D%E3%81%86/ar-AAUeEau?ocid=msedgntp)
 
 *校对：东京樱花团/喜马拉雅的微尘*
 *发布：东京樱花团/tdownc2p*
