--- a/gnews/12.md
+++ b/gnews/12.md
@@ -1,37 +1,48 @@
 ---
-title: 日本岸田首相宣布对俄罗斯追加制裁
+title: 《蓝莲花行动》首季一期
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2062035/)
+`秘密翻译组-即时新闻播报组` [轉載自GNews](https://gnews.org/zh-hans/2062075/)
 
-撰稿：东京樱花团 /文小白
+**—[圣洁绽放蓝莲花  正道行动攀喜峰](https://gtv.org/broadcast/watch/6217a11308ba8a07b1a2b4ea)—**
 
-日本岸田文雄首相25日上午召开了国家安全委员会部长级会议，基于G7紧急峰会的内容，讨论了乌克兰局势问题，决定对俄罗斯采取追加制裁措施。并随即召开了新闻发布会。
-![](https://assets.gnews.org/wp-content/uploads/2022/02/图片9-3.png)照片来源NHKWEN
-在新闻发布会上，岸田首相首先严厉谴责了俄罗斯入侵乌克兰是明显违反了国际法，作为追加制裁措施，决定对俄罗斯个人和团体进行资产冻结以及半导体出口限制。
+**🎙️主持：@ 澄道来了 🎙️嘉宾：@ Jimhu 吉姆湖｜@ 文聊**
+[![](https://assets.gnews.org/wp-content/uploads/2022/02/Unknown-1-7.jpeg)](https://gtv.org/broadcast/watch/6217a11308ba8a07b1a2b4ea)点击图片观看完整视频
+**🔷主题： [反华排华 灾难重演会有多远 ！](https://gtv.org/broadcast/watch/6217a11308ba8a07b1a2b4ea)**
 
-岸田首相表示，“俄罗斯军队不顾国际社会的努力入侵乌克兰，是企图单方面以武力改变现状，改变乌克兰的主权和领土，这是明显的侵犯。俄罗斯违反了国际法，是动摇国际秩序基础的行为，我们绝对不能接受，必须严厉谴责。”
+**📜副题： 从仇恨种子酝酿到疫苗灾难溯责 从HBO造势嫁祸到华人惨遭一杀再杀  不可控 未雨绸 中共不等于中国人 正道宣告**
 
-岸田还说：“从日本的安全角度来看，这也是不容忽视的。我们将与七国集团和国际社会密切合作，敦促俄罗斯立即撤军并遵守国际法。”
+**人各有命 新中国联邦人 之幸运 如肓龟浮木 富贵在天**
 
-追加制裁内容：
+**爆料革命 之璀璨 如动天换日**
 
-▽ 对符合资产冻结和暂停签证条件的俄罗斯个人和团体进行制裁；
+**澄清认知 灭共唯一**
 
-▽ 针对俄罗斯金融机构进行资产冻结；
+**＂秘翻响鼓秀埸＂之 @ 文聊 @ 小小酥@北极星 再聚 **
 
-▽ 限制俄罗斯军事相关组织的出口，以及半导体的出口。
+**…… 娓娓道来**
 
-此外，岸田首相还强调，他将尽一切努力确保乌克兰境内约120名日本民众的安全。对打算通过陆路撤离至邻国波兰的民众，提供西部利沃夫的临时联络处对接。以及已经安排好了从波兰撤离到其他国家的包机。
+**了却宿愿 心同莲花圣绽放**
 
-岸田还强调，日本将积极与其他国家领导人建立外交关系，并将与七国集团和国际社会在各个层面密切合作，努力推动外交手段解决争端。
+**                           行似使徒洁身爱**
 
-此外，岸田还表示，“将与相关国家合作，采取必要措施，尽一切努力稳定国际能源市场，确保对日本的能源供应的稳定”。岸田宣布，在原油价格持续上涨的情况下，为了尽量减少对民众生活和企业活动的不利影响，将大幅增加和扩大对石油批发企业的补贴，以遏制零售价格的大幅上涨。
+**[@ 零距离车间 @ 澄道来了  @ 爱动爱爱码02171](https://gtv.org/broadcast/watch/6217a11308ba8a07b1a2b4ea)**
 
-信息来源：[岸田首相 対ロシア追加制裁公表 資産凍結や半導体輸出規制など](https://www3.nhk.or.jp/news/html/20220225/k10013500511000.html)
+**GTV链接：**[https://gtv.org/broadcast/watch/6217a11308ba8a07b1a2b4ea](https://gtv.org/broadcast/watch/6217a11308ba8a07b1a2b4ea)
 
-*校对：东京樱花团/喜马拉雅的微尘*
-*发布：东京樱花团/tdownc2p*
-![](https://assets.gnews.org/wp-content/uploads/2022/02/yht-9.jpg)
+* * *
+
+
+
+2022年2月| 一 | 二 | 三 | 四 | 五 | 六 | 日 |
+| --- | --- | --- | --- | --- | --- | --- |
+|   | [1](https://gnews.org/zh-hans/date/2022/02/01/) | [2](https://gnews.org/zh-hans/date/2022/02/02/) | [3](https://gnews.org/zh-hans/date/2022/02/03/) | [4](https://gnews.org/zh-hans/date/2022/02/04/) | [5](https://gnews.org/zh-hans/date/2022/02/05/) | [6](https://gnews.org/zh-hans/date/2022/02/06/) |
+| [7](https://gnews.org/zh-hans/date/2022/02/07/) | [8](https://gnews.org/zh-hans/date/2022/02/08/) | [9](https://gnews.org/zh-hans/date/2022/02/09/) | [10](https://gnews.org/zh-hans/date/2022/02/10/) | [11](https://gnews.org/zh-hans/date/2022/02/11/) | [12](https://gnews.org/zh-hans/date/2022/02/12/) | [13](https://gnews.org/zh-hans/date/2022/02/13/) |
+| [14](https://gnews.org/zh-hans/date/2022/02/14/) | [15](https://gnews.org/zh-hans/date/2022/02/15/) | [16](https://gnews.org/zh-hans/date/2022/02/16/) | [17](https://gnews.org/zh-hans/date/2022/02/17/) | [18](https://gnews.org/zh-hans/date/2022/02/18/) | [19](https://gnews.org/zh-hans/date/2022/02/19/) | [20](https://gnews.org/zh-hans/date/2022/02/20/) |
+| [21](https://gnews.org/zh-hans/date/2022/02/21/) | [22](https://gnews.org/zh-hans/date/2022/02/22/) | [23](https://gnews.org/zh-hans/date/2022/02/23/) | [24](https://gnews.org/zh-hans/date/2022/02/24/) | 25 | 26 | 27 |
+| 28 |   |
+
+[« 1月](https://gnews.org/zh-hans/date/2022/01/)  
+ 
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
