--- a/gnews/16.md
+++ b/gnews/16.md
@@ -1,21 +1,37 @@
 ---
-title: 57名乌克兰人在俄罗斯军事入侵中丧生
+title: 日本岸田首相宣布对俄罗斯追加制裁
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2062010/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2062035/)
 
-撰稿：东京樱花团/向海
-![](https://assets.gnews.org/wp-content/uploads/2022/02/image-2313.png)[图片来源](https://www.google.com.hk/imgres?imgurl=https%3A%2F%2Fichef.bbci.co.uk%2Fnews%2F624%2Fmcs%2Fmedia%2Fimages%2F76281000%2Fjpg%2F_76281691_023167357-1.jpg&amp;imgrefurl=https%3A%2F%2Fwww.bbc.com%2Fnews%2Fworld-europe-28309034&amp;tbnid=_Rjjd6t6Mk6GWM&amp;vet=12ahUKEwjw8q)
-乌克兰政府透露，俄罗斯军队的大规模军事入侵只在24日就造成57人死亡，169人受伤。
+撰稿：东京樱花团 /文小白
 
-昨天开始的俄罗斯军队的军事入侵。袭击在乌克兰各地进行，俄罗斯国防部宣布在日本时间黎明前摧毁了乌克兰的83处军事设施。据乌克兰卫生部长称，仅24日，至少有 57 人丧生，169 人受伤。
+日本岸田文雄首相25日上午召开了国家安全委员会部长级会议，基于G7紧急峰会的内容，讨论了乌克兰局势问题，决定对俄罗斯采取追加制裁措施。并随即召开了新闻发布会。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/图片9-3.png)照片来源NHKWEN
+在新闻发布会上，岸田首相首先严厉谴责了俄罗斯入侵乌克兰是明显违反了国际法，作为追加制裁措施，决定对俄罗斯个人和团体进行资产冻结以及半导体出口限制。
 
-与此同时，乌克兰总统府透露，俄罗斯军队已经控制了位于白俄罗斯边境附近的切尔诺贝利核电站。路透社报道称，乌克兰官员表示，来自白俄罗斯的弹道导弹袭击，和俄罗斯军队攻入首都基辅的行政区，随时会发生。这可能会让战斗更加激烈。
+岸田首相表示，“俄罗斯军队不顾国际社会的努力入侵乌克兰，是企图单方面以武力改变现状，改变乌克兰的主权和领土，这是明显的侵犯。俄罗斯违反了国际法，是动摇国际秩序基础的行为，我们绝对不能接受，必须严厉谴责。”
 
-信息来源：[ロシアの軍事侵攻でウクライナ側の死者57人に](https://news.yahoo.co.jp/articles/7ab49eeb0b25c07ecedcd18f832e78e3aaaf54f6)
+岸田还说：“从日本的安全角度来看，这也是不容忽视的。我们将与七国集团和国际社会密切合作，敦促俄罗斯立即撤军并遵守国际法。”
 
-*校对：东京樱花团/喜马拉雅的微尘
-发布：东京樱花团/平安卿卿*
-![](https://assets.gnews.org/wp-content/uploads/2022/02/%E5%B1%8F%E5%B9%95%E6%88%AA%E5%9B%BE-2022-02-24-151921-2.png)
+追加制裁内容：
+
+▽ 对符合资产冻结和暂停签证条件的俄罗斯个人和团体进行制裁；
+
+▽ 针对俄罗斯金融机构进行资产冻结；
+
+▽ 限制俄罗斯军事相关组织的出口，以及半导体的出口。
+
+此外，岸田首相还强调，他将尽一切努力确保乌克兰境内约120名日本民众的安全。对打算通过陆路撤离至邻国波兰的民众，提供西部利沃夫的临时联络处对接。以及已经安排好了从波兰撤离到其他国家的包机。
+
+岸田还强调，日本将积极与其他国家领导人建立外交关系，并将与七国集团和国际社会在各个层面密切合作，努力推动外交手段解决争端。
+
+此外，岸田还表示，“将与相关国家合作，采取必要措施，尽一切努力稳定国际能源市场，确保对日本的能源供应的稳定”。岸田宣布，在原油价格持续上涨的情况下，为了尽量减少对民众生活和企业活动的不利影响，将大幅增加和扩大对石油批发企业的补贴，以遏制零售价格的大幅上涨。
+
+信息来源：[岸田首相 対ロシア追加制裁公表 資産凍結や半導体輸出規制など](https://www3.nhk.or.jp/news/html/20220225/k10013500511000.html)
+
+*校对：东京樱花团/喜马拉雅的微尘*
+*发布：东京樱花团/tdownc2p*
+![](https://assets.gnews.org/wp-content/uploads/2022/02/yht-9.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
