--- a/gnews/17.md
+++ b/gnews/17.md
@@ -1,21 +1,44 @@
 ---
-title: 撤离乌克兰的台湾留学生：没想到真会开战
+title: 两党议员敦促拜登对俄罗斯实施更严厉的制裁
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2062009/)
+`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/2062030/)
 
-撰稿：东京樱花团/上善若水
-![](https://assets.gnews.org/wp-content/uploads/2022/02/图片7-2.jpg)（图片来源于本文链接）
-3名台湾学生二月中从基辅撤至乌克兰西部，23日搭机前往土耳其转机至台湾，直至下飞机后，才得知俄罗斯已入侵乌克兰。在感到幸运的同时，他们也非常担心仍留在乌克兰的朋友的安全。据台湾教育部24日统计，乌克兰共有12名台湾留学生，除了3人已经抵达台湾外，另有2人分别在乌克兰东部和南部，另外有7人仍留在基辅。
+#### 撰稿：彩虹       
 
-在塔夫里维尔纳兹基大学攻读语言专业的台湾学生Tim表示，2月上旬时，基辅整个城市运作非常正常，超市供应充足，人们也不感到恐慌，但后来随着情势愈来愈紧张，14日决定离开基辅，撤离到离东部俄罗斯边境更远的利沃夫，“我当时没有很紧张，主要是西部没什么事，但也不能说完全不紧张。”城市利沃夫是位于乌克兰西部的观光城市，近几周成为住在基辅或乌俄边境居民撤离的避难地。Tim向德国之声表示，原本要搭24日往土耳其飞机，因为该航班只需在伊斯坦布尔机场等候转机两小时，但后来选择23日需等候转机13个小时的航班。他说：“在机场等待时，乌克兰宣布进入紧急状态，交通不便、审查文件更为严格，就庆幸当时还好选择这班班机。”直至24日傍晚抵达台湾，得知俄军已经入侵乌克兰，让他觉得自己很幸运。另一名在乌克兰待了五年的王同学也说，如今乌克兰发生的情况，真的让他完全没有预想到，觉得自己“运气好”。高中毕业就到赴乌克兰留学的Tim已经在基辅住了近三年，如今看到乌克兰许多地区遭轰炸的新闻画面，感到五味杂陈，“觉得瞬间发生太多事情，心情非常复杂。” “我在乌克兰有很多朋友，很不舍，也很为他们心疼，这真的是非常不幸。”
+#### 责编：白夜
+![](https://assets.gnews.org/wp-content/uploads/2022/02/image-2314.png)图片来源：雅虎新闻
+据《国会山报》2月24日报道，周四，两党立法者不失时机的全力敦促拜登总统，要求对俄罗斯实施更加严厉的制裁，称截至目前实施的经济制裁措施不足以惩罚弗拉基米尔·普京（Vladimir Putin）对乌克兰施加的侵略行为。
 
-信息来源：
+两党议员认为，对乌克兰的全面军事入侵值得采取最严厉的惩罚措施，即切断俄罗斯进入国际银行信息传递系统的途径，扣押俄罗斯寡头的游艇和别墅等资产，并制裁普京个人。
 
-[撤离乌克兰的台湾留学生：没想到真会开战](https://www.dw.com/zh/%E6%92%A4%E7%A6%BB%E4%B9%8C%E5%85%8B%E5%85%B0%E7%9A%84%E5%8F%B0%E6%B9%BE%E7%95%99%E5%AD%A6%E7%94%9F%E6%B2%A1%E6%83%B3%E5%88%B0%E7%9C%9F%E4%BC%9A%E5%BC%80%E6%88%98/a-60904391)
+参议院外交关系委员会主席鲍勃·梅嫩德斯（Bob Menendez）说，虽然拜登周四早些时候公布的制裁措施“都是关键步骤”，但华盛顿的政策制定者在“寻求对普京施加最大代价”时，仍然“能够而且应该做得更多”。
 
-*校对：东京樱花团/知了知了
-发布：东京樱花团/tdownc2p*
-![](https://assets.gnews.org/wp-content/uploads/2022/02/yht-9.jpg)
+梅嫩德斯特别建议制裁俄罗斯中央银行（Russian Central Bank），将俄罗斯银行从SWIFT（环球银行间金融电信协会）支付系统中除名，将俄罗斯的关键产业作为目标，并“采取一切措施剥夺普京及其核心圈子人员的资产”。
+
+同为新泽西州民主党人的比尔·帕斯克雷尔（Bill Pascrell）众议员说：“他们必须为他们的罪行和他们造成的恐怖感到剧痛，扣押他们的财产，扣押他们的游艇，拍卖他们的财产，推翻他们的股票市场，禁运他们的燃料，把他们的孩子踢出我们的大学。”
+
+在与拜登和其他国会高层领导人举行简报会后，参议院少数党领袖米奇·麦康奈尔（Mitch McConnell）在肯塔基州的一个活动上说，他已经敦促总统在制裁方面做得更多，并向乌克兰提供援助。
+
+他说：“我对总统的建议，无论是公开的还是私下的，都是尽可能地加大制裁的力度。”
+
+而银行委员会的资深共和党人帕特·图米（Pat Toomey）参议员说，拜登的初步行动虽然受到欢迎，但很可能被证明“不足以阻止普京进一步的侵略”。
+
+图米呼吁对俄罗斯的石油和天然气工业实施更严厉的限制，以及”对俄罗斯银行实施伊朗式的二级制裁，迫使世界在与俄罗斯或美国做生意之间作出选择”。
+
+同时，其他立法者特别呼吁制裁所谓的“纳瓦尔尼35（Navalny 35）”团体，这是一群被反对派领导人阿列克谢·纳瓦尔尼（Alexei Navalny）认定为严重参与侵犯人权和腐败的俄罗斯精英。
+
+在一份联合声明中，共同担任反腐败核心小组主席的汤姆·马林诺夫斯基（Tom Malinowski）众议员和约翰·柯蒂斯（John Curtis）众议员说：“普遍存在的腐败和从俄罗斯人民那里偷窃的行为助长了普京的镇压和军事侵略；这也是他最大的政治弱点。”
+
+报道指出，不仅仅是国会议员在呼吁切断俄罗斯对SWIFT系统的访问，在俄罗斯军队周四早些时候攻击他们的家园时，乌克兰政府官员就恳求进行制裁。
+
+当时乌克兰外交部长德米特罗·库列巴（Dmytro Kuleba）发推特说：“我不会在（禁止俄罗斯进入SWIFT）这个问题上采取外交手段。每一个现在怀疑是否应该禁止俄罗斯进入SWIFT的人都必须明白，他们的双手将会沾满了无辜乌克兰男人、女人和儿童的鲜血。”
+
+乌克兰空军海军都已被摧毁，乌克兰已如俄罗斯的囊中物，而国际社会似乎仍然没有具体行动，所谓制裁最终都不过是雷声大雨点小，高高举起轻轻落下。一个独裁大国悍然入侵另一个主权小国，却得不到实质性的援助，不禁让人担心，世界的未来在哪里？
+
+**新闻来源**
+
+[Lawmakers press Biden for tougher Russia sanctions over Ukraine invasion](https://thehill.com/homenews/house/595764-lawmakers-press-biden-for-tougher-russia-sanctions-over-ukraine-invasion?rl=1)
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
