--- a/gnews/18.md
+++ b/gnews/18.md
@@ -1,23 +1,21 @@
 ---
-title: 俄罗斯爆发全国反战抗议 1700多人已被拘留
+title: 乌克兰10万人流离失所、数千人逃离
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2062000/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2062026/)
 
-撰稿：东京樱花团/盖特第一批注册
-![](https://assets.gnews.org/wp-content/uploads/2022/02/image-2315.png)[图片来源](https://www.google.com.hk/imgres?imgurl=https%3A%2F%2Fcdn.theatlantic.com%2Fthumbor%2FfDRek8S-7AyygM672V1hT4_1I4g%3D%2F900x600%2Fmedia%2Fimg%2Fphoto%2F2022%2F02%2Frussia-protests%2Fa01_AP22055639533912%2Foriginal.jpg&amp;imgrefurl=https%3A%2F%2Fwww.theatlantic)
-2月24日，在首都莫斯科和俄罗斯其他地区发生了反对俄罗斯入侵乌克兰的抗议活动。 据一俄罗斯人权监督组织称，截至24日晚（25日清晨），至少有956人被莫斯科的安全当局拘留。 此外，在全国44个城市有超过1745人被拘留。
+撰稿：东京樱花团/风翼
+![](https://assets.gnews.org/wp-content/uploads/2022/02/图片8-4.png)图片来源于网络
+据JIJI.COM媒体转发法新社报道，联合国难民事务高级专员办事处(UNHCR)发言官2月24日表示，俄罗斯入侵后乌克兰流离失所者人数已达到10万人以上，数千人以逃离国外。
 
-参加抗议活动的一名20多岁的女性说：”我为站在乌克兰人面前感到羞耻。 我想道歉，经济制裁、国际孤立….。 我认为这就是俄罗斯的末日。”
+联合国难民事务高级专员办事处在同一天发表的声明表示，以准备向乌克兰提供人道主义援助，并呼吁邻近的欧洲国家保持其边界开放，并接收流离失所者。
 
-一位三十多岁的男性上班族愤怒地说，”为什么克里姆林宫里没有人阻止普京总统？ 与乌克兰的战争不是俄罗斯人民的意愿。”
+信息来源
 
-对普京来说，这种国内反弹比国际经济制裁更具破坏性。我们希望，俄罗斯人民的抗议将能够促使军事行动的停止。
+[ウクライナ、国内避難１０万人　数千人は国外脱出―ＵＮＨＣＲ](https://www.jiji.com/sp/article?k=2022022500344&amp;g=int)
 
-信息源：[「ウクライナ人に謝りたい」　ロシア各地で反戦デモ　１７００人超拘束](https://news.yahoo.co.jp/articles/3297c221f7c6a42ec0e744a4254b96c10c1a2305)
-
-*编辑：东京樱花团/喜马拉雅的微尘
-发布：东京樱花团/平安卿卿*
-![](https://assets.gnews.org/wp-content/uploads/2022/02/%E5%B1%8F%E5%B9%95%E6%88%AA%E5%9B%BE-2022-02-24-151921-2.png)
+*校对：东京樱花团/知了知了
+发布：东京樱花团/tdownc2p*
+![](https://assets.gnews.org/wp-content/uploads/2022/02/yht-9.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
