--- a/gnews/20.md
+++ b/gnews/20.md
@@ -1,21 +1,19 @@
 ---
-title: 俄罗斯各地反战抗议1700多人被拘留
+title: 57名乌克兰人在俄罗斯军事入侵中丧生
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2061997/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2062010/)
 
-撰稿：东京樱花团/百花李香
-![](https://assets.gnews.org/wp-content/uploads/2022/02/image-2312.png)[图片来源](https://www.aljazeera.com/gallery/2022/2/24/photos-protesters-rally-around-the-world-in-support-of-ukraine#:~:text=Photos%3A%20Protesters%20around%20the%20world%20rally%20in%20support%20of%20Ukraine)
-2月24日，俄罗斯首都莫斯科和其它地区发生了反对俄罗斯入侵乌克兰的抗议活动。据一为俄罗斯人权监督组织称，截至24日晚，至少有956人被莫斯科的安全当局拘留。 此外，全国44个城市有超过1745人被拘留。
+撰稿：东京樱花团/向海
+![](https://assets.gnews.org/wp-content/uploads/2022/02/image-2313.png)[图片来源](https://www.google.com.hk/imgres?imgurl=https%3A%2F%2Fichef.bbci.co.uk%2Fnews%2F624%2Fmcs%2Fmedia%2Fimages%2F76281000%2Fjpg%2F_76281691_023167357-1.jpg&amp;imgrefurl=https%3A%2F%2Fwww.bbc.com%2Fnews%2Fworld-europe-28309034&amp;tbnid=_Rjjd6t6Mk6GWM&amp;vet=12ahUKEwjw8q)
+乌克兰政府透露，俄罗斯军队的大规模军事入侵只在24日就造成57人死亡，169人受伤。
 
-参加抗议活动的一名年轻女性称，她为站在乌克兰人面前感到羞耻，想道歉。经济制裁、国际孤立就是俄罗斯的末日。
+昨天开始的俄罗斯军队的军事入侵。袭击在乌克兰各地进行，俄罗斯国防部宣布在日本时间黎明前摧毁了乌克兰的83处军事设施。据乌克兰卫生部长称，仅24日，至少有 57 人丧生，169 人受伤。
 
-另外一位三十多岁的男性质问，为什么克里姆林宫里没有人阻止普京？他说与乌克兰的战争不是俄罗斯人民的意愿，
+与此同时，乌克兰总统府透露，俄罗斯军队已经控制了位于白俄罗斯边境附近的切尔诺贝利核电站。路透社报道称，乌克兰官员表示，来自白俄罗斯的弹道导弹袭击，和俄罗斯军队攻入首都基辅的行政区，随时会发生。这可能会让战斗更加激烈。
 
-在俄罗斯的一个会员社交网站上也出现少数反对者的意见。但多数都是谴责普京的入侵，他们的评论有：普京应该作为战争罪犯受到惩罚。独裁者总是以生存范围或保护人民的名义发动战争。没有任何语言可以为战争辩护。一个国家的耻辱！。
+信息来源：[ロシアの軍事侵攻でウクライナ側の死者57人に](https://news.yahoo.co.jp/articles/7ab49eeb0b25c07ecedcd18f832e78e3aaaf54f6)
 
-信息源：[「ウクライナ人に謝りたい」　ロシア各地で反戦デモ　１７００人超拘束](https://news.yahoo.co.jp/articles/3297c221f7c6a42ec0e744a4254b96c10c1a2305#)
-
-*编辑：东京樱花团/知了知了
+*校对：东京樱花团/喜马拉雅的微尘
 发布：东京樱花团/平安卿卿*
 ![](https://assets.gnews.org/wp-content/uploads/2022/02/%E5%B1%8F%E5%B9%95%E6%88%AA%E5%9B%BE-2022-02-24-151921-2.png)
  
