--- a/gnews/21.md
+++ b/gnews/21.md
@@ -1,26 +1,20 @@
 ---
-title: 波兰、瑞典、捷克反对在俄罗斯举行2022世界杯足球预选赛
+title: 撤离乌克兰的台湾留学生：没想到真会开战
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2061991/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2062009/)
 
-撰稿：东京樱花团/盖特第一批注册
-![](https://assets.gnews.org/wp-content/uploads/2022/02/图片3-11.jpg)[图片来源](https://sakanowa.jp/topics/21959)
-在俄罗斯军事入侵乌克兰之后，波兰、瑞典和捷克共和国的足球协会24日发表声明，称不应该允许俄罗斯举办2022年世界杯预选赛。
+撰稿：东京樱花团/上善若水
+![](https://assets.gnews.org/wp-content/uploads/2022/02/图片7-2.jpg)（图片来源于本文链接）
+3名台湾学生二月中从基辅撤至乌克兰西部，23日搭机前往土耳其转机至台湾，直至下飞机后，才得知俄罗斯已入侵乌克兰。在感到幸运的同时，他们也非常担心仍留在乌克兰的朋友的安全。据台湾教育部24日统计，乌克兰共有12名台湾留学生，除了3人已经抵达台湾外，另有2人分别在乌克兰东部和南部，另外有7人仍留在基辅。
 
-他们在一份联合声明中说：”我们坚定地认为淘汰赛不应该在俄罗斯联邦境内进行。 军事升级将产生严重后果，并将大大降低我们国家足球队和代表团的安全。
+在塔夫里维尔纳兹基大学攻读语言专业的台湾学生Tim表示，2月上旬时，基辅整个城市运作非常正常，超市供应充足，人们也不感到恐慌，但后来随着情势愈来愈紧张，14日决定离开基辅，撤离到离东部俄罗斯边境更远的利沃夫，“我当时没有很紧张，主要是西部没什么事，但也不能说完全不紧张。”城市利沃夫是位于乌克兰西部的观光城市，近几周成为住在基辅或乌俄边境居民撤离的避难地。Tim向德国之声表示，原本要搭24日往土耳其飞机，因为该航班只需在伊斯坦布尔机场等候转机两小时，但后来选择23日需等候转机13个小时的航班。他说：“在机场等待时，乌克兰宣布进入紧急状态，交通不便、审查文件更为严格，就庆幸当时还好选择这班班机。”直至24日傍晚抵达台湾，得知俄军已经入侵乌克兰，让他觉得自己很幸运。另一名在乌克兰待了五年的王同学也说，如今乌克兰发生的情况，真的让他完全没有预想到，觉得自己“运气好”。高中毕业就到赴乌克兰留学的Tim已经在基辅住了近三年，如今看到乌克兰许多地区遭轰炸的新闻画面，感到五味杂陈，“觉得瞬间发生太多事情，心情非常复杂。” “我在乌克兰有很多朋友，很不舍，也很为他们心疼，这真的是非常不幸。”
 
-希望国际足联和欧足联能够迅速做出反应，并提供一个替代的场地。
+信息来源：
 
-俄罗斯将在3月24日的世界杯附加赛中主场迎战波兰，如果他们获胜，将在3月29日主场对阵瑞典或捷克。
+[撤离乌克兰的台湾留学生：没想到真会开战](https://www.dw.com/zh/%E6%92%A4%E7%A6%BB%E4%B9%8C%E5%85%8B%E5%85%B0%E7%9A%84%E5%8F%B0%E6%B9%BE%E7%95%99%E5%AD%A6%E7%94%9F%E6%B2%A1%E6%83%B3%E5%88%B0%E7%9C%9F%E4%BC%9A%E5%BC%80%E6%88%98/a-60904391)
 
-国际足联批评了俄罗斯，表示关注事态发展，并酌情提供关于资格赛的最新情况。
-
-国际足联主席詹尼-因凡蒂诺也在新闻发布会上说：”我们将把这个问题作为一个紧急事项来考虑。 第一场比赛将在一个月后进行。 他说：”我们希望并坚信，在这之前，整个局势将尽快得到解决。
-
-信息源：[サッカー＝ポーランドら3カ国、ロシアでのＷ杯予選開催に反対](https://jp.reuters.com/article/soccer-fifa-idJPKBN2KU05D)
-
-*校对：东京樱花团/喜马拉雅的微尘*
-*发布：东京樱花团/tdownc2p*
+*校对：东京樱花团/知了知了
+发布：东京樱花团/tdownc2p*
 ![](https://assets.gnews.org/wp-content/uploads/2022/02/yht-9.jpg)
  
 
