--- a/gnews/22.md
+++ b/gnews/22.md
@@ -1,31 +1,23 @@
 ---
-title: 日本宣布对俄实施额外制裁
+title: 俄罗斯爆发全国反战抗议 1700多人已被拘留
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2061984/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2062000/)
 
-撰稿：东京樱花团/风翼
-![](https://assets.gnews.org/wp-content/uploads/2022/02/图片4-12.png)
-图片来源于网络
+撰稿：东京樱花团/盖特第一批注册
+![](https://assets.gnews.org/wp-content/uploads/2022/02/image-2315.png)[图片来源](https://www.google.com.hk/imgres?imgurl=https%3A%2F%2Fcdn.theatlantic.com%2Fthumbor%2FfDRek8S-7AyygM672V1hT4_1I4g%3D%2F900x600%2Fmedia%2Fimg%2Fphoto%2F2022%2F02%2Frussia-protests%2Fa01_AP22055639533912%2Foriginal.jpg&amp;imgrefurl=https%3A%2F%2Fwww.theatlantic)
+2月24日，在首都莫斯科和俄罗斯其他地区发生了反对俄罗斯入侵乌克兰的抗议活动。 据一俄罗斯人权监督组织称，截至24日晚（25日清晨），至少有956人被莫斯科的安全当局拘留。 此外，在全国44个城市有超过1745人被拘留。
 
-据每日新闻报道：2月25日，日本岸田文雄首相就应对俄罗斯对乌克兰的军事入侵召开了新闻发布会。宣布了已发表的三项制裁措施以外的制裁措施。
+参加抗议活动的一名20多岁的女性说：”我为站在乌克兰人面前感到羞耻。 我想道歉，经济制裁、国际孤立….。 我认为这就是俄罗斯的末日。”
 
-冻结俄罗斯个人和组织的资产并暂停发放签证
+一位三十多岁的男性上班族愤怒地说，”为什么克里姆林宫里没有人阻止普京总统？ 与乌克兰的战争不是俄罗斯人民的意愿。”
 
-冻结俄罗斯金融机构的资产
+对普京来说，这种国内反弹比国际经济制裁更具破坏性。我们希望，俄罗斯人民的抗议将能够促使军事行动的停止。
 
-限制向俄罗斯军事相关组织出口半导体和其他通用产品
+信息源：[「ウクライナ人に謝りたい」　ロシア各地で反戦デモ　１７００人超拘束](https://news.yahoo.co.jp/articles/3297c221f7c6a42ec0e744a4254b96c10c1a2305)
 
-岸田首相表示，“这是从日本安全的角度上不能忽视的决定，并强烈敦促俄罗斯立即撤回其部队和遵守国际法”。
-
-关于居住在乌克兰的日本国民的疏散问题，日方表示已获得波兰帮助，安排包机到波兰将日本国民从乌克兰转移到其他国家。能源问题上现今没有受到直接影响。还补充表示，俄罗斯这次的行动不仅影响了欧洲国际秩序，也影响到亚洲的国际秩序。虽没有提及到中共的军事扩张，但表示“国际社会合作是向世界其他国家发出一个强有力的信息，通过表达这个立场，我们将能够遏制包括亚洲在内的其他地区的此类行动”。
-
-信息来源
-
-[岸田首相、ロシアへの追加制裁発表　ビザ発給停止など3項目](https://mainichi.jp/articles/20220225/k00/00m/010/032000c)
-
-*校对：东京樱花团/知了知了
-发布：东京樱花团/tdownc2p*
-![](https://assets.gnews.org/wp-content/uploads/2022/02/yht-9.jpg)
+*编辑：东京樱花团/喜马拉雅的微尘
+发布：东京樱花团/平安卿卿*
+![](https://assets.gnews.org/wp-content/uploads/2022/02/%E5%B1%8F%E5%B9%95%E6%88%AA%E5%9B%BE-2022-02-24-151921-2.png)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
