--- a/gnews/25.md
+++ b/gnews/25.md
@@ -1,19 +1,27 @@
 ---
-title: 日本新增感染者6万1259人，死亡206人
+title: 波兰、瑞典、捷克反对在俄罗斯举行2022世界杯足球预选赛
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2061971/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2061991/)
 
-撰稿：东京樱花团/向海
-![](https://assets.gnews.org/wp-content/uploads/2022/02/image-2311.png)
-据NNN总结，24日新增6万1259人感染新冠病毒，206人死亡。
+撰稿：东京樱花团/盖特第一批注册
+![](https://assets.gnews.org/wp-content/uploads/2022/02/图片3-11.jpg)[图片来源](https://sakanowa.jp/topics/21959)
+在俄罗斯军事入侵乌克兰之后，波兰、瑞典和捷克共和国的足球协会24日发表声明，称不应该允许俄罗斯举办2022年世界杯预选赛。
 
-截至23日，重症人数较前一日减少15人至1474人。
+他们在一份联合声明中说：”我们坚定地认为淘汰赛不应该在俄罗斯联邦境内进行。 军事升级将产生严重后果，并将大大降低我们国家足球队和代表团的安全。
 
-信息来源：[国の新規感染者6万1259人、死者206人（24日）](https://news.yahoo.co.jp/articles/678d167eee9398d015cc704d951b22bb191c4901)
+希望国际足联和欧足联能够迅速做出反应，并提供一个替代的场地。
 
-*校对：东京樱花团/喜马拉雅的微尘
-发布：东京樱花团/平安卿卿*
-![](https://assets.gnews.org/wp-content/uploads/2022/02/%E5%B1%8F%E5%B9%95%E6%88%AA%E5%9B%BE-2022-02-24-151921-2.png)
+俄罗斯将在3月24日的世界杯附加赛中主场迎战波兰，如果他们获胜，将在3月29日主场对阵瑞典或捷克。
+
+国际足联批评了俄罗斯，表示关注事态发展，并酌情提供关于资格赛的最新情况。
+
+国际足联主席詹尼-因凡蒂诺也在新闻发布会上说：”我们将把这个问题作为一个紧急事项来考虑。 第一场比赛将在一个月后进行。 他说：”我们希望并坚信，在这之前，整个局势将尽快得到解决。
+
+信息源：[サッカー＝ポーランドら3カ国、ロシアでのＷ杯予選開催に反対](https://jp.reuters.com/article/soccer-fifa-idJPKBN2KU05D)
+
+*校对：东京樱花团/喜马拉雅的微尘*
+*发布：东京樱花团/tdownc2p*
+![](https://assets.gnews.org/wp-content/uploads/2022/02/yht-9.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
