--- a/gnews/26.md
+++ b/gnews/26.md
@@ -1,32 +1,31 @@
 ---
-title: 大直播后记：中国缺教育和信仰
+title: 日本宣布对俄实施额外制裁
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2061950/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2061984/)
 
-整理：HomeL、枫叶红了
-编辑：Mttfly
-![文章配图](https://assets.gnews.org/wp-content/uploads/2022/02/截圖-2022-02-24-下午3.49.05.png)
-中国过去的千年，从晋朝、隋朝、唐朝、清朝到现在，中国人的愚昧和中国人女人裹小脚、男人梳辫子、满人入关，一系列的历史当中，中国这个国家缺的就是教育，缺的就是信仰。
+撰稿：东京樱花团/风翼
+![](https://assets.gnews.org/wp-content/uploads/2022/02/图片4-12.png)
+图片来源于网络
 
-杂教丛生，各种信仰，各种教，什么教都是骗人的。然后杂家遍地，到处是这家、那家，什么道家儒家啊。然后整个中国，杂种丛生。到处是一帮杂种，精神上的杂种、文化上的杂种、人性上的杂种，苦不堪言。
+据每日新闻报道：2月25日，日本岸田文雄首相就应对俄罗斯对乌克兰的军事入侵召开了新闻发布会。宣布了已发表的三项制裁措施以外的制裁措施。
 
-这就像人家大英帝国派去的，第一个不给乾隆皇帝下跪的哥们说的话，这个国家城墙之内，确实美轮美奂；城墙之外，哥仨娶一个媳妇。800年的垃圾从来没清理过，这个破船必须击沉啊。
+冻结俄罗斯个人和组织的资产并暂停发放签证
 
-后来又来了个邪恶的共产党。比爹娘还亲的共产党，抓地主，杀地主，最后整成这样子。中国人真的是一个被诅咒的民族，一点都不为过。那么在过去千年当中，最可怕的就是来自北方、俄罗斯，就是今天的东欧。共产党就来自那！
+冻结俄罗斯金融机构的资产
 
-中国过去的无数次战争，土地的离开，都是跟外蒙、匈奴和北俄罗斯。200年的美国，从1832年、1877年，美国人瓦尔纳都已经到了中国去，已经跟中国开始来友好了。美国都对中国毕恭毕敬了，称为神圣的天国。没有理由跟美国作对。是吧？你中国的最好的协和医院、北京大学、清华都是美国人根据战争之后各种款项给你建的。
+限制向俄罗斯军事相关组织出口半导体和其他通用产品
 
-资料来源：[2022年2月23日文贵大直播EST9:00-9:10](https://gtv.org/video/id=62162fe908ba8a07b1a1ea8a)
+岸田首相表示，“这是从日本安全的角度上不能忽视的决定，并强烈敦促俄罗斯立即撤回其部队和遵守国际法”。
 
-发布：tianzhihuan
+关于居住在乌克兰的日本国民的疏散问题，日方表示已获得波兰帮助，安排包机到波兰将日本国民从乌克兰转移到其他国家。能源问题上现今没有受到直接影响。还补充表示，俄罗斯这次的行动不仅影响了欧洲国际秩序，也影响到亚洲的国际秩序。虽没有提及到中共的军事扩张，但表示“国际社会合作是向世界其他国家发出一个强有力的信息，通过表达这个立场，我们将能够遏制包括亚洲在内的其他地区的此类行动”。
 
-**更多资讯，请关注：
-**[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
-[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
-[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/dKQ6vFY9Fu)
-[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
+信息来源
 
+[岸田首相、ロシアへの追加制裁発表　ビザ発給停止など3項目](https://mainichi.jp/articles/20220225/k00/00m/010/032000c)
+
+*校对：东京樱花团/知了知了
+发布：东京樱花团/tdownc2p*
+![](https://assets.gnews.org/wp-content/uploads/2022/02/yht-9.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
