--- a/gnews/27.md
+++ b/gnews/27.md
@@ -1,21 +1,27 @@
 ---
-title: 中日财经爆&#124; 蚂蚁集团去年第三季净利润大跌10%
+title: 俄罗斯人民 如何看待普京的侵略行为
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2061949/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2061977/)
 
-撰稿：东京樱花团/peterwong
-![](https://assets.gnews.org/wp-content/uploads/2022/02/image-2310.png)[图片来源](https://www.google.com.hk/imgres?imgurl=https%3A%2F%2Fi3.wp.com%2Fwww.alkhaleej.ae%2Fsites%2Fdefault%2Ffiles%2Fstyles%2Fsocial_large%2Fpublic%2F2021-11%2F3839419.jpeg&amp;imgrefurl=https%3A%2F%2Fwww.archyde.com%2Falibabas-profits-fall-81-on-the-impact-of-the-c)
-阿里巴巴（2月24日）周四晚间发布最新财报称，公司在2021年第三季，从蚂蚁集团录得投资收益58.11亿元人民币；据此测算，蚂蚁集团同期录得净利润176.1亿元，较第二季下降10.7%。
+撰稿：东京樱花团/闻雨
+![](https://assets.gnews.org/wp-content/uploads/2022/02/图片2-17.jpg)[图片来源](https://www.google.com.hk/imgres?imgurl=https%3A%2F%2Fmedia.socastsrm.com%2Fwordpress%2Fwp-content%2Fblogs.dir%2F648%2Ffiles%2F%2F2022%2F02%2Fcp-ukraine-scaled-e1645722686827.jpg&amp;imgrefurl=https%3A%2F%2Fwww.ckom.com%2F2022%2F02%2F24%2Fcivilians-fleeing-ukr)
+产经新闻2月25日报道：2月24日在俄罗斯首都莫斯科及其他地区发生了反对俄罗斯入侵乌克兰的抗议活动。据一个俄罗斯人权监督组织称，截至24日晚（25日清晨），莫斯科至少有956人被安全部门拘留，全国44个城市中有超过1745人被拘留。
 
-阿里巴巴延后一个季度计入所有权益法核算的投资损益，据其此前披露的财报数据测算，蚂蚁集团去年第二季录得的净利润为197.1亿元，环比增约45%。
+参加抗议活动的一名20多岁的女性职员说：”我无颜站在乌克兰人面前，我感到羞耻，我想给乌克兰人道歉”，”她说。”经济制裁、国际孤立….。我认为俄罗斯的末日就要来了”。
 
-在IPO临门遭叫停后，蚂蚁集团陷入漫长的整改期，目前尚未出现重启IPO的曙光。其最新相关动态为：中共国监管部门近期要求国有企业启动新一轮检查，监管当局要求这些国有企业提交与蚂蚁集团有关的股票投资、资产支持证券风险敞口以及贷款的细节。
+一位三十多岁的男性上班族愤怒地说，”为什么克里姆林宫里没有人阻止普京总统？ 与乌克兰的战争不是俄罗斯人民的意愿”。
 
-消息来源：[蚂蚁集团去年9月底止的三个月净利润176亿元，环比下降逾10%–路透测算](https://cn.reuters.com/article/ant-group-profit-0225-idCNKBS2KU057?il=0)
+辩论也在俄罗斯社交网站（SNS）上激烈地进行着。
 
-*编辑：东京樱花团/喜马拉雅的微尘
-发布：东京樱花团/平安卿卿*
-![](https://assets.gnews.org/wp-content/uploads/2022/02/%E5%B1%8F%E5%B9%95%E6%88%AA%E5%9B%BE-2022-02-24-151921-2.png)
+只有少数人赞扬这次入侵，“我们成功了!我们必须迅速将我们的人民从乌克兰政府的迫害中解救出来“。
+
+然而更多的是批评：“普京应该作为战争罪犯受到惩罚。”，”独裁者总是以’生存区’或’保护人民’的名义发动战争。”，“没有任何语言可以为战争辩护”，”这是国家的耻辱！”。这些评论才是人民的心声。
+
+信息来源：[「ウクライナ人に謝りたい」　ロシア各地で反戦デモ　１７００人超拘束](https://news.yahoo.co.jp/articles/3297c221f7c6a42ec0e744a4254b96c10c1a2305)
+
+*校对：东京樱花团/喜马拉雅的微尘*
+*发布：东京樱花团/tdownc2p*
+![](https://assets.gnews.org/wp-content/uploads/2022/02/yht-9.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
