--- a/gnews/6.md
+++ b/gnews/6.md
@@ -1,40 +1,88 @@
 ---
-title: 莫里森对中共可能在俄罗斯入侵乌克兰期间入侵台湾发出警告
+title: 坚决反对战争
 ---
-`英國倫敦喜莊園 Himalaya London Club UK` [轉載自GNews](https://gnews.org/zh-hans/2062078/)
+`纽约香草山MOS02` [轉載自GNews](https://gnews.org/zh-hans/2062110/)
 
-![Prime Minister Scott Morrison has cautioned China ‘not to think’ about invading Taiwan as Russia invades Ukraine. Picture: NCA NewsWire / Gaye Gerard](https://content.api.news/v3/images/bin/420f10df87c6929d52da6ba13584081f)总理斯科特·莫里森警告中共国“不要考虑”在俄罗斯入侵乌克兰时入侵台湾。(图源：NCA 新闻专线)
-斯科特·莫里森表示，中共国正在“非常小心仔细”地观察俄罗斯对乌克兰的入侵，人们担心台湾可能成为下一个目标。
-随着在弗拉基米尔·普京下令派遣俄罗斯军队进入乌克兰东部执行“维和任务”之后——西方普遍认为这是俄罗斯入侵的第一步——人们越来越担心这对其在亚太地区可能意味着什么感到担忧。
-中共国没有效仿跟随美国、英国、欧盟国家、澳大利亚等其他国家对俄罗斯实施制裁。尽管世界各国领导人都在呼吁中共国国家主席习近平这样做。人们担心，台湾的领土完整可能被中共大陆国破坏，就像俄罗斯对乌克兰的破坏一样。
-尽管莫里森先生告诫不要将两者相提并论，但他表示，中共国“甚至不应该考虑”入侵台湾。“我相信中国当然在非常仔细地观察这件事，这就是为什么我一直不厌其烦地说，中国需要像其他国家一样采取强有力的立场来谴责俄罗斯的所作所为。”莫里森先生告诉七号电视网台，“我欢迎中国到目前为止所说的应该缓和紧张局势的事实，但他们需要更进一步，谴责暴力威胁以及任何为此进行挑衅的暗示。” 莫里森先生表示，中共国在谴责欺凌和暴力威胁方面可以发挥“重要作用”。
-“欺凌无论发生在哪里，尤其是在我们自己的地区，都是我和我的政府所反对的。”
-莫里森先生对九号电视台说：“我要指出的是，那些寻求欺凌和威胁的国家，却不向这些国家发出警告，这是令人担忧的。”
-“在这个问题上保持沉默在我们这个地区非常令人担忧。但我们地区的所有国家都想知道，那些比我们大得多的国家将以负责任的方式行事，谴责欺凌和恐吓。”
-国防部长彼得·达顿在接受 2GB 电台采访时表示，他对中共国没有进行干预以阻止入侵感到失望。“如果有一个（人）可以阻止普京总统进入乌克兰，那就是习主席。”达顿先生说，。“中国政府…………有能力阻止普京的行动，但当然，他们当然做了完全相反的事情。他们说了鼓励的话，我认为这确实是每个观察者对中国目前所走处轨道的人非常关心的问题巨大担忧。”
-早些时候，塔斯马尼亚州参议员杰奎·兰比 (Jacqui Lambie) 表示，当整个世界都在关注东欧的危机时，不应该把目光从中国和台湾移开。“因为我的天啊，如果你让他们两个都去，中国在接下来的一个月左右去打台湾，我们将受到很大的伤害。”她告诉九号电视台。
-“不要坐着不动，不要光说不做，开始行动吧。我跟你说，你最好赶紧过去。你最好做点什么，因为现在他正在胡作乱为，而你却允许他这么做。”
+作者：香草山健身部 – 新世界的一员
+![This image has an empty alt attribute; its file name is image0.jpg](https://cdn.discordapp.com/attachments/902205163622776852/923974543167590420/image0.jpg)![This image has an empty alt attribute; its file name is image1-5.jpg](https://assets.gnews.org/wp-content/uploads/2022/02/image1-5.jpg)
+七哥直播爆料习普秘会俩小时，
+俩帝的秘谈会导致世界大变，
+灾难来临。
+话音刚落，
+乌克兰上空就出现炮火，
+霎那间人们失去了美好的生活，
+乌克兰的人民沉浸在战争的迷雾中挣扎求生。
+有人魔的世界灾难不断，
+俄罗斯就这样在世界都说不的时候，
+大摇大摆的海陆空全方位来了。
+多少人泪眼相对辞别亲人，
+泪戚戚兮不知可还有归期。
+多少平民百姓都在生死边缘恐惧，
+多少孩子茫然无措无助于世。
+二十一世纪的残酷战争就这样，
+突然走进了文明的现实生活。
+这是一场人为的政治战争，
+这是一场贪婪欲望导致的战争，
+这也是会给台湾带来危机的毒谋战争。
+除了反侵略战争，
+没有一场战争是具有必要性，
+更没有一场战争是正义的需要。
+俄罗斯的普大帝背信弃义于天下，
+他忘了1994的俄、美、英同时的保证，
+乌克兰国家安全领土完整，
+《布达佩斯备忘录》成了一推废纸。
+世界该认清俄罗斯的卑鄙和无耻，
+它的背信弃义，背后插刀、趁火打劫由来已久。
+1900年八国联军侵华，
+俄一面进攻北京一面趁满清政府无暇他顾，
+以保护侨民为由，调集重兵占领中国东北全境。
+制造骇人听闻的“庚子俄难”，
+“海兰泡惨案”，
+“江东六十四屯惨案”，
+大量无辜中国平民被屠杀。
+1901年又勒索中国赔款1.3亿两白银，
+1938年趁中国深陷抗日漩涡，
+对居住远东地区中国人进行惨无人道的种族清洗，
+几十万中国人被屠杀。
+没有一场战争的伤害离开过中国人民，
+习二不顾俄罗斯对中国人犯下的罪孽深重，
+无视俄罗斯侵占中国领土最多，
+为了个人霸权帝位不顾国恨家仇，
+与其几年狼狈为奸同床共枕，
+秘谋天下，
+以至于乌克兰开战，
+台湾危在旦夕，
+无辜的中国人再次被迫推上风口浪尖。
+旧伤挥之不去，
+新伤又近在眼前，
+万千白骨推成山的历史历历在目，
+新的伤亡又近在眼前，
+多少平民及平民孩子都将沦为习一尊前面的铜墙铁壁。
+只为了他的大一统。
+坚决反对所有反人类的战争，
+坚决反对这一场政治游戏，
+坚决反对任何借口制造的战争灾难，
+它是罪恶的、邪恶的，
+它不是生产平民帝王将相出处，
+它是上层的政治、权利、掠夺的需要，
+是平民的血流成河，
+任何破坏世界和平的人都是罪犯，
+是应该受到国际审判的战争犯，
+上天一定会做出最严厉的惩罚！
+![This image has an empty alt attribute; its file name is Feb-4.jpg](https://assets.gnews.org/wp-content/uploads/2022/02/Feb-4.jpg)
+**审核/编辑/发稿：春草**
 
-简评：
-想要中共国跟随美国、英国、欧盟国家、澳大利亚等其他国家对俄罗斯实施制裁，显然是不可能的。中共不会介意看到东欧出现不稳定，因为这能减轻西方，特别是美国，可以用于印度-太平洋地区的压力、注意力和资源。这给了中共国更多的灵活性和喘息空间。
-习进平和他的核心成员也许也正在等待着一个时机，以迅雷不及掩耳之势攻占台湾，为了这一天中共已经筹划了很多年。中共一定认为只要拿下台湾，造成既成事实，中共就可能再续命几十年，习近平也可暂时化解他在党内的危机。但是，如果中共发动对台战争，美欧日等国势必会给予中共政府及高官更严厉的制裁，而这些制裁将直接影响中共各个派系的海外利益，中共内部的反习势力很有可能借机清除习近平。但无论如何，如果真走到这一步，最后等待中共的一定会是加速灭亡，全世界正义的力量都会站出来围剿中共。
+**更多资讯，更多关注**
 
-新闻链接：[https://www.news.com.au/finance/work/leaders/scott-morrison-fires-warning-over-china-and-taiwan-amid-russiaukraine-crisis/news-story/2c1b35b8cc64d3f820745bf60fdf72cc](https://www.news.com.au/finance/work/leaders/scott-morrison-fires-warning-over-china-and-taiwan-amid-russiaukraine-crisis/news-story/2c1b35b8cc64d3f820745bf60fdf72cc)
+[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
 
-翻译/简评：xiaofeimao
+[**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
 
-PR:Harvey（叶知秋）
+[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
 
-* * *
+[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
+![This image has an empty alt attribute; its file name is image0.jpg](https://cdn.discordapp.com/attachments/902205163622776852/923974543167590420/image0.jpg)
 
-- [点击阅读英国伦敦喜庄园在G-News 的更多精彩文章](https://gnews.org/zh-hans/author/himalaya_hawk/)
-- [点击观看英国伦敦喜庄园在G-TV的精彩视频](https://gtv.org/web/#/UserInfo/5ee680a45bd6f123dd104807)
-- [欢迎加入【英国伦敦喜庄园】Discord官方群](https://discord.gg/VsNaHaMUsy)
-
-
-编辑：【英国伦敦喜庄园编辑部】
-
-![](https://assets.gnews.org/wp-content/uploads/2021/08/41bf97c0-3bb2-4a07-ad75-91b96dc3203c.jpg)
 
  
 
