--- a/gnews/11.md
+++ b/gnews/11.md
@@ -1,48 +1,18 @@
 ---
-title: 战争是灾难
+title: 星链 &#8220;重新连接汤加与世界&#8221;
 ---
-`纽约香草山MOS03` [轉載自GNews](https://gnews.org/zh-hans/2062076/)
+`新加坡狮城农场 Himalaya Singapore` [轉載自GNews](https://gnews.org/zh-hans/2062120/)
 
-作者：纽约香草山健身部—新世界的一员
-![](https://cdn.discordapp.com/attachments/902205163622776852/923974543167590420/image0.jpg)
-乌克兰的人们在死亡中恐惧，
-中共在进行罪恶的洗脑，
-为打下台湾做预期准备。
-无知的人们呀，
-那被蒙蔽了心智的人们，
-唾液横飞眉飞色舞。
-忘记了战争的残酷，
-是无数人的尸横遍野。
-请蠕动一下你的良知，
-不要旁观更不要无动于衷。
-这不是正义的战争，
-这是一场转移病毒溯源的罪恶战争，
-这是一场挤经济泡沫的无情战争，
-这是一场梦想一尊地位的恶毒战争。
-残酷，罪恶、血腥是战争的狰狞面目，
-不要等灾难来临你才醒悟，
-同一个地球村同一个命运。
-祈祷吧，为世界的和平祈祷，
-反对吧，拒绝所有借口的大屠杀，
-勇敢的抗议吧，和平才是人类的文明！
+**编译：verifunny**
+![](https://assets.gnews.org/wp-content/uploads/2022/02/33-3.png)
+据路透社近日报道，SpaceX公司的一个工程师团队为太平洋小岛国汤加的偏远村庄恢复了高速互联网服务，这些村庄在上个月一座大火山爆发后，与附近斐济的海底通信线路被切断。
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/image1-6.jpg)
+埃隆·马斯克的星链运用之广泛，自动化科技可以利用星链来输送讯息，无论什么地点，什么时候。再加上Meta的Metaverse，人类是否创造了一个全球的虚拟世界？
 
-- **审稿/校对/发稿：**qiutian（邱甜）
+科技如此的日新月异，我个人在想地球的统治者会如何对待我们这些老百姓。
 
+**新闻来源**：[https://www.reuters.com/world/asia-pacific/musks-starlink-connects-remote-tonga-villages-still-cut-off-after-tsunami-2022-02-23/](https://www.reuters.com/world/asia-pacific/musks-starlink-connects-remote-tonga-villages-still-cut-off-after-tsunami-2022-02-23/)
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/Screen_Shot_2022-02-01_at_11.29.09_PM-1-2.png)
-
-**更多资讯，更多关注**
-
-[**纽约香草山农场GTV-****香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
-
-[**纽约香草山农场GTV-MOS TALK ****香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
-
-[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
-
-[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
-![](https://cdn.discordapp.com/attachments/902205163622776852/923974543167590420/image0.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
