--- a/gnews/23.md
+++ b/gnews/23.md
@@ -1,37 +1,33 @@
 ---
-title: 日媒看台海局势┃许多日中友好人士被卷入了中共内斗而被以间谍罪抓捕
+title: 日本岸田首相宣布对俄罗斯追加制裁
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2061998/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2062035/)
 
-编译：东京樱花团/Hopkins
+撰稿：东京樱花团 /文小白
 
-（编者按）在俄罗斯占领乌克兰领土的时候，台海局势将成为下一个热点，日本产经新闻台湾支局在自媒体上发表专栏文章，从一个独特的角度分析中国、台湾、日本及周边地区的政治局势。现编译给观众，以便对台海局势有更深的了解。
-![](https://assets.gnews.org/wp-content/uploads/2022/02/图片5-7.jpg)图片：产经新闻
-据日本媒体报道，前几天，在上海有一位50多岁的日本人，被中共警方以间谍罪带走，家属和日本政府都联系不到、让人感到十分担心。
+日本岸田文雄首相25日上午召开了国家安全委员会部长级会议，基于G7紧急峰会的内容，讨论了乌克兰局势问题，决定对俄罗斯采取追加制裁措施。并随即召开了新闻发布会。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/图片9-3.png)照片来源NHKWEN
+在新闻发布会上，岸田首相首先严厉谴责了俄罗斯入侵乌克兰是明显违反了国际法，作为追加制裁措施，决定对俄罗斯个人和团体进行资产冻结以及半导体出口限制。
 
-中共这些年一直非常热心抓日本间谍。我在北京的时候，大概就有10个人左右被捕，后来都判了刑，其中有好几个还是我认识的人。
+岸田首相表示，“俄罗斯军队不顾国际社会的努力入侵乌克兰，是企图单方面以武力改变现状，改变乌克兰的主权和领土，这是明显的侵犯。俄罗斯违反了国际法，是动摇国际秩序基础的行为，我们绝对不能接受，必须严厉谴责。”
 
-他们之中，有一些是所谓的日中友好人士，长年游走于中国政府和各个日中友好团体之间，是因为不小心被卷入了中国共产党内部的权力斗争而被抓的。
+岸田还说：“从日本的安全角度来看，这也是不容忽视的。我们将与七国集团和国际社会密切合作，敦促俄罗斯立即撤军并遵守国际法。”
 
-还有一些是摄影爱好者，在海边拍到了一些军舰潜水艇而被捕；还有被中国的公司请去在寻找温泉的技术人员，因为用探索设备不小心看到了地下的军事设施；或者是日本学者，在地摊上买了几本被中共称为「内部资料」的历史文献。在民主国家、这些都根本不是问题，但是在中国都会被以间谍罪重判。
+追加制裁内容：
 
-日本二战之后，就废除了间谍法和反间谍法等法律，也没有培训在国外从事间谍活动的人员，更没有编有关预算。
+▽ 对符合资产冻结和暂停签证条件的俄罗斯个人和团体进行制裁；
 
-日本有和平宪法，既没有对中国的领土野心、中国也没有什么技术可偷。这些所谓的日本间谍，和渗透进日本国会及各大企业的那些中国的间谍比起来，根本不值得一提。
+▽ 针对俄罗斯金融机构进行资产冻结；
 
-我曾在北京采访过的一位被定罪为日本间谍的76岁的老先生，前不久在狱中去世了。他曾经是一个彻头彻尾的亲中派，早年在航空公司工作，好几条中日间的航线就是他主导的开设的。晚年，他成立了一个中日技术人才交流的团体，把很多日本退休的工程师请到中国传授技术，受到了中国各地方政府的欢迎。
+▽ 限制俄罗斯军事相关组织的出口，以及半导体的出口。
 
-但是，和他有密切关系的中共官员，基本上都是温家宝系统的人。后来，习近平派为了打压温派，就把他以逃税的名义抓起来，后又转成间谍。
+此外，岸田首相还强调，他将尽一切努力确保乌克兰境内约120名日本民众的安全。对打算通过陆路撤离至邻国波兰的民众，提供西部利沃夫的临时联络处对接。以及已经安排好了从波兰撤离到其他国家的包机。
 
-听说，主要是想从他嘴里掏出一些温派官员的经济问题，他就这样稀里胡涂地成了间谍，被判刑12年。这几年身体不好，太太和日本政府想帮他办保外就医，被中方拒绝，结果，没有撑过这个冬天。
+岸田还强调，日本将积极与其他国家领导人建立外交关系，并将与七国集团和国际社会在各个层面密切合作，努力推动外交手段解决争端。
 
-现在，中国国内以间谍罪在服刑的台湾人，至少几十个，也有一说是100人以上的。大部分是台商，也有一些蓝营的学者，绿营的好像只有李明哲。他们和那些所谓的日本间谍一样，基本上都是冤枉的。独裁政权、每天都在做恶。
+此外，岸田还表示，“将与相关国家合作，采取必要措施，尽一切努力稳定国际能源市场，确保对日本的能源供应的稳定”。岸田宣布，在原油价格持续上涨的情况下，为了尽量减少对民众生活和企业活动的不利影响，将大幅增加和扩大对石油批发企业的补贴，以遏制零售价格的大幅上涨。
 
-今后，日本和台湾在营救被捕国人的问题上，也有很多的合作空间。
-
-作者：日本产经新闻台湾支局矢板明夫。
-
-信息来源：[许多日中友好人士被卷入了中共内部的权力斗争而被以间谍罪抓捕](https://www.facebook.com/YaitaAkio/posts/152551860534057)
+信息来源：[岸田首相 対ロシア追加制裁公表 資産凍結や半導体輸出規制など](https://www3.nhk.or.jp/news/html/20220225/k10013500511000.html)
 
 *校对：东京樱花团/喜马拉雅的微尘*
 *发布：东京樱花团/tdownc2p*
