--- a/gnews/30.md
+++ b/gnews/30.md
@@ -1,18 +1,19 @@
 ---
-title: 台湾宣布参与对俄罗斯经济制裁
+title: 日本新增感染者6万1259人，死亡206人
 ---
-`首尔天池农场` [轉載自GNews](https://gnews.org/zh-hans/2061854/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2061971/)
 
-撰稿：追着曙光跑
+撰稿：东京樱花团/向海
+![](https://assets.gnews.org/wp-content/uploads/2022/02/image-2311.png)
+据NNN总结，24日新增6万1259人感染新冠病毒，206人死亡。
 
-据台湾中央通讯社2月25日的报道，台湾总统府发言人张惇涵今日（25日）宣布，关于俄罗斯入侵乌克兰的军事行动，将参与国际社会对俄罗斯的经济制裁。
-![](https://assets.gnews.org/wp-content/uploads/2022/02/WhatsApp-Image-2022-02-25-at-12.17.45.jpeg)图片来源：原新闻
-台湾政府严正谴责俄罗斯对乌克兰主权的侵害，以及对于区域及全球和平稳定的破坏。
+截至23日，重症人数较前一日减少15人至1474人。
 
-张惇涵表示，台湾仍呼吁各方恢复和平对话，理性解决争端。而台湾作为国际社会的一员，对于有助于和平解决争议的努力，台湾都愿意参与。
+信息来源：[国の新規感染者6万1259人、死者206人（24日）](https://news.yahoo.co.jp/articles/678d167eee9398d015cc704d951b22bb191c4901)
 
-信息来源：[總統府：譴責俄羅斯軍事行動 台灣參與對俄經濟制裁](https://www.cna.com.tw/news/aipl/202202250047.aspx)
-
+*校对：东京樱花团/喜马拉雅的微尘
+发布：东京樱花团/平安卿卿*
+![](https://assets.gnews.org/wp-content/uploads/2022/02/%E5%B1%8F%E5%B9%95%E6%88%AA%E5%9B%BE-2022-02-24-151921-2.png)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
