--- a/gnews/36.md
+++ b/gnews/36.md
@@ -1,9 +1,31 @@
 ---
-title: 2/24/2022 文贵紧急直播：不论打不打台湾，明年的中共国都将尸横遍野，若打了台湾，中共将遭受比俄罗斯更惨的制裁
+title: 新中国联邦新闻、GTV新闻访谈简报&#124;2022年2月24日晚
 ---
-`秘密翻译组-北美组` [轉載自GNews](https://gnews.org/zh-hans/2061681/)
+`纽约香草山MOS01` [轉載自GNews](https://gnews.org/zh-hans/2061728/)
 
-秘密翻译组-北美组
+作者：香草山翻译部
+
+![](https://assets.gnews.org/wp-content/uploads/2022/02/Screen-Shot-2022-02-20-at-4.14.11-PM-3.png)
+
+
+![](https://assets.gnews.org/wp-content/uploads/2022/02/text-SC-2-3.png)
+校对：Stay文苑
+
+编辑：Stay文苑
+
+发稿：Stay文苑
+
+新闻：[https://gtv.org/broadcast/watch/6218322908ba8a07b1a302ab](https://gtv.org/broadcast/watch/6218322908ba8a07b1a302ab)
+访谈：[https://gtv.org/broadcast/watch/62183bb508ba8a07b1a308bd](https://gtv.org/broadcast/watch/62183bb508ba8a07b1a308bd)
+
+![](https://assets.gnews.org/wp-content/uploads/2022/02/1-calendar-4.png)
+
+**更多资讯，更多关注**
+[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
+[**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
+[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
+[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
+[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
 
  
 
