--- a/gnews/1.md
+++ b/gnews/1.md
@@ -1,25 +1,23 @@
 ---
-title: 网络战争！全球最大骇客组织「匿名者」向俄罗斯宣战
+title: 俄军控制切尔诺贝利核电站 欧洲面临新的安全隐患
 ---
-`蓝莲花农场` [轉載自GNews](https://gnews.org/zh-hans/2062142/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2062224/)
 
-全球最大骇客组织匿名者（Anonymous）于25日表示将正式对俄罗斯政府进行「网路战争」更直接标记乌克兰Hashtag，同时声称已骇进俄罗斯媒体RT News（今日俄罗斯）网站，使网站关闭。
+撰稿：东京樱花团/盖特第一批注册
+![](https://assets.gnews.org/wp-content/uploads/2022/02/image-2321.png)[图片来源](https://www.google.com/maps/uv?pb=!1s0x472a7da75fb49db3%3A0xbdc209edda2b9bc0!3m1!7e115!4shttps%3A%2F%2Flh5.googleusercontent.com%2Fp%2FAF1QipN4Jhyc0PXKWdH7uSIrMQS3eYTZ1HyuQ4Us6TO8%3Dw252-h160-k-no!5z5paw5a6J5YWo6ZaJ44GY6L6844KB5qeL6YCg54mpIC0gR29vZ2xlIOakn)
+乌克兰总统府顾问24日透露，切尔诺贝利核电站已被俄罗斯军队占领。
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/2345截图20220225125747_副本.png)图片来源：Getty
+俄罗斯的军事攻击发生之后，谁不能保证切尔诺贝利核电站是安全的，一旦发生意外将是欧洲最严重的威胁之一”。
 
-骇客组织「匿名者」转发多篇俄乌战争相关影音，文中多次提及普京，更指称将攻击俄罗斯媒体RT News的网站，且骇进了俄罗斯的网路服务供应商（ISP）Com2Com、PTT-Teleport Moscow、RELCOM和Sovam Teleport等，将以「网路战争」制裁俄罗斯对于乌克兰的入侵，甚至发文嘲讽「RT很努力在恢復页面」。据了解，RT News网站曾几度暂时关闭后，已恢复正常。
+除此之外，俄罗斯军队还控制了赫尔松南部地区的部分地区，并部署了伞兵部队，以攻克基辅附近的霍斯托梅尔机场。
 
-简评：现代化战争怎能少了网络战，骇客组织「匿名者」以「网路战争」制裁俄罗斯实乃正义者的自发行动，愿全球的正义者都能加入这场关乎人类命运的战争。骇客组织「匿名者」，新中国联邦是坚守正道主义的正义力量，欢迎你们加入！
+首都基辅附近的霍斯托梅尔机场也已被封锁。
 
-新闻来源：[yahoo](https://tw.news.yahoo.com/%E9%A7%AD%E5%AE%A2%E7%B5%84%E7%B9%94%E3%80%8C%E5%8C%BF%E5%90%8D%E8%80%85%E3%80%8D%E6%94%BB%E6%93%8A%E4%BF%84%E7%BE%85%E6%96%AF%E7%B6%B2%E7%AB%99-024050396.html)
+信息源：[ウクライナ各地で戦闘続く、大統領が総動員令　ロシア軍は首都標的か](https://www.asahi.com/international/reuters/CRWKBN2KU00T.html)
 
-撰稿/发布：一叶知秋
-
-**更多资讯，请关注：**
-[多伦多蓝莲花农场 Gettr](https://gettr.com/user/Blue_Lotus)
-[多伦多蓝莲花农场 YouTube](https://www.youtube.com/channel/UCy1z2nsBLlE7BZyS_a_BMWw)
-[多伦多蓝莲花农场 Discord](https://discord.gg/awC74U4YwJ)
-
+*编辑：东京樱花团/喜马拉雅的微尘
+发布：东京樱花团/平安卿卿*
+![](https://assets.gnews.org/wp-content/uploads/2022/02/%E5%B1%8F%E5%B9%95%E6%88%AA%E5%9B%BE-2022-02-24-151921-2.png)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
