--- a/gnews/18.md
+++ b/gnews/18.md
@@ -1,21 +1,48 @@
 ---
-title: 乌克兰10万人流离失所、数千人逃离
+title: 战争是灾难
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2062026/)
+`纽约香草山MOS03` [轉載自GNews](https://gnews.org/zh-hans/2062076/)
 
-撰稿：东京樱花团/风翼
-![](https://assets.gnews.org/wp-content/uploads/2022/02/图片8-4.png)图片来源于网络
-据JIJI.COM媒体转发法新社报道，联合国难民事务高级专员办事处(UNHCR)发言官2月24日表示，俄罗斯入侵后乌克兰流离失所者人数已达到10万人以上，数千人以逃离国外。
+作者：纽约香草山健身部—新世界的一员
+![](https://cdn.discordapp.com/attachments/902205163622776852/923974543167590420/image0.jpg)
+乌克兰的人们在死亡中恐惧，
+中共在进行罪恶的洗脑，
+为打下台湾做预期准备。
+无知的人们呀，
+那被蒙蔽了心智的人们，
+唾液横飞眉飞色舞。
+忘记了战争的残酷，
+是无数人的尸横遍野。
+请蠕动一下你的良知，
+不要旁观更不要无动于衷。
+这不是正义的战争，
+这是一场转移病毒溯源的罪恶战争，
+这是一场挤经济泡沫的无情战争，
+这是一场梦想一尊地位的恶毒战争。
+残酷，罪恶、血腥是战争的狰狞面目，
+不要等灾难来临你才醒悟，
+同一个地球村同一个命运。
+祈祷吧，为世界的和平祈祷，
+反对吧，拒绝所有借口的大屠杀，
+勇敢的抗议吧，和平才是人类的文明！
 
-联合国难民事务高级专员办事处在同一天发表的声明表示，以准备向乌克兰提供人道主义援助，并呼吁邻近的欧洲国家保持其边界开放，并接收流离失所者。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/image1-6.jpg)
 
-信息来源
+- **审稿/校对/发稿：**qiutian（邱甜）
 
-[ウクライナ、国内避難１０万人　数千人は国外脱出―ＵＮＨＣＲ](https://www.jiji.com/sp/article?k=2022022500344&amp;g=int)
 
-*校对：东京樱花团/知了知了
-发布：东京樱花团/tdownc2p*
-![](https://assets.gnews.org/wp-content/uploads/2022/02/yht-9.jpg)
+![](https://assets.gnews.org/wp-content/uploads/2022/02/Screen_Shot_2022-02-01_at_11.29.09_PM-1-2.png)
+
+**更多资讯，更多关注**
+
+[**纽约香草山农场GTV-****香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
+
+[**纽约香草山农场GTV-MOS TALK ****香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
+
+[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
+
+[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
+![](https://cdn.discordapp.com/attachments/902205163622776852/923974543167590420/image0.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
