--- a/gnews/21.md
+++ b/gnews/21.md
@@ -1,21 +1,32 @@
 ---
-title: 撤离乌克兰的台湾留学生：没想到真会开战
+title: 大直播后记：靠啥灭共
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2062009/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2062065/)
 
-撰稿：东京樱花团/上善若水
-![](https://assets.gnews.org/wp-content/uploads/2022/02/图片7-2.jpg)（图片来源于本文链接）
-3名台湾学生二月中从基辅撤至乌克兰西部，23日搭机前往土耳其转机至台湾，直至下飞机后，才得知俄罗斯已入侵乌克兰。在感到幸运的同时，他们也非常担心仍留在乌克兰的朋友的安全。据台湾教育部24日统计，乌克兰共有12名台湾留学生，除了3人已经抵达台湾外，另有2人分别在乌克兰东部和南部，另外有7人仍留在基辅。
+整理：HomeL、枫叶红了
+编辑：小红帽
+![文章配图](https://assets.gnews.org/wp-content/uploads/2022/02/截圖-2022-02-24-下午3.49.05.png)
+我就看了后想笑。火鸡龚（龚小夏），你不用准备两杆枪，你把这两个脚丫子从窗户伸出来，我们战友全都跑了跑。全跑哪里呀？跑到袋鼠袋子去了。你那两个脚丫子比枪管用。我笑晕了。我还准备两杆枪，他们来我就毙了他。我想告诉火鸡龚，你根本不需要，就弄一只火鸡，挂在你门口，我们的人都远远避之。飞机都不敢路过。这比北朝鲜的墙都管用。下来了，是吧？你那两只脚丫子，只要一露出来，挂个照片，我们都得抱头鼠窜，知道吗？就这谎，她也敢撒。
 
-在塔夫里维尔纳兹基大学攻读语言专业的台湾学生Tim表示，2月上旬时，基辅整个城市运作非常正常，超市供应充足，人们也不感到恐慌，但后来随着情势愈来愈紧张，14日决定离开基辅，撤离到离东部俄罗斯边境更远的利沃夫，“我当时没有很紧张，主要是西部没什么事，但也不能说完全不紧张。”城市利沃夫是位于乌克兰西部的观光城市，近几周成为住在基辅或乌俄边境居民撤离的避难地。Tim向德国之声表示，原本要搭24日往土耳其飞机，因为该航班只需在伊斯坦布尔机场等候转机两小时，但后来选择23日需等候转机13个小时的航班。他说：“在机场等待时，乌克兰宣布进入紧急状态，交通不便、审查文件更为严格，就庆幸当时还好选择这班班机。”直至24日傍晚抵达台湾，得知俄军已经入侵乌克兰，让他觉得自己很幸运。另一名在乌克兰待了五年的王同学也说，如今乌克兰发生的情况，真的让他完全没有预想到，觉得自己“运气好”。高中毕业就到赴乌克兰留学的Tim已经在基辅住了近三年，如今看到乌克兰许多地区遭轰炸的新闻画面，感到五味杂陈，“觉得瞬间发生太多事情，心情非常复杂。” “我在乌克兰有很多朋友，很不舍，也很为他们心疼，这真的是非常不幸。”
+就像路大脑袋（路德），他要灭共，你靠啥灭共呢？你靠灭共呢？靠你老婆?靠那个给你生了孩子，你不养的这媳妇儿？靠你那个愚蠢的头和结结巴巴的嘴？靠你那个炒10个鸡蛋的蛇妖闫（闫丽梦）？鸡蛋闫，蛇妖闫？就这也有人信。为什么，你知道吗？我们很多人脑子太空白，太无知。就像这个普京搞乌克兰，国内有些体制内的战友说，“七哥，我刚参加晚会，看来没打台湾的意图。最近不止对台，特别是我们这个省，就是对台最重要的，还是让我们继续团结台湾，照顾好这些老兵，继续统战战略。对台湾要搞颜色革命，团结国民党，挑拨民进党”。这战友是一个省级干部。
 
-信息来源：
+我告诉咱们的战友，这半个战友一句话，“如果你不知道共产党他有多假，你这一辈子就白活。就像刚刚你的小舅子打疫苗死了一样，打了三针才知道自己完了，结果嘎嘣嗝屁了”。
 
-[撤离乌克兰的台湾留学生：没想到真会开战](https://www.dw.com/zh/%E6%92%A4%E7%A6%BB%E4%B9%8C%E5%85%8B%E5%85%B0%E7%9A%84%E5%8F%B0%E6%B9%BE%E7%95%99%E5%AD%A6%E7%94%9F%E6%B2%A1%E6%83%B3%E5%88%B0%E7%9C%9F%E4%BC%9A%E5%BC%80%E6%88%98/a-60904391)
+火鸡龚，路大脑袋等这些人的行为都是犯罪。据我所知，美国司法部对PAG单伟建，还有火鸡龚这些人，周孝正，还有路大脑，蛇妖闫都在调查。所以美女主播，你们得行动，不能光靠嘴，得靠手，经常敲两下子键盘。或者像火鸡龚借用你的脚丫子，给美国司法部，国土部传传这些人的信息，加速这些人的调查。在猫本小哥带领下，咱们雅典娜做得非常好，最近行动比较多。但是希望我们做的更多一些，谢谢。
 
-*校对：东京樱花团/知了知了
-发布：东京樱花团/tdownc2p*
-![](https://assets.gnews.org/wp-content/uploads/2022/02/yht-9.jpg)
+猫本小哥：我们一定会行动，一定会有更多的行动，包括向这个美国政府，向澳洲政府不断地传播真相。这个事我们一定会做，也一直在做。
+
+资料来源：郭文贵先生2022年2月23日大直播
+
+发布： tianzhihuan
+
+更多资讯，请关注：
+[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
+[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/dKQ6vFY9Fu)
+[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
