--- a/gnews/25.md
+++ b/gnews/25.md
@@ -1,26 +1,20 @@
 ---
-title: 波兰、瑞典、捷克反对在俄罗斯举行2022世界杯足球预选赛
+title: 乌克兰10万人流离失所、数千人逃离
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2061991/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2062026/)
 
-撰稿：东京樱花团/盖特第一批注册
-![](https://assets.gnews.org/wp-content/uploads/2022/02/图片3-11.jpg)[图片来源](https://sakanowa.jp/topics/21959)
-在俄罗斯军事入侵乌克兰之后，波兰、瑞典和捷克共和国的足球协会24日发表声明，称不应该允许俄罗斯举办2022年世界杯预选赛。
+撰稿：东京樱花团/风翼
+![](https://assets.gnews.org/wp-content/uploads/2022/02/图片8-4.png)图片来源于网络
+据JIJI.COM媒体转发法新社报道，联合国难民事务高级专员办事处(UNHCR)发言官2月24日表示，俄罗斯入侵后乌克兰流离失所者人数已达到10万人以上，数千人以逃离国外。
 
-他们在一份联合声明中说：”我们坚定地认为淘汰赛不应该在俄罗斯联邦境内进行。 军事升级将产生严重后果，并将大大降低我们国家足球队和代表团的安全。
+联合国难民事务高级专员办事处在同一天发表的声明表示，以准备向乌克兰提供人道主义援助，并呼吁邻近的欧洲国家保持其边界开放，并接收流离失所者。
 
-希望国际足联和欧足联能够迅速做出反应，并提供一个替代的场地。
+信息来源
 
-俄罗斯将在3月24日的世界杯附加赛中主场迎战波兰，如果他们获胜，将在3月29日主场对阵瑞典或捷克。
+[ウクライナ、国内避難１０万人　数千人は国外脱出―ＵＮＨＣＲ](https://www.jiji.com/sp/article?k=2022022500344&amp;g=int)
 
-国际足联批评了俄罗斯，表示关注事态发展，并酌情提供关于资格赛的最新情况。
-
-国际足联主席詹尼-因凡蒂诺也在新闻发布会上说：”我们将把这个问题作为一个紧急事项来考虑。 第一场比赛将在一个月后进行。 他说：”我们希望并坚信，在这之前，整个局势将尽快得到解决。
-
-信息源：[サッカー＝ポーランドら3カ国、ロシアでのＷ杯予選開催に反対](https://jp.reuters.com/article/soccer-fifa-idJPKBN2KU05D)
-
-*校对：东京樱花团/喜马拉雅的微尘*
-*发布：东京樱花团/tdownc2p*
+*校对：东京樱花团/知了知了
+发布：东京樱花团/tdownc2p*
 ![](https://assets.gnews.org/wp-content/uploads/2022/02/yht-9.jpg)
  
 
