--- a/gnews/26.md
+++ b/gnews/26.md
@@ -1,27 +1,17 @@
 ---
-title: 日本宣布对俄实施额外制裁
+title: 撤离乌克兰的台湾留学生：没想到真会开战
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2061984/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2062009/)
 
-撰稿：东京樱花团/风翼
-![](https://assets.gnews.org/wp-content/uploads/2022/02/图片4-12.png)
-图片来源于网络
+撰稿：东京樱花团/上善若水
+![](https://assets.gnews.org/wp-content/uploads/2022/02/图片7-2.jpg)（图片来源于本文链接）
+3名台湾学生二月中从基辅撤至乌克兰西部，23日搭机前往土耳其转机至台湾，直至下飞机后，才得知俄罗斯已入侵乌克兰。在感到幸运的同时，他们也非常担心仍留在乌克兰的朋友的安全。据台湾教育部24日统计，乌克兰共有12名台湾留学生，除了3人已经抵达台湾外，另有2人分别在乌克兰东部和南部，另外有7人仍留在基辅。
 
-据每日新闻报道：2月25日，日本岸田文雄首相就应对俄罗斯对乌克兰的军事入侵召开了新闻发布会。宣布了已发表的三项制裁措施以外的制裁措施。
+在塔夫里维尔纳兹基大学攻读语言专业的台湾学生Tim表示，2月上旬时，基辅整个城市运作非常正常，超市供应充足，人们也不感到恐慌，但后来随着情势愈来愈紧张，14日决定离开基辅，撤离到离东部俄罗斯边境更远的利沃夫，“我当时没有很紧张，主要是西部没什么事，但也不能说完全不紧张。”城市利沃夫是位于乌克兰西部的观光城市，近几周成为住在基辅或乌俄边境居民撤离的避难地。Tim向德国之声表示，原本要搭24日往土耳其飞机，因为该航班只需在伊斯坦布尔机场等候转机两小时，但后来选择23日需等候转机13个小时的航班。他说：“在机场等待时，乌克兰宣布进入紧急状态，交通不便、审查文件更为严格，就庆幸当时还好选择这班班机。”直至24日傍晚抵达台湾，得知俄军已经入侵乌克兰，让他觉得自己很幸运。另一名在乌克兰待了五年的王同学也说，如今乌克兰发生的情况，真的让他完全没有预想到，觉得自己“运气好”。高中毕业就到赴乌克兰留学的Tim已经在基辅住了近三年，如今看到乌克兰许多地区遭轰炸的新闻画面，感到五味杂陈，“觉得瞬间发生太多事情，心情非常复杂。” “我在乌克兰有很多朋友，很不舍，也很为他们心疼，这真的是非常不幸。”
 
-冻结俄罗斯个人和组织的资产并暂停发放签证
+信息来源：
 
-冻结俄罗斯金融机构的资产
-
-限制向俄罗斯军事相关组织出口半导体和其他通用产品
-
-岸田首相表示，“这是从日本安全的角度上不能忽视的决定，并强烈敦促俄罗斯立即撤回其部队和遵守国际法”。
-
-关于居住在乌克兰的日本国民的疏散问题，日方表示已获得波兰帮助，安排包机到波兰将日本国民从乌克兰转移到其他国家。能源问题上现今没有受到直接影响。还补充表示，俄罗斯这次的行动不仅影响了欧洲国际秩序，也影响到亚洲的国际秩序。虽没有提及到中共的军事扩张，但表示“国际社会合作是向世界其他国家发出一个强有力的信息，通过表达这个立场，我们将能够遏制包括亚洲在内的其他地区的此类行动”。
-
-信息来源
-
-[岸田首相、ロシアへの追加制裁発表　ビザ発給停止など3項目](https://mainichi.jp/articles/20220225/k00/00m/010/032000c)
+[撤离乌克兰的台湾留学生：没想到真会开战](https://www.dw.com/zh/%E6%92%A4%E7%A6%BB%E4%B9%8C%E5%85%8B%E5%85%B0%E7%9A%84%E5%8F%B0%E6%B9%BE%E7%95%99%E5%AD%A6%E7%94%9F%E6%B2%A1%E6%83%B3%E5%88%B0%E7%9C%9F%E4%BC%9A%E5%BC%80%E6%88%98/a-60904391)
 
 *校对：东京樱花团/知了知了
 发布：东京樱花团/tdownc2p*
