--- a/gnews/27.md
+++ b/gnews/27.md
@@ -1,27 +1,23 @@
 ---
-title: 俄罗斯人民 如何看待普京的侵略行为
+title: 俄罗斯爆发全国反战抗议 1700多人已被拘留
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2061977/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2062000/)
 
-撰稿：东京樱花团/闻雨
-![](https://assets.gnews.org/wp-content/uploads/2022/02/图片2-17.jpg)[图片来源](https://www.google.com.hk/imgres?imgurl=https%3A%2F%2Fmedia.socastsrm.com%2Fwordpress%2Fwp-content%2Fblogs.dir%2F648%2Ffiles%2F%2F2022%2F02%2Fcp-ukraine-scaled-e1645722686827.jpg&amp;imgrefurl=https%3A%2F%2Fwww.ckom.com%2F2022%2F02%2F24%2Fcivilians-fleeing-ukr)
-产经新闻2月25日报道：2月24日在俄罗斯首都莫斯科及其他地区发生了反对俄罗斯入侵乌克兰的抗议活动。据一个俄罗斯人权监督组织称，截至24日晚（25日清晨），莫斯科至少有956人被安全部门拘留，全国44个城市中有超过1745人被拘留。
+撰稿：东京樱花团/盖特第一批注册
+![](https://assets.gnews.org/wp-content/uploads/2022/02/image-2315.png)[图片来源](https://www.google.com.hk/imgres?imgurl=https%3A%2F%2Fcdn.theatlantic.com%2Fthumbor%2FfDRek8S-7AyygM672V1hT4_1I4g%3D%2F900x600%2Fmedia%2Fimg%2Fphoto%2F2022%2F02%2Frussia-protests%2Fa01_AP22055639533912%2Foriginal.jpg&amp;imgrefurl=https%3A%2F%2Fwww.theatlantic)
+2月24日，在首都莫斯科和俄罗斯其他地区发生了反对俄罗斯入侵乌克兰的抗议活动。 据一俄罗斯人权监督组织称，截至24日晚（25日清晨），至少有956人被莫斯科的安全当局拘留。 此外，在全国44个城市有超过1745人被拘留。
 
-参加抗议活动的一名20多岁的女性职员说：”我无颜站在乌克兰人面前，我感到羞耻，我想给乌克兰人道歉”，”她说。”经济制裁、国际孤立….。我认为俄罗斯的末日就要来了”。
+参加抗议活动的一名20多岁的女性说：”我为站在乌克兰人面前感到羞耻。 我想道歉，经济制裁、国际孤立….。 我认为这就是俄罗斯的末日。”
 
-一位三十多岁的男性上班族愤怒地说，”为什么克里姆林宫里没有人阻止普京总统？ 与乌克兰的战争不是俄罗斯人民的意愿”。
+一位三十多岁的男性上班族愤怒地说，”为什么克里姆林宫里没有人阻止普京总统？ 与乌克兰的战争不是俄罗斯人民的意愿。”
 
-辩论也在俄罗斯社交网站（SNS）上激烈地进行着。
+对普京来说，这种国内反弹比国际经济制裁更具破坏性。我们希望，俄罗斯人民的抗议将能够促使军事行动的停止。
 
-只有少数人赞扬这次入侵，“我们成功了!我们必须迅速将我们的人民从乌克兰政府的迫害中解救出来“。
+信息源：[「ウクライナ人に謝りたい」　ロシア各地で反戦デモ　１７００人超拘束](https://news.yahoo.co.jp/articles/3297c221f7c6a42ec0e744a4254b96c10c1a2305)
 
-然而更多的是批评：“普京应该作为战争罪犯受到惩罚。”，”独裁者总是以’生存区’或’保护人民’的名义发动战争。”，“没有任何语言可以为战争辩护”，”这是国家的耻辱！”。这些评论才是人民的心声。
-
-信息来源：[「ウクライナ人に謝りたい」　ロシア各地で反戦デモ　１７００人超拘束](https://news.yahoo.co.jp/articles/3297c221f7c6a42ec0e744a4254b96c10c1a2305)
-
-*校对：东京樱花团/喜马拉雅的微尘*
-*发布：东京樱花团/tdownc2p*
-![](https://assets.gnews.org/wp-content/uploads/2022/02/yht-9.jpg)
+*编辑：东京樱花团/喜马拉雅的微尘
+发布：东京樱花团/平安卿卿*
+![](https://assets.gnews.org/wp-content/uploads/2022/02/%E5%B1%8F%E5%B9%95%E6%88%AA%E5%9B%BE-2022-02-24-151921-2.png)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
