--- a/gnews/35.md
+++ b/gnews/35.md
@@ -1,35 +1,23 @@
 ---
-title: 有声&#124;日媒指普京本没有资格出席中共冬奥会
+title: G7发表声明 普京以莫须有罪名进行无理入侵
 ---
-`MOSREC` [轉載自GNews](https://gnews.org/zh-hans/2061722/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2061752/)
 
-配音：香草山佛教部 – 李傻
-![This image has an empty alt attribute; its file name is Screen-Shot-2021-08-30-at-7.37.59-PM.png](https://assets.gnews.org/wp-content/uploads/2021/08/Screen-Shot-2021-08-30-at-7.37.59-PM.png)
-当地时间2月18日，据日本媒体指出，按照联合国规定，各国应该在奥运会前后暂停纷争，但作为北京冬奥会东道主的习近平却没有要求普京停止对乌克兰的威胁。另一方面，由于兴奋剂问题，俄罗斯被禁止在冬奥会上以国家队名义参赛，其国家领导人也不应出席中共冬奥会。因此，从各个层面上看，普京都没有资格参加此次中共冬奥会的开幕式。
-![](https://assets.gnews.org/wp-content/uploads/2022/02/4-53.jpg)
-然而，在本届冬奥会上，不仅中共违背常理地将普京作为最高国宾，连国际奥林匹克委员会主席巴赫也对此默不作声。
+撰稿：东京樱花团/百花李香
+![](https://assets.gnews.org/wp-content/uploads/2022/02/image-2297.png)[图片来源](https://www.afpbb.com/articles/-/3380451)
+24日，七国集团首脑会议在网上举行，以最强烈的措辞谴责俄罗斯对乌克兰的军事入侵。
 
+联合声明严厉指出，普京推动的军事攻击是毫无根据、完全没有道理的，并将战争带回了欧洲大陆，同时也将自己置于历史错误一方。作为联合国常任理事国的俄罗斯，此举严重违反了《联合国宪章》以及各种国际承诺。
 
+声明指出，以武力改变国际公认的边界是不合常理，应该立即停止战斗并迅速撤军。同时谴责了白俄罗斯的共谋行为。
 
-文字版原文：[日媒指普京本没有资格出席中共冬奥会](https://gnews.org/zh-hans/2059044/)
+联合声明中没有明确对俄罗斯个别制裁的细节。但表示，七国集团与北约和欧盟成员国、乌克兰及其他同盟伙伴国联合起来，将决心采取必要行动，来维护基于规则的国际秩序。
 
-音频处理：Tom Li
-发稿：Tom Li
-![](https://assets.gnews.org/wp-content/uploads/2022/02/Feb-3-524x720-1.jpg)
-**更多资讯，更多关注**
+信息源：[「でっち上げの主張による不当攻撃」　G7声明、制裁の詳細は記さず](https://news.yahoo.co.jp/articles/1bd7d8c86aa120c7b25caf0cc0db90babac943dd#:~:text=)
 
-[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
-
-[**纽约香草山农场GTV-MOS TALK香草山访谈**](https://gtv.org/getter/601aeffdf5b9e26ca9d7ad10)
-
-[**纽约香草山农场 Gettr**](https://www.gettr.com/user/himalaya_mos)
-
-[**纽约香草山农场Twitter（中文）**](https://twitter.com/HIMALAYA_MOS)
-
-[**纽约香草山农场Twitter（英文）**](https://twitter.com/MosHimalaya)
-
-[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
-
+*编辑：东京樱花团/麗子
+发布：东京樱花团/平安卿卿*
+![](https://assets.gnews.org/wp-content/uploads/2022/02/IMG_0887.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
